Add unbreakable space between number and unit (e.g. 10\,km)

--- a/tex/p019.tex
+++ b/tex/p019.tex
@@ -23,7 +23,7 @@
 \vs p019 1:11 \ublistelem{4.}\bibnobreakspace History alone fails adequately to reveal future development --- destiny. Finite origins are helpful, but only divine causes reveal final effects. Eternal ends are not shown in time beginnings. The present can be truly interpreted only in the light of the correlated past and future.
 \vs p019 1:12 \pc Therefore, because of these and for still other reasons, do we employ the technique of approaching man and his planetary problems by embarkation on the time\hyp{}space journey from the infinite, eternal, and divine Paradise Source and Centre of all personality reality and all cosmic existence.
 \usection{2.\bibnobreakspace The Perfectors of Wisdom}
-\vs p019 2:1 The Perfectors of Wisdom are a specialized creation of the Paradise Trinity designed to personify the wisdom of divinity in the superuniverses. There are exactly seven billion of these beings in existence, and one billion are assigned to each of the seven superuniverses.
+\vs p019 2:1 The Perfectors of Wisdom are a specialized creation of the Paradise Trinity designed to personify the wisdom of divinity in the superuniverses. There are exactly 7,000,000,000 of these beings in existence, and 1,000,000,000 are assigned to each of the seven superuniverses.
 \vs p019 2:2 In common with their co\hyp{}ordinates, the Divine Counsellors and the Universal Censors, the Perfectors of Wisdom passed through the wisdom of Paradise, of Havona, and except for Divinington, of the Father’s Paradise spheres. After these experiences the Perfectors of Wisdom were permanently assigned to the service of the Ancients of Days. They serve neither on Paradise nor on the worlds of the Paradise\hyp{}Havona circuits; they are wholly occupied with the administration of the superuniverse governments.
 \vs p019 2:3 \pc Wherever and whenever a Perfector of Wisdom functions, there and then divine wisdom functions. There is actuality of presence and perfection of manifestation in the knowledge and wisdom represented in the doings of these mighty and majestic personalities. They do not \bibemph{reflect} the wisdom of the Paradise Trinity; they \bibemph{are} that wisdom. They are the sources of wisdom for all teachers in the application of universe knowledge; they are the fountains of discretion and the wellsprings of discrimination to the institutions of learning and discernment in all universes.
 \vs p019 2:4 Wisdom is twofold in origin, being derived from the perfection of divine insight inherent in perfect beings and from the personal experience acquired by evolutionary creatures. The Perfectors of Wisdom \bibemph{are} the divine wisdom of the Paradise perfection of Deity insight. Their administrative associates on Uversa, the Mighty Messengers, Those without Name and Number, and Those High in Authority, when acting together, \bibemph{are} the universe wisdom of experience. A divine being can have perfection of divine knowledge. An evolutionary mortal can sometime attain perfection of ascendant knowledge, but neither of these beings alone exhausts the potentials of all possible wisdom. Accordingly, whenever in the conduct of the superuniverse it is desired to achieve the maximum of administrative wisdom, these perfectors of the wisdom of divine insight are always associated with those ascendant personalities who have come up to the high responsibilities of superuniverse authority through the experiential tribulations of evolutionary progression.
@@ -38,14 +38,14 @@
 \vs p019 3:6 \pc Divine Counsellors are the perfection of the divine counsel of the Paradise Trinity. We represent, in fact \bibemph{are,} the counsel of perfection. When we are supplemented by the experiential counsel of our associates, the perfected and Trinity\hyp{}embraced beings of evolutionary ascent, our combined conclusions are not only complete but replete. When our united counsel has been associated, adjudicated, confirmed, and promulgated by a Universal Censor, it is very probable that it approaches the threshold of universal totality. Such verdicts represent the nearest possible approach to the absolute attitude of Deity within the time\hyp{}space limits of the situation involved and the problem concerned.
 \vs p019 3:7 Seven Divine Counsellors in liaison with a trinitized evolutionary trio --- a Mighty Messenger, One High in Authority, and One without Name and Number --- represent the nearest superuniverse approach to the union of the human viewpoint and the divine attitude on near\hyp{}paradisiacal levels of spiritual meanings and reality values. Such close approximation of the united cosmic attitudes of the creature and the Creator is only surpassed in the Paradise bestowal Sons, who are, in every phase of personality experience, God and man.
 \usection{4.\bibnobreakspace The Universal Censors}
-\vs p019 4:1 There are exactly eight billion Universal Censors in existence. These unique beings \bibemph{are} the judgment of Deity. They are not merely reflective of the decisions of perfection; they \bibemph{are} the judgment of the Paradise Trinity. Even the Ancients of Days do not sit in judgment except in association with the Universal Censors.
+\vs p019 4:1 There are exactly 8,000,000,000 Universal Censors in existence. These unique beings \bibemph{are} the judgment of Deity. They are not merely reflective of the decisions of perfection; they \bibemph{are} the judgment of the Paradise Trinity. Even the Ancients of Days do not sit in judgment except in association with the Universal Censors.
 \vs p019 4:2 One Censor is commissioned on each of the billion worlds of the central universe, being attached to the planetary administration of the resident Eternal of Days. Neither Perfectors of Wisdom nor Divine Counsellors are thus permanently attached to the Havona administrations, nor do we altogether understand why Universal Censors are stationed in the central universe. Their present activities hardly account for their assignment in Havona, and we therefore suspect that they are there in anticipation of the needs of some future universe age in which the Havona population may partially change.
-\vs p019 4:3 One billion Censors are assigned to each of the seven superuniverses. Both in an individual capacity and in association with Perfectors of Wisdom and Divine Counsellors, they operate throughout all divisions of the seven superuniverses. Thus the Censors act on all levels of the grand universe, from the perfect worlds of Havona to the councils of the System Sovereigns, and they are an organic part of all dispensational adjudications of the evolutionary worlds.
+\vs p019 4:3 1,000,000,000 Censors are assigned to each of the seven superuniverses. Both in an individual capacity and in association with Perfectors of Wisdom and Divine Counsellors, they operate throughout all divisions of the seven superuniverses. Thus the Censors act on all levels of the grand universe, from the perfect worlds of Havona to the councils of the System Sovereigns, and they are an organic part of all dispensational adjudications of the evolutionary worlds.
 \vs p019 4:4 \pc Whenever and wherever a Universal Censor is present, then and there is the judgment of Deity. And since the Censors always render their verdicts in liaison with Perfectors of Wisdom and Divine Counsellors, such decisions embrace the united wisdom, counsel, and judgment of the Paradise Trinity. In this juridical trio the Perfector of Wisdom would be the “I was,” the Divine Counsellor the “I will be,” but the Universal Censor is always “I am.”
 \vs p019 4:5 \pc The Censors are universe totalling personalities. When a thousand witnesses have given testimony --- or a million --- when the voice of wisdom has spoken and the counsel of divinity has recorded, when the testimony of ascendant perfection has been added, then the Censor functions, and there is immediately revealed an unerring and divine totalling of all that has transpired; and such a disclosure represents the divine conclusion, the sum and substance of a final and perfect decision. Therefore, when a Censor has spoken, no one else may speak, for the Censor has depicted the true and unmistakable total of all that has gone before. When he speaks, there is no appeal.
 \vs p019 4:6 Most fully do I understand the operation of the mind of a Perfector of Wisdom, but I certainly do not fully comprehend the working of the adjudicating mind of a Universal Censor. It appears to me that the Censors formulate new meanings and originate new values from the association of the facts, truths, and findings presented to them in the course of an investigation of universe affairs. It seems probable that the Universal Censors are able to bring forth original interpretations of the combination of perfect Creator insight and the perfected creature experience. This association of Paradise perfection and universe experience undoubtedly eventuates a new value in ultimates.
 \vs p019 4:7 But this is not the end of our difficulties regarding the working of the minds of the Universal Censors. Having made due allowances for all that we know or conjecture about the functioning of a Censor in any given universe situation, we find that we are still unable to predict decisions or to forecast verdicts. We very accurately determine the probable result of the association of Creator attitude and creature experience, but such conclusions are not always accurate forecasts of Censor disclosures. It seems likely that the Censors are in some manner in liaison with the Deity Absolute; we are otherwise unable to explain many of their decisions and rulings.
-\vs p019 4:8 \pc Perfectors of Wisdom, Divine Counsellors, and Universal Censors, together with the seven orders of Supreme Trinity Personalities, constitute those ten groups which have been sometimes designated \bibemph{Stationary Sons of the Trinity.} Together they comprise the grand corps of Trinity administrators, rulers, executives, advisers, counsellors, and judges. Their numbers slightly exceed 37 billion. Two billion and seventy are stationed in the central universe and just over five billion in each superuniverse.
+\vs p019 4:8 \pc Perfectors of Wisdom, Divine Counsellors, and Universal Censors, together with the seven orders of Supreme Trinity Personalities, constitute those ten groups which have been sometimes designated \bibemph{Stationary Sons of the Trinity.} Together they comprise the grand corps of Trinity administrators, rulers, executives, advisers, counsellors, and judges. Their numbers slightly exceed 37,000,000,000. 2,000,000,070\fnst{\textbf{2,000,000,070}, The 70 are, no doubt, the Trinitized Secrets of Supremacy serving in the innermost circuit of the Paradise satellites, the spheres of the Universal Father.} are stationed in the central universe and just over 5,000,000,000 in each superuniverse.
 \vs p019 4:9 It is very difficult to portray the functional limits of the Stationary Sons of the Trinity. It would be incorrect to state that their acts are finite limited, for there are transactions of superuniverse record which indicate otherwise. They act on any level of universe administration or adjudication that may be required by time\hyp{}space conditions and that pertains to the past, present, and future evolution of the master universe.
 \usection{5.\bibnobreakspace Inspired Trinity Spirits}
 \vs p019 5:1 I will be able to tell you very little concerning the Inspired Trinity Spirits, for they are one of the few wholly secret orders of beings in existence, secret, no doubt, because it is impossible for them fully to reveal themselves even to those of us whose origin is so near the source of their creation. They come into being by the act of the Paradise Trinity and may be utilized by any one or two of the Deities as well as by all three. We do not know whether these Spirits are of completed numbers or are constantly increasing, but we incline to the belief that their number is not fixed.
@@ -54,7 +54,7 @@
 \vs p019 5:4 The Melchizedeks of Nebadon teach that Inspired Trinity Spirits are destined, sometime in the eternal future, to function in the places of the Solitary Messengers, whose ranks are slowly but certainly being depleted by their assignment as associates of certain types of trinitized sons.
 \vs p019 5:5 \pc The Inspired Spirits are the solitary Spirits of the universe of universes. As Spirits they are very much like the Solitary Messengers except that the latter are distinct personalities. We obtain much of our knowledge of the Inspired Spirits from the Solitary Messengers, who detect their nearness by virtue of an inherent sensitivity to the presence of the Inspired Spirits which functions just as unfailingly as a magnetic needle points to a magnetic pole. When a Solitary Messenger is near an Inspired Trinity Spirit, he is conscious of a qualitative indication of such a divine presence and also of a very definite quantitative registration which enables him actually to know the classification or number of the Spirit presence or presences.
 \vs p019 5:6 I may relate a further interesting fact: When a Solitary Messenger is on a planet whose inhabitants are indwelt by Thought Adjusters, as on Urantia, he is aware of a qualitative excitation in his detection\hyp{}sensitivity to spirit presence. In such instances there is no quantitative excitation, only a qualitative agitation. When on a planet to which Adjusters do not come, contact with the natives does not produce any such reaction. This suggests that Thought Adjusters are in some manner related to, or are connected with, the Inspired Spirits of the Paradise Trinity. In some way they may possibly be associated in certain phases of their work; but we do not really know. They both originate near the centre and source of all things, but they are not the same order of being. Thought Adjusters spring from the Father alone; Inspired Spirits are the offspring of the Paradise Trinity.
-\vs p019 5:7 The Inspired Spirits do not apparently belong to the evolutionary scheme of the individual planets or universes, and yet they seem to be almost everywhere. Even as I am engaged in the formulation of this statement, my associated Solitary Messenger’s personal sensitivity to the presence of this order of Spirit indicates that there is with us at this very moment, not over 8 m away, a Spirit of the Inspired order and of the 3\ts{rd} volume of power presence. The third volume of power presence suggests to us the probability that three Inspired Spirits are functioning in liaison.
+\vs p019 5:7 The Inspired Spirits do not apparently belong to the evolutionary scheme of the individual planets or universes, and yet they seem to be almost everywhere. Even as I am engaged in the formulation of this statement, my associated Solitary Messenger’s personal sensitivity to the presence of this order of Spirit indicates that there is with us at this very moment, not over 8\,m away, a Spirit of the Inspired order and of the 3\ts{rd} volume of power presence. The 3\ts{rd} volume of power presence suggests to us the probability that three Inspired Spirits are functioning in liaison.
 \vs p019 5:8 \pc Of more than 12 orders of beings associated with me at this time, the Solitary Messenger is the only one aware of the presence of these mysterious entities of the Trinity. And further, while we are thus apprised of the nearness of these divine Spirits, we are all equally ignorant of their mission. We really do not know whether they are merely interested observers of our doings, or whether they are, in some manner unknown to us, actually contributing to the success of our undertaking.
 \vs p019 5:9 We know that the Trinity Teacher Sons are devoted to the \bibemph{conscious} enlightenment of universe creatures. I have arrived at the settled conclusion that the Inspired Trinity Spirits, by \bibemph{superconscious} techniques, are also functioning as teachers of the realms. I am persuaded that there is a vast body of essential spiritual knowledge, truth indispensable to high spiritual attainment, which cannot be consciously received; self\hyp{}consciousness would effectively jeopardize the certainty of reception. If we are right in this concept, and my entire order of being shares it, it may be the mission of these Inspired Spirits to overcome this difficulty, to bridge this gap in the universal scheme of moral enlightenment and spiritual advancement. We think that these two types of Trinity\hyp{}origin teachers effect some kind of liaison in their activities, but we do not really know.
 \vs p019 5:10 On the superuniverse training worlds and on the eternal circuits of Havona, I have fraternized with the perfecting mortals --- spiritualized and ascendant souls from the evolutionary realms --- but never have they been aware of the Inspired Spirits, which ever and anon the powers of detection resident in the Solitary Messengers would indicate were very near us. I have freely conversed with all orders of the Sons of God, high and low, and they likewise are unconscious of the admonitions of the Inspired Trinity Spirits. They can and do look back in their experiences and recount happenings which are difficult to explain if the action of such Spirits is not taken into account. But excepting Solitary Messengers, and sometimes Trinity\hyp{}origin beings, none of the celestial family have ever been conscious of the nearness of the Inspired Spirits.
