--- a/tex/p041.tex
+++ b/tex/p041.tex
@@ -25,7 +25,7 @@
 \vs p041 3:3 \pc When suns that are too large are thrown off a nebular mother wheel, they soon break up or form double stars. All suns are originally truly gaseous, though they may later transiently exist in a semiliquid state. When your sun attained this quasi\hyp{}liquid state of supergas pressure, it was not sufficiently large to split equatorially, this being one type of double star formation.
 \vs p041 3:4 When less than 0.1 the size of your sun, these fiery spheres rapidly contract, condense, and cool. When upwards of 30 times its size --- rather 30 times the gross content of actual material --- suns readily split into two separate bodies, either becoming the centres of new systems or else remaining in each other’s gravity grasp and revolving about a common centre as one type of double star.
 \vs p041 3:5 \pc The most recent of the major cosmic eruptions in Orvonton was the extraordinary double star explosion, the light of which reached Urantia in A.D.\,1572. This conflagration was so intense that the explosion was clearly visible in broad daylight.
-\vs p041 3:6 \pc Not all stars are solid, but many of the older ones are. Some of the reddish, faintly glimmering stars have acquired a density at the centre of their enormous masses which would be expressed by saying that 1 cm\ts{3} of such a star, if on Urantia, would weigh 166 kg. The enormous pressure, accompanied by loss of heat and circulating energy, has resulted in bringing the orbits of the basic material units closer and closer together until they now closely approach the status of electronic condensation. This process of cooling and contraction may continue to the limiting and critical explosion point of ultimatonic condensation.
+\vs p041 3:6 \pc Not all stars are solid, but many of the older ones are. Some of the reddish, faintly glimmering stars have acquired a density at the centre of their enormous masses which would be expressed by saying that 1 cm\ts{3} of such a star, if on Urantia, would weigh 166\,kg. The enormous pressure, accompanied by loss of heat and circulating energy, has resulted in bringing the orbits of the basic material units closer and closer together until they now closely approach the status of electronic condensation. This process of cooling and contraction may continue to the limiting and critical explosion point of ultimatonic condensation.
 \vs p041 3:7 Most of the giant suns are relatively young; most of the dwarf stars are old, but not all. The collisional dwarfs may be very young and may glow with an intense white light, never having known an initial red stage of youthful shining. Both very young and very old suns usually shine with a reddish glow. The yellow tinge indicates moderate youth or approaching old age, but the brilliant white light signifies robust and extended adult life.
 \vs p041 3:8 \pc While all adolescent suns do not pass through a pulsating stage, at least not visibly, when looking out into space you may observe many of these younger stars whose gigantic respiratory heaves require from 2 to 7 days to complete a cycle. Your own sun still carries a diminishing legacy of the mighty upswellings of its younger days, but the period has lengthened from the former 3½ day pulsations to the present 11½ year sunspot cycles.
 \vs p041 3:9 Stellar variables have numerous origins. In some double stars the tides caused by rapidly changing distances as the two bodies swing around their orbits also occasion periodic fluctuations of light. These gravity variations produce regular and recurrent flares, just as the capture of meteors by the accretion of energy\hyp{}material at the surface would result in a comparatively sudden flash of light which would speedily recede to normal brightness for that sun. Sometimes a sun will capture a stream of meteors in a line of lessened gravity opposition, and occasionally collisions cause stellar flare\hyp{}ups, but the majority of such phenomena are wholly due to internal fluctuations.
@@ -37,9 +37,9 @@
 \vs p041 4:4 One of your near\hyp{}by suns, which started life with about the same mass as yours, has now contracted almost to the size of Urantia, having become 40,000 times as dense as your sun. The weight of this hot\hyp{}cold gaseous\hyp{}solid is about 61 kg/cm\ts{3}\fnst{\textbf{61 kg/cm\ts{3}}, Let us calculate this density explicitly, using the data in the text: $\rho_X = M_{Sun}/V_{Earth}$. The present scientific estimate for the mass of the sun $M_{Sun} = 2\times 10^{30}$\,kg and the volume of the Earth $V_{Earth} =  {4 \over 3} \pi (6.37 \times 10^{8} cm)^3 = 1.08 \times 10^{27}$\,cm\ts{3}. Thus, $\rho_X = {{2\times 10^{30}} \over {1.08\times 10^{27}}} = 1851.8$\,kg/cm\ts{3}, which differs greatly from the figure 61\,kg/cm\ts{3} given in the text. Therefore, this ``near-by sun'' has lost most of its mass by now.}. And still this sun shines with a faint reddish glow, the senile glimmer of a dying monarch of light.\fnc{\ldots{}having become \bibtextul{sixty thousand} times as dense as your sun\ldots{} \bibexpl{Textual consistency and current scientific estimates of our sun’s density both support the change to “40,000.” The first paragraph of this section states that our sun is about 1.5 times the density of water 1 g/cm\ts{3}, and 40,000 times this is 40 kg/cm\ts{3}; the current scientific estimate of the sun’s density is 1.4 times the density of water; 40,000 times that is 56 kg/cm\ts{3}. The likely cause of this error in the 1955 text is that the number in question was written as a numeral in the manuscript (40,000 not forty thousand), and the error was caused by a simple keystroke error in which 6 was mis-keyed for 4, creating 60,000 instead of 40,000. When the text was formatted for printing, the numerals were changed to words, and an error that formerly consisted of one digit was transformed into an incorrect word. The formatting of words and numbers for printing is not a revelatory issue; it is a matter of style, and is covered extensively in the \bibemph{Chicago Manual of Style}. (The problem at \bibref[43:1.6]{p043 1:6} in the text appears to have had an identical origin, and \bibref[42:5.1]{p042 5:1} in the text is very closely related.)}}
 \vs p041 4:5 Most of the suns, however, are not so dense. One of your nearer neighbours has a density exactly equal to that of your atmosphere at sea level. If you were in the interior of this sun, you would be unable to discern anything. And temperature permitting, you could penetrate the majority of the suns which twinkle in the night sky and notice no more matter than you perceive in the air of your earthly living rooms.
 \vs p041 4:6 The massive sun of Veluntia, one of the largest in Orvonton, has a density only 0.001 that of Urantia’s atmosphere. Were it in composition similar to your atmosphere and not superheated, it would be such a vacuum that human beings would speedily suffocate if they were in or on it.
-\vs p041 4:7 Another of the Orvonton giants now has a surface temperature a trifle under 1,600°\,C. Its diameter is over 482,803,200 km --- ample room to accommodate your sun and the present orbit of the earth. And yet, for all this enormous size, over 40,000,000 times that of your sun, its mass is only about 30 times greater. These enormous suns have an extending fringe that reaches almost from one to the other.
+\vs p041 4:7 Another of the Orvonton giants now has a surface temperature a trifle under 1,600°\,C. Its diameter is over 482,803,200\,km --- ample room to accommodate your sun and the present orbit of the earth. And yet, for all this enormous size, over 40,000,000 times that of your sun, its mass is only about 30 times greater. These enormous suns have an extending fringe that reaches almost from one to the other.
 \usection{5.\bibnobreakspace Solar Radiation}
-\vs p041 5:1 That the suns of space are not very dense is proved by the steady streams of escaping light\hyp{}energies. Too great a density would retain light by opacity until the light\hyp{}energy pressure reached the explosion point. There is a tremendous light or gas pressure within a sun to cause it to shoot forth such a stream of energy as to penetrate space for millions upon millions of kilometres to energize, light, and heat the distant planets. 4.6 m of surface of the density of Urantia would effectually prevent the escape of all X rays and light\hyp{}energies from a sun until the rising internal pressure of accumulating energies resulting from atomic dismemberment overcame gravity with a tremendous outward explosion.
+\vs p041 5:1 That the suns of space are not very dense is proved by the steady streams of escaping light\hyp{}energies. Too great a density would retain light by opacity until the light\hyp{}energy pressure reached the explosion point. There is a tremendous light or gas pressure within a sun to cause it to shoot forth such a stream of energy as to penetrate space for millions upon millions of kilometres to energize, light, and heat the distant planets. 4.6\,m of surface of the density of Urantia would effectually prevent the escape of all X rays and light\hyp{}energies from a sun until the rising internal pressure of accumulating energies resulting from atomic dismemberment overcame gravity with a tremendous outward explosion.
 \vs p041 5:2 Light, in the presence of the propulsive gases, is highly explosive when confined at high temperatures by opaque retaining walls. Light is real. As you value energy and power on your world, sunlight would be economical at a million pounds sterling a kilogram.
 \vs p041 5:3 The interior of your sun is a vast X\hyp{}ray generator. The suns are supported from within by the incessant bombardment of these mighty emanations.
 \vs p041 5:4 It requires more than 500,000 years for an X\hyp{}ray\hyp{}stimulated electron to work its way from the very centre of an average sun up to the solar surface, whence it starts out on its space adventure, maybe to warm an inhabited planet, to be captured by a meteor, to participate in the birth of an atom, to be attracted by a highly charged dark island of space, or to find its space flight terminated by a final plunge into the surface of a sun similar to the one of its origin.
@@ -50,7 +50,7 @@
 \usection{6.\bibnobreakspace Calcium --- The Wanderer of Space}
 \vs p041 6:1 In deciphering spectral phenomena, it should be remembered that space is not empty; that light, in traversing space, is sometimes slightly modified by the various forms of energy and matter which circulate in all organized space. Some of the lines indicating unknown matter which appear in the spectra of your sun are due to modifications of well\hyp{}known elements which are floating throughout space in shattered form, the atomic casualties of the fierce encounters of the solar elemental battles. Space is pervaded by these wandering derelicts, especially sodium and calcium.
 \vs p041 6:2 Calcium is, in fact, the chief element of the matter\hyp{}permeation of space throughout Orvonton. Our whole superuniverse is sprinkled with minutely pulverized stone. Stone is literally the basic building matter for the planets and spheres of space. The cosmic cloud, the great space blanket, consists for the most part of the modified atoms of calcium. The stone atom is one of the most prevalent and persistent of the elements. It not only endures solar ionization --- splitting --- but persists in an associative identity even after it has been battered by the destructive X rays and shattered by the high solar temperatures. Calcium possesses an individuality and a longevity excelling all of the more common forms of matter.
-\vs p041 6:3 \pc As your physicists have suspected, these mutilated remnants of solar calcium literally ride the light beams for varied distances, and thus their widespread dissemination throughout space is tremendously facilitated. The sodium atom, under certain modifications, is also capable of light and energy locomotion. The calcium feat is all the more remarkable since this element has almost twice the mass of sodium. Local space\hyp{}permeation by calcium is due to the fact that it escapes from the solar photosphere, in modified form, by literally riding the outgoing sunbeams. Of all the solar elements, calcium, notwithstanding its comparative bulk --- containing as it does 20 revolving electrons --- is the most successful in escaping from the solar interior to the realms of space. This explains why there is a calcium layer, a gaseous stone surface, on the sun 9,600 km thick; and this despite the fact that 19 lighter elements, and numerous heavier ones, are underneath.
+\vs p041 6:3 \pc As your physicists have suspected, these mutilated remnants of solar calcium literally ride the light beams for varied distances, and thus their widespread dissemination throughout space is tremendously facilitated. The sodium atom, under certain modifications, is also capable of light and energy locomotion. The calcium feat is all the more remarkable since this element has almost twice the mass of sodium. Local space\hyp{}permeation by calcium is due to the fact that it escapes from the solar photosphere, in modified form, by literally riding the outgoing sunbeams. Of all the solar elements, calcium, notwithstanding its comparative bulk --- containing as it does 20 revolving electrons --- is the most successful in escaping from the solar interior to the realms of space. This explains why there is a calcium layer, a gaseous stone surface, on the sun 9,600\,km thick; and this despite the fact that 19 lighter elements, and numerous heavier ones, are underneath.
 \vs p041 6:4 Calcium is an active and versatile element at solar temperatures. The stone atom has two agile and loosely attached electrons in the two outer electronic circuits, which are very close together. Early in the atomic struggle it loses its outer electron; whereupon it engages in a masterful act of juggling the 19\ts{th} electron back and forth between the 19\ts{th} and 20\ts{th} circuits of electronic revolution. By tossing this 19\ts{th} electron back and forth between its own orbit and that of its lost companion more than 25,000 times a second, a mutilated stone atom is able partially to defy gravity and thus successfully to ride the emerging streams of light and energy, the sunbeams, to liberty and adventure. This calcium atom moves outward by alternate jerks of forward propulsion, grasping and letting go the sunbeam about 25,000 times each second. And this is why stone is the chief component of the worlds of space. Calcium is the most expert solar\hyp{}prison escaper.
 \vs p041 6:5 The agility of this acrobatic calcium electron is indicated by the fact that, when tossed by the temperature\hyp{}X\hyp{}ray solar forces to the circle of the higher orbit, it only remains in that orbit for about $10^{-6}$ seconds; but before the electric\hyp{}gravity power of the atomic nucleus pulls it back into its old orbit, it is able to complete 1,000,000 revolutions about the atomic centre.
 \vs p041 6:6 \pc Your sun has parted with an enormous quantity of its calcium, having lost tremendous amounts during the times of its convulsive eruptions in connection with the formation of the solar system. Much of the solar calcium is now in the outer crust of the sun.
