--- a/tex/p043.tex
+++ b/tex/p043.tex
@@ -15,7 +15,7 @@
 \vs p043 1:7 \pc The sea of glass, the receiving area of Edentia, is near the administrative centre and is encircled by the headquarters amphitheatre. Surrounding this area are the governing centres for the 70 divisions of constellation affairs. ½ of Edentia is divided into 70 triangular sections, whose boundaries converge at the headquarters buildings of their respective sectors. The remainder of this sphere is one vast natural park, the gardens of God.
 \vs p043 1:8 During your periodic visits to Edentia, though the entire planet is open to your inspection, most of your time will be spent in that administrative triangle whose number corresponds to that of your current residential world. You will always be welcome as an observer in the legislative assemblies.
 \vs p043 1:9 The morontia area assigned to ascending mortals resident on Edentia is located in the mid\hyp{}zone of the 35\ts{th} triangle adjoining the headquarters of the finaliters, situated in the 36\ts{th} triangle. The general headquarters of the univitatia occupies an enormous area in the mid\hyp{}region of the 34\ts{th} triangle immediately adjoining the residential reservation of the morontia citizens. From these arrangements it may be seen that provision is made for the accommodation of at least 70 major divisions of celestial life, and also that each of these 70 triangular areas is correlated with some one of the 70 major spheres of morontia training.
-\vs p043 1:10 The Edentia sea of glass is one enormous circular crystal about 160 km in circumference and about 48 km in depth. This magnificent crystal serves as the receiving field for all transport seraphim and other beings arriving from points outside the sphere; such a sea of glass greatly facilitates the landing of transport seraphim.
+\vs p043 1:10 The Edentia sea of glass is one enormous circular crystal about 160\,km in circumference and about 48\,km in depth. This magnificent crystal serves as the receiving field for all transport seraphim and other beings arriving from points outside the sphere; such a sea of glass greatly facilitates the landing of transport seraphim.
 \vs p043 1:11 A crystal field on this order is found on almost all architectural worlds; and it serves many purposes aside from its decorative value, being utilized for portraying superuniverse reflectivity to assembled groups and as a factor in the energy\hyp{}transformation technique for modifying the currents of space and for adapting other incoming physical\hyp{}energy streams.
 \usection{2.\bibnobreakspace The Constellation Government}
 \vs p043 2:1 The constellations are the autonomous units of a local universe, each constellation being administered according to its own legislative enactments. When the courts of Nebadon sit in judgment on universe affairs, all internal matters are adjudicated in accordance with the laws prevailing in the constellation concerned. These judicial decrees of Salvington, together with the legislative enactments of the constellations, are executed by the administrators of the local systems.
