--- a/tex/p051.tex
+++ b/tex/p051.tex
@@ -6,7 +6,7 @@
 \usection{1.\bibnobreakspace Origin and Nature of the Material Sons of God}
 \vs p051 1:1 The material or sex Sons and Daughters are the offspring of the Creator Son; the Universe Mother Spirit does not participate in the production of these beings who are destined to function as physical uplifters on the evolutionary worlds.
 \vs p051 1:2 The material order of sonship is not uniform throughout the local universe. The Creator Son produces only one pair of these beings in each local system; these original pairs are diverse in nature, being attuned to the life pattern of their respective systems. This is a necessary provision since otherwise the reproductive potential of the Adams would be nonfunctional with that of the evolving mortal beings of the worlds of any one particular system. The Adam and Eve who came to Urantia were descended from the original Satania pair of Material Sons.
-\vs p051 1:3 \pc Material Sons vary in height from 2.4 to 3 m, and their bodies glow with the brilliance of radiant light of a violet hue. While material blood circulates through their material bodies, they are also surcharged with divine energy and saturated with celestial light. These Material Sons (the Adams) and Material Daughters (the Eves) are equal to each other, differing only in reproductive nature and in certain chemical endowments. They are equal but differential, male and female --- hence complemental --- and are designed to serve on almost all assignments in pairs.
+\vs p051 1:3 \pc Material Sons vary in height from 2.4 to 3\,m, and their bodies glow with the brilliance of radiant light of a violet hue. While material blood circulates through their material bodies, they are also surcharged with divine energy and saturated with celestial light. These Material Sons (the Adams) and Material Daughters (the Eves) are equal to each other, differing only in reproductive nature and in certain chemical endowments. They are equal but differential, male and female --- hence complemental --- and are designed to serve on almost all assignments in pairs.
 \vs p051 1:4 The Material Sons enjoy a dual nutrition; they are really dual in nature and constitution, partaking of materialized energy much as do the physical beings of the realm, while their immortal existence is fully maintained by the direct and automatic intake of certain sustaining cosmic energies. Should they fail on some mission of assignment or even consciously and deliberately rebel, this order of Sons becomes isolated, cut off from connection with the universe source of light and life. Thereupon they become practically material beings, destined to take the course of material life on the world of their assignment and compelled to look to the universe magistrates for adjudication. Material death will eventually terminate the planetary career of such an unfortunate and unwise Material Son or Daughter.
 \vs p051 1:5 An original or directly created Adam and Eve are immortal by inherent endowment just as are all other orders of local universe sonship, but a diminution of immortality potential characterizes their sons and daughters. This original couple cannot transmit unconditioned immortality to their procreated sons and daughters. Their progeny are dependent for continuing life on unbroken intellectual synchrony with the mind\hyp{}gravity circuit of the Spirit. Since the inception of the system of Satania, 13 Planetary Adams have been lost in rebellion and default and 681,204 in the subordinate positions of trust. Most of these defections occurred at the time of the Lucifer rebellion.
 \vs p051 1:6 \pc While living as permanent citizens on the system capitals, even when functioning on descending missions to the evolutionary planets, the Material Sons do not possess Thought Adjusters, but it is through these very services that they acquire experiential capacity for Adjuster indwellment and the Paradise ascension career. These unique and wonderfully useful beings are the connecting links between the spiritual and physical worlds. They are concentrated on the system headquarters, where they reproduce and carry on as material citizens of the realm, and whence they are dispatched to the evolutionary worlds.
