--- a/tex/p052.tex
+++ b/tex/p052.tex
@@ -14,7 +14,7 @@
 \vs p052 1:2 The evolutionary races of colour --- red, orange, yellow, green, blue, and indigo --- begin to appear about the time that primitive man is developing a simple language and is beginning to exercise the creative imagination. By this time man is well accustomed to standing erect.
 \vs p052 1:3 \pc Primitive men are mighty hunters and fierce fighters. The law of this age is the physical survival of the fittest; the government of these times is wholly tribal. During the early racial struggles on many worlds some of the evolutionary races are obliterated, as occurred on Urantia. Those who survive are usually subsequently blended with the later imported violet race, the Adamic peoples.
 \vs p052 1:4 In the light of subsequent civilization, this era of primitive man is a long, dark, and bloody chapter. The ethics of the jungle and the morals of the primeval forests are not in keeping with the standards of later dispensations of revealed religion and higher spiritual development. On normal and nonexperimental worlds this epoch is very different from the prolonged and extraordinarily brutal struggles which characterized this age on Urantia. When you have emerged from your first world experience, you will begin to see why this long and painful struggle on the evolutionary worlds occurs, and as you go forward in the Paradise path, you will increasingly understand the wisdom of these apparently strange doings. But notwithstanding all the vicissitudes of the early ages of human emergence, the performances of primitive man represent a splendid, even a heroic, chapter in the annals of an evolutionary world of time and space.
-\vs p052 1:5 \pc Early evolutionary man is not a colourful creature. In general, these primitive mortals are cave dwellers or cliff residents. They also build crude huts in the large trees. Before they acquire a high order of intelligence, the planets are sometimes overrun with the larger types of animals. But early in this era mortals learn to kindle and maintain fire, and with the increase of inventive imagination and the improvement in tools, evolving man soon vanquishes the larger and more unwieldy animals. The early races also make extensive use of the larger flying animals. These enormous birds are able to carry one or two average\hyp{}sized men for a nonstop flight of over 800 km. On some planets these birds are of great service since they possess a high order of intelligence, often being able to speak many words of the languages of the realm. These birds are most intelligent, very obedient, and unbelievably affectionate. Such passenger birds have been long extinct on Urantia, but your early ancestors enjoyed their services.
+\vs p052 1:5 \pc Early evolutionary man is not a colourful creature. In general, these primitive mortals are cave dwellers or cliff residents. They also build crude huts in the large trees. Before they acquire a high order of intelligence, the planets are sometimes overrun with the larger types of animals. But early in this era mortals learn to kindle and maintain fire, and with the increase of inventive imagination and the improvement in tools, evolving man soon vanquishes the larger and more unwieldy animals. The early races also make extensive use of the larger flying animals. These enormous birds are able to carry one or two average\hyp{}sized men for a nonstop flight of over 800\,km. On some planets these birds are of great service since they possess a high order of intelligence, often being able to speak many words of the languages of the realm. These birds are most intelligent, very obedient, and unbelievably affectionate. Such passenger birds have been long extinct on Urantia, but your early ancestors enjoyed their services.
 \vs p052 1:6 \pc Man’s acquirement of ethical judgment, moral will, is usually coincident with the appearance of early language. Upon attaining the human level, after this emergence of mortal will, these beings become receptive to the temporary indwelling of the divine Adjusters, and upon death many are duly elected as survivors and sealed by the archangels for subsequent resurrection and Spirit fusion. The archangels always accompany the Planetary Princes, and a dispensational adjudication of the realm is simultaneous with the prince’s arrival.
 \vs p052 1:7 All mortals who are indwelt by Thought Adjusters are potential worshippers; they have been “lighted by the true light,” and they possess capacity for seeking reciprocal contact with divinity. Nevertheless, the early or biologic religion of primitive man is largely a persistence of animal fear coupled with ignorant awe and tribal superstition. The survival of superstition in the Urantia races is hardly complimentary to your evolutionary development nor compatible with your otherwise splendid achievements in material progress. But this early fear religion serves a very valuable purpose in subduing the fiery tempers of these primitive creatures. It is the forerunner of civilization and the soil for the subsequent planting of the seeds of revealed religion by the Planetary Prince and his ministers.
 \vs p052 1:8 \pc Within 100,000 years from the time man acquires erect posture, the Planetary Prince usually arrives, having been dispatched by the System Sovereign upon the report of the Life Carriers that will is functioning, even though comparatively few individuals have thus developed. Primitive mortals usually welcome the Planetary Prince and his visible staff; in fact, they often look upon them with awe and reverence, almost with worshipfulness, if they are not restrained.
