--- a/tex/p057.tex
+++ b/tex/p057.tex
@@ -56,7 +56,7 @@
 \usection{6.\bibnobreakspace The Solar System Stage --- The Planet\hyp{}Forming Era}
 \vs p057 6:1 Subsequent to the birth of the solar system a period of diminishing solar disgorgement ensued. Decreasingly, for another 500,000 years, the sun continued to pour forth diminishing volumes of matter into surrounding space. But during these early times of erratic orbits, when the surrounding bodies made their nearest approach to the sun, the solar parent was able to recapture a large portion of this meteoric material.
 \vs p057 6:2 \pc The planets nearest the sun were the first to have their revolutions slowed down by tidal friction. Such gravitational influences also contribute to the stabilization of planetary orbits while acting as a brake on the rate of planetary\hyp{}axial revolution, causing a planet to revolve ever slower until axial revolution ceases, leaving one hemisphere of the planet always turned toward the sun or larger body, as is illustrated by the planet Mercury and by the moon, which always turns the same face toward Urantia.
-\vs p057 6:3 When the tidal frictions of the moon and the earth become equalized, the earth will always turn the same hemisphere toward the moon, and the day and month will be analogous --- in length about 47 days. When such stability of orbits is attained, tidal frictions will go into reverse action, no longer driving the moon farther away from the earth but gradually drawing the satellite toward the planet. And then, in that far\hyp{}distant future when the moon approaches to within about 17,700 km of the earth, the gravity action of the latter will cause the moon to disrupt, and this tidal\hyp{}gravity explosion will shatter the moon into small particles, which may assemble about the world as rings of matter resembling those of Saturn or may be gradually drawn into the earth as meteors.
+\vs p057 6:3 When the tidal frictions of the moon and the earth become equalized, the earth will always turn the same hemisphere toward the moon, and the day and month will be analogous --- in length about 47 days. When such stability of orbits is attained, tidal frictions will go into reverse action, no longer driving the moon farther away from the earth but gradually drawing the satellite toward the planet. And then, in that far\hyp{}distant future when the moon approaches to within about 17,700\,km of the earth, the gravity action of the latter will cause the moon to disrupt, and this tidal\hyp{}gravity explosion will shatter the moon into small particles, which may assemble about the world as rings of matter resembling those of Saturn or may be gradually drawn into the earth as meteors.
 \vs p057 6:4 If space bodies are similar in size and density, collisions may occur. But if two space bodies of similar density are relatively unequal in size, then, if the smaller progressively approaches the larger, the disruption of the smaller body will occur when the radius of its orbit becomes less than 2.5 times the radius of the larger body. Collisions among the giants of space are rare indeed, but these gravity\hyp{}tidal explosions of lesser bodies are quite common.
 \vs p057 6:5 Shooting stars occur in swarms because they are the fragments of larger bodies of matter which have been disrupted by tidal gravity exerted by near\hyp{}by and still larger space bodies. Saturn’s rings are the fragments of a disrupted satellite. One of the moons of Jupiter is now approaching dangerously near the critical zone of tidal disruption and, within a few million years, will either be claimed by the planet or will undergo gravity\hyp{}tidal disruption. The fifth planet\fnst{\textbf{fifth planet}, This planet was named by the Soviet astronomer S.V.~Orlov ``Phaeton'' in 1949. The breakup of Phaeton gave origin to the asteroid belt. In 1950 V.G.~Fesenkov explained disintegration of Phaeton by its close encounter with Jupiter. However, this leaves the question why the orbits of the majority of asteroids are so far from Jupiter. Because of this difficulty V.G.~Fesenkov later rejected his own model. For more information, I refer the reader to the article ``Origin of Asteroids'', by V.A.~Bronshtein (1972) available on \texttt{archive.org} (contributed by NASA).} of the solar system of long, long ago traversed an irregular orbit, periodically making closer and closer approach to Jupiter until it entered the critical zone of gravity\hyp{}tidal disruption, was swiftly fragmentized, and became the present\hyp{}day cluster of asteroids.
 \vs p057 6:6 \pc \bibemph{4,000,000,000} years ago witnessed the organization of the Jupiter and Saturn systems much as observed today except for their moons, which continued to increase in size for several billions of years. In fact, all of the planets and satellites of the solar system are still growing as the result of continued meteoric captures.
@@ -79,7 +79,7 @@
 \usection{8.\bibnobreakspace Crustal Stabilization\\The Age of Earthquakes\\The World Ocean and the First Continent}
 \vs p057 8:1 \bibemph{1,000,000,000} years ago is the date of the actual beginning of Urantia history. The planet had attained approximately its present size. And about this time it was placed upon the physical registries of Nebadon and given its name, \bibemph{Urantia.}
 \vs p057 8:2 The atmosphere, together with incessant moisture precipitation, facilitated the cooling of the earth’s crust. Volcanic action early equalized internal\hyp{}heat pressure and crustal contraction; and as volcanoes rapidly decreased, earthquakes made their appearance as this epoch of crustal cooling and adjustment progressed.
-\vs p057 8:3 The real geologic history of Urantia begins with the cooling of the earth’s crust sufficiently to cause the formation of the first ocean. Water\hyp{}vapour condensation on the cooling surface of the earth, once begun, continued until it was virtually complete. By the end of this period the ocean was world\hyp{}wide, covering the entire planet to an average depth of over 1.6 km. The tides were then in play much as they are now observed, but this primitive ocean was not salty; it was practically a fresh\hyp{}water covering for the world. In those days, most of the chlorine was combined with various metals, but there was enough, in union with hydrogen, to render this water faintly acid.
+\vs p057 8:3 The real geologic history of Urantia begins with the cooling of the earth’s crust sufficiently to cause the formation of the first ocean. Water\hyp{}vapour condensation on the cooling surface of the earth, once begun, continued until it was virtually complete. By the end of this period the ocean was world\hyp{}wide, covering the entire planet to an average depth of over 1.6\,km. The tides were then in play much as they are now observed, but this primitive ocean was not salty; it was practically a fresh\hyp{}water covering for the world. In those days, most of the chlorine was combined with various metals, but there was enough, in union with hydrogen, to render this water faintly acid.
 \vs p057 8:4 At the opening of this faraway era, Urantia should be envisaged as a water\hyp{}bound planet. Later on, deeper and hence denser lava flows came out upon the bottom of the present Pacific Ocean, and this part of the water\hyp{}covered surface became considerably depressed. The first continental land mass emerged from the world ocean in compensatory adjustment of the equilibrium of the gradually thickening earth’s crust.
 \vs p057 8:5 \pc \bibemph{950,000,000} years ago Urantia presents the picture of one great continent of land and one large body of water, the Pacific Ocean. Volcanoes are still widespread and earthquakes are both frequent and severe. Meteors continue to bombard the earth, but they are diminishing in both frequency and size. The atmosphere is clearing up, but the amount of carbon dioxide continues large. The earth’s crust is gradually stabilizing.
 \vs p057 8:6 It was at about this time that Urantia was assigned to the system of Satania for planetary administration and was placed on the life registry of Norlatiadek. Then began the administrative recognition of the small and insignificant sphere which was destined to be the planet whereon Michael would subsequently engage in the stupendous undertaking of mortal bestowal, would participate in those experiences which have since caused Urantia to become locally known as the “world of the cross.”
@@ -96,9 +96,9 @@
 \vs p057 8:17 Volcanic eruptions and earthquakes continued to diminish in frequency and severity. The atmosphere was clearing of volcanic gases and water vapour, but the percentage of carbon dioxide was still high.
 \vs p057 8:18 Electric disturbances in the air and in the earth were also decreasing. The lava flows had brought to the surface a mixture of elements which diversified the crust and better insulated the planet from certain space\hyp{}energies. And all of this did much to facilitate the control of terrestrial energy and to regulate its flow, as is disclosed by the functioning of the magnetic poles.
 \vs p057 8:19 \pc \bibemph{800,000,000} years ago witnessed the inauguration of the first great land epoch, the age of increased continental emergence.
-\vs p057 8:20 Since the condensation of the earth’s hydrosphere, first into the world ocean and subsequently into the Pacific Ocean, this latter body of water should be visualized as then covering \bibfrac{9}{10} of the earth’s surface. Meteors falling into the sea accumulated on the ocean bottom, and meteors are, generally speaking, composed of heavy materials. Those falling on the land were largely oxidized, subsequently worn down by erosion, and washed into the ocean basins. Thus the ocean bottom grew increasingly heavy, and added to this was the weight of a body of water at some places 16 km deep.
+\vs p057 8:20 Since the condensation of the earth’s hydrosphere, first into the world ocean and subsequently into the Pacific Ocean, this latter body of water should be visualized as then covering \bibfrac{9}{10} of the earth’s surface. Meteors falling into the sea accumulated on the ocean bottom, and meteors are, generally speaking, composed of heavy materials. Those falling on the land were largely oxidized, subsequently worn down by erosion, and washed into the ocean basins. Thus the ocean bottom grew increasingly heavy, and added to this was the weight of a body of water at some places 16\,km deep.
 \vs p057 8:21 The increasing downthrust of the Pacific Ocean operated further to upthrust the continental land mass. Europe and Africa began to rise out of the Pacific depths along with those masses now called Australia, North and South America, and the continent of Antarctica, while the bed of the Pacific Ocean engaged in a further compensatory sinking adjustment. By the end of this period almost \bibfrac{1}{3} of the earth’s surface consisted of land, all in one continental body.
-\vs p057 8:22 With this increase in land elevation the first climatic differences of the planet appeared. Land elevation, cosmic clouds, and oceanic influences are the chief factors in climatic fluctuation. The backbone of the Asiatic land mass reached a height of almost 14 km at the time of the maximum land emergence. Had there been much moisture in the air hovering over these highly elevated regions, enormous ice blankets would have formed; the ice age would have arrived long before it did. It was several hundred millions of years before so much land again appeared above water.
+\vs p057 8:22 With this increase in land elevation the first climatic differences of the planet appeared. Land elevation, cosmic clouds, and oceanic influences are the chief factors in climatic fluctuation. The backbone of the Asiatic land mass reached a height of almost 14\,km at the time of the maximum land emergence. Had there been much moisture in the air hovering over these highly elevated regions, enormous ice blankets would have formed; the ice age would have arrived long before it did. It was several hundred millions of years before so much land again appeared above water.
 \vs p057 8:23 \pc \bibemph{750,000,000} years ago the first breaks in the continental land mass began as the great north\hyp{}and\hyp{}south cracking, which later admitted the ocean waters and prepared the way for the westward drift of the continents of North and South America, including Greenland. The long east\hyp{}and\hyp{}west cleavage separated Africa from Europe and severed the land masses of Australia, the Pacific Islands, and Antarctica from the Asiatic continent.
 \vs p057 8:24 \pc \bibemph{700,000,000} years ago Urantia was approaching the ripening of conditions suitable for the support of life. The continental land drift continued; increasingly the ocean penetrated the land as long fingerlike seas providing those shallow waters and sheltered bays which are so suitable as a habitat for marine life.
 \vs p057 8:25 \pc \bibemph{650,000,000} years ago witnessed the further separation of the land masses and, in consequence, a further extension of the continental seas. And these waters were rapidly attaining that degree of saltiness which was essential to Urantia life.
