--- a/tex/p060.tex
+++ b/tex/p060.tex
@@ -4,62 +4,62 @@
 \vs p060 0:2 The closing epochs of the preceding era were indeed the age of frogs, but these ancestors of the land vertebrates were no longer dominant, having survived in greatly reduced numbers. Very few types outlived the rigorous trials of the preceding period of biologic tribulation. Even the spore\hyp{}bearing plants were nearly extinct.
 \usection{1.\bibnobreakspace The Early Reptilian Age}
 \vs p060 1:1 The erosion deposits of this period were mostly conglomerates, shale, and sandstone. The gypsum and red layers throughout these sedimentations over both America and Europe indicate that the climate of these continents was arid. These arid districts were subjected to great erosion from the violent and periodic cloudbursts on the surrounding highlands.
-\vs p060 1:2 Few fossils are to be found in these layers, but numerous sandstone footprints of the land reptiles may be observed. In many regions the 300 m of red sandstone deposit of this period contains no fossils. The life of land animals was continuous only in certain parts of Africa.
-\vs p060 1:3 These deposits vary in thickness from 910 to 3050 m, even being 5,500 on the Pacific coast. Lava was later forced in between many of these layers. The Palisades of the Hudson River were formed by the extrusion of basalt lava between these Triassic strata. Volcanic action was extensive in different parts of the world.
+\vs p060 1:2 Few fossils are to be found in these layers, but numerous sandstone footprints of the land reptiles may be observed. In many regions the 300\,m of red sandstone deposit of this period contains no fossils. The life of land animals was continuous only in certain parts of Africa.
+\vs p060 1:3 These deposits vary in thickness from 910 to 3050\,m, even being 5,500 on the Pacific coast. Lava was later forced in between many of these layers. The Palisades of the Hudson River were formed by the extrusion of basalt lava between these Triassic strata. Volcanic action was extensive in different parts of the world.
 \vs p060 1:4 Over Europe, especially Germany and Russia, may be found deposits of this period. In England the New Red Sandstone belongs to this epoch. Limestone was laid down in the southern Alps as the result of a sea invasion and may now be seen as the peculiar dolomite limestone walls, peaks, and pillars of those regions. This layer is to be found all over Africa and Australia. The Carrara marble comes from such modified limestone. Nothing of this period will be found in the southern regions of South America as that part of the continent remained down and hence presents only a water or marine deposit continuous with the preceding and succeeding epochs.
 \vs p060 1:5 \pc \bibemph{150,000,000} years ago the early land\hyp{}life periods of the world’s history began. Life, in general, did not fare well but did better than at the strenuous and hostile close of the marine\hyp{}life era.
 \vs p060 1:6 As this era opens, the eastern and central parts of North America, the northern half of South America, most of Europe, and all of Asia are well above water. North America for the first time is geographically isolated, but not for long as the Bering Strait land bridge soon again emerges, connecting the continent with Asia.
-\vs p060 1:7 Great troughs developed in North America, paralleling the Atlantic and Pacific coasts. The great eastern\hyp{}Connecticut fault appeared, one side eventually sinking 3 km. Many of these North American troughs were later filled with erosion deposits, as also were many of the basins of the fresh\hyp{} and salt\hyp{}water lakes of the mountain regions. Later on, these filled land depressions were greatly elevated by lava flows which occurred underground. The petrified forests of many regions belong to this epoch.
+\vs p060 1:7 Great troughs developed in North America, paralleling the Atlantic and Pacific coasts. The great eastern\hyp{}Connecticut fault appeared, one side eventually sinking 3\,km. Many of these North American troughs were later filled with erosion deposits, as also were many of the basins of the fresh\hyp{} and salt\hyp{}water lakes of the mountain regions. Later on, these filled land depressions were greatly elevated by lava flows which occurred underground. The petrified forests of many regions belong to this epoch.
 \vs p060 1:8 The Pacific coast, usually above water during the continental submergences, went down excepting the southern part of California and a large island which then existed in what is now the Pacific Ocean. This ancient California sea was rich in marine life and extended eastward to connect with the old sea basin of the midwestern region.
 \vs p060 1:9 \pc \bibemph{140,000,000} years ago, \bibemph{suddenly} and with only the hint of the two prereptilian ancestors that developed in Africa during the preceding epoch, the reptiles appeared in full\hyp{}fledged form. They developed rapidly, soon yielding crocodiles, scaled reptiles, and eventually both sea serpents and flying reptiles. Their transition ancestors speedily disappeared.
-\vs p060 1:10 These rapidly evolving reptilian dinosaurs soon became the monarchs of this age. They were egg layers and are distinguished from all animals by their small brains, having brains weighing less than 500 g to control bodies later weighing as much as 40 tons. But earlier reptiles were smaller, carnivorous, and walked kangaroolike on their hind legs. They had hollow avian bones and subsequently developed only three toes on their hind feet, and many of their fossil footprints have been mistaken for those of giant birds. Later on, the herbivorous dinosaurs evolved. They walked on all fours, and one branch of this group developed a protective armour.
+\vs p060 1:10 These rapidly evolving reptilian dinosaurs soon became the monarchs of this age. They were egg layers and are distinguished from all animals by their small brains, having brains weighing less than 500\,g to control bodies later weighing as much as 40 tons. But earlier reptiles were smaller, carnivorous, and walked kangaroolike on their hind legs. They had hollow avian bones and subsequently developed only three toes on their hind feet, and many of their fossil footprints have been mistaken for those of giant birds. Later on, the herbivorous dinosaurs evolved. They walked on all fours, and one branch of this group developed a protective armour.
 \vs p060 1:11 Several million years later the first mammals appeared. They were nonplacental and proved a speedy failure; none survived. This was an experimental effort to improve mammalian types, but it did not succeed on Urantia.
 \vs p060 1:12 The marine life of this period was meagre but improved rapidly with the new invasion of the sea, which again produced extensive coast lines of shallow waters. Since there was more shallow water around Europe and Asia, the richest fossil beds are to be found about these continents. Today, if you would study the life of this age, examine the Himalayan, Siberian, and Mediterranean regions, as well as India and the islands of the southern Pacific basin. A prominent feature of the marine life was the presence of hosts of the beautiful ammonites, whose fossil remains are found all over the world.
 \vs p060 1:13 \pc \bibemph{130,000,000} years ago the seas had changed very little. Siberia and North America were connected by the Bering Strait land bridge. A rich and unique marine life appeared on the Californian Pacific coast, where over 1,000 species of ammonites developed from the higher types of cephalopods. The life changes of this period were indeed revolutionary notwithstanding that they were transitional and gradual.
 \vs p060 1:14 \pc This period extended over 25,000,000 years and is known as the \bibemph{Triassic.}
 \usection{2.\bibnobreakspace The Later Reptilian Age}
-\vs p060 2:1 \bibemph{120,000,000} years ago a new phase of the reptilian age began. The great event of this period was the evolution and decline of the dinosaurs. Land\hyp{}animal life reached its greatest development, in point of size, and had virtually perished from the face of the earth by the end of this age. The dinosaurs evolved in all sizes from a species less than 60 cm long up to the huge noncarnivorous dinosaurs, 23 m long, that have never since been equalled in bulk by any living creature.
+\vs p060 2:1 \bibemph{120,000,000} years ago a new phase of the reptilian age began. The great event of this period was the evolution and decline of the dinosaurs. Land\hyp{}animal life reached its greatest development, in point of size, and had virtually perished from the face of the earth by the end of this age. The dinosaurs evolved in all sizes from a species less than 60\,cm long up to the huge noncarnivorous dinosaurs, 23\,m long, that have never since been equalled in bulk by any living creature.
 \vs p060 2:2 The largest of the dinosaurs originated in western North America. These monstrous reptiles are buried throughout the Rocky Mountain regions, along the whole of the Atlantic coast of North America, over western Europe, South Africa, and India, but not in Australia.
 \vs p060 2:3 These massive creatures became less active and strong as they grew larger and larger; but they required such an enormous amount of food and the land was so overrun by them that they literally starved to death and became extinct --- they lacked the intelligence to cope with the situation.
 \vs p060 2:4 By this time most of the eastern part of North America, which had long been elevated, had been leveled down and washed into the Atlantic Ocean so that the coast extended several hundred kilometres farther out than now. The western part of the continent was still up, but even these regions were later invaded by both the northern sea and the Pacific, which extended eastward to the Dakota Black Hills region.
 \vs p060 2:5 This was a fresh\hyp{}water age characterized by many inland lakes, as is shown by the abundant fresh\hyp{}water fossils of the so\hyp{}called Morrison beds of Colorado, Montana, and Wyoming. The thickness of these combined salt\hyp{} and fresh\hyp{}water deposits varies from 600 to 1,500 m; but very little limestone is present in these layers.
 \vs p060 2:6 The same polar sea that extended so far down over North America likewise covered all of South America except the soon appearing Andes Mountains. Most of China and Russia was inundated, but the water invasion was greatest in Europe. It was during this submergence that the beautiful lithographic stone of southern Germany was laid down, those strata in which fossils, such as the most delicate wings of olden insects, are preserved as of but yesterday.
 \vs p060 2:7 The flora of this age was much like that of the preceding. Ferns persisted, while conifers and pines became more and more like the present\hyp{}day varieties. Some coal was still being formed along the northern Mediterranean shores.
-\vs p060 2:8 The return of the seas improved the weather. Corals spread to European waters, testifying that the climate was still mild and even, but they never again appeared in the slowly cooling polar seas. The marine life of these times improved and developed greatly, especially in European waters. Both corals and crinoids temporarily appeared in larger numbers than heretofore, but the ammonites dominated the invertebrate life of the oceans, their average size ranging from 7 to 10 cm, though one species attained a diameter of 2.4 m. Sponges were everywhere, and both cuttlefish and oysters continued to evolve.
+\vs p060 2:8 The return of the seas improved the weather. Corals spread to European waters, testifying that the climate was still mild and even, but they never again appeared in the slowly cooling polar seas. The marine life of these times improved and developed greatly, especially in European waters. Both corals and crinoids temporarily appeared in larger numbers than heretofore, but the ammonites dominated the invertebrate life of the oceans, their average size ranging from 7 to 10\,cm, though one species attained a diameter of 2.4\,m. Sponges were everywhere, and both cuttlefish and oysters continued to evolve.
 \vs p060 2:9 \pc \bibemph{110,000,000} years ago the potentials of marine life were continuing to unfold. The sea urchin was one of the outstanding mutations of this epoch. Crabs, lobsters, and the modern types of crustaceans matured. Marked changes occurred in the fish family, a sturgeon type first appearing, but the ferocious sea serpents, descended from the land reptiles, still infested all the seas, and they threatened the destruction of the entire fish family.
 \vs p060 2:10 This continued to be, pre\hyp{}eminently, the age of the dinosaurs. They so overran the land that two species had taken to the water for sustenance during the preceding period of sea encroachment. These sea serpents represent a backward step in evolution. While some new species are progressing, certain strains remain stationary and others gravitate backward, reverting to a former state. And this is what happened when these two types of reptiles forsook the land.
-\vs p060 2:11 As time passed, the sea serpents grew to such size that they became very sluggish and eventually perished because they did not have brains large enough to afford protection for their immense bodies. Their brains weighed less than 56 g notwithstanding the fact that these huge ichthyosaurs sometimes grew to be 15 m long, the majority being over 10 m in length. The marine crocodilians were also a reversion from the land type of reptile, but unlike the sea serpents, these animals always returned to the land to lay their eggs.
-\vs p060 2:12 Soon after two species of dinosaurs migrated to the water in a futile attempt at self\hyp{}preservation, two other types were driven to the air by the bitter competition of life on land. But these flying pterosaurs were not the ancestors of the true birds of subsequent ages. They evolved from the hollow\hyp{}boned leaping dinosaurs, and their wings were of batlike formation with a spread of 6--8 m. These ancient flying reptiles grew to be 3 m long, and they had separable jaws much like those of modern snakes. For a time these flying reptiles appeared to be a success, but they failed to evolve along lines which would enable them to survive as air navigators. They represent the nonsurviving strains of bird ancestry.
+\vs p060 2:11 As time passed, the sea serpents grew to such size that they became very sluggish and eventually perished because they did not have brains large enough to afford protection for their immense bodies. Their brains weighed less than 56\,g notwithstanding the fact that these huge ichthyosaurs sometimes grew to be 15\,m long, the majority being over 10\,m in length. The marine crocodilians were also a reversion from the land type of reptile, but unlike the sea serpents, these animals always returned to the land to lay their eggs.
+\vs p060 2:12 Soon after two species of dinosaurs migrated to the water in a futile attempt at self\hyp{}preservation, two other types were driven to the air by the bitter competition of life on land. But these flying pterosaurs were not the ancestors of the true birds of subsequent ages. They evolved from the hollow\hyp{}boned leaping dinosaurs, and their wings were of batlike formation with a spread of 6--8\,m. These ancient flying reptiles grew to be 3\,m long, and they had separable jaws much like those of modern snakes. For a time these flying reptiles appeared to be a success, but they failed to evolve along lines which would enable them to survive as air navigators. They represent the nonsurviving strains of bird ancestry.
 \vs p060 2:13 Turtles increased during this period, first appearing in North America. Their ancestors came over from Asia by way of the northern land bridge.
 \vs p060 2:14 \pc 100,000,000 years ago the reptilian age was drawing to a close. The dinosaurs, for all their enormous mass, were all but brainless animals, lacking the intelligence to provide sufficient food to nourish such enormous bodies. And so did these sluggish land reptiles perish in ever\hyp{}increasing numbers. Henceforth, evolution will follow the growth of brains, not physical bulk, and the development of brains will characterize each succeeding epoch of animal evolution and planetary progress.
 \vs p060 2:15 \pc This period, embracing the height and the beginning decline of the reptiles, extended nearly 25,000,000 years and is known as the \bibemph{Jurassic.}
 \usection{3.\bibnobreakspace The Cretaceous Stage\\The Flowering\hyp{}Plant Period\\The Age of Birds}
 \vs p060 3:1 The great Cretaceous period derives its name from the predominance of the prolific chalk\hyp{}making foraminifers in the seas. This period brings Urantia to near the end of the long reptilian dominance and witnesses the appearance of flowering plants and bird life on land. These are also the times of the termination of the westward and southward drift of the continents, accompanied by tremendous crustal deformations and concomitant widespread lava flows and great volcanic activities.
 \vs p060 3:2 Near the close of the preceding geologic period much of the continental land was up above water, although as yet there were no mountain peaks. But as the continental land drift continued, it met with the first great obstruction on the deep floor of the Pacific. This contention of geologic forces gave impetus to the formation of the whole vast north and south mountain range extending from Alaska down through Mexico to Cape Horn.
-\vs p060 3:3 This period thus becomes the \bibemph{modern mountain\hyp{}building stage} of geologic history. Prior to this time there were few mountain peaks, merely elevated land ridges of great width. Now the Pacific coast range was beginning to elevate, but it was located 1,126 km west of the present shore line. The Sierras were beginning to form, their gold\hyp{}bearing quartz strata being the product of lava flows of this epoch. In the eastern part of North America, Atlantic sea pressure was also working to cause land elevation.
+\vs p060 3:3 This period thus becomes the \bibemph{modern mountain\hyp{}building stage} of geologic history. Prior to this time there were few mountain peaks, merely elevated land ridges of great width. Now the Pacific coast range was beginning to elevate, but it was located 1,126\,km west of the present shore line. The Sierras were beginning to form, their gold\hyp{}bearing quartz strata being the product of lava flows of this epoch. In the eastern part of North America, Atlantic sea pressure was also working to cause land elevation.
 \vs p060 3:4 \pc \bibemph{100,000,000} years ago the North American continent and a part of Europe were well above water. The warping of the American continents continued, resulting in the metamorphosing of the South American Andes and in the gradual elevation of the western plains of North America. Most of Mexico sank beneath the sea, and the southern Atlantic encroached on the eastern coast of South America, eventually reaching the present shore line. The Atlantic and Indian Oceans were then about as they are today.
-\vs p060 3:5 \pc \bibemph{95,000,000} years ago the American and European land masses again began to sink. The southern seas commenced the invasion of North America and gradually extended northward to connect with the Arctic Ocean, constituting the second greatest submergence of the continent. When this sea finally withdrew, it left the continent about as it now is. Before this great submergence began, the eastern Appalachian highlands had been almost completely worn down to the water’s level. The many coloured layers of pure clay now used for the manufacture of earthenware were laid down over the Atlantic coast regions during this age, their average thickness being about 600 m.
+\vs p060 3:5 \pc \bibemph{95,000,000} years ago the American and European land masses again began to sink. The southern seas commenced the invasion of North America and gradually extended northward to connect with the Arctic Ocean, constituting the second greatest submergence of the continent. When this sea finally withdrew, it left the continent about as it now is. Before this great submergence began, the eastern Appalachian highlands had been almost completely worn down to the water’s level. The many coloured layers of pure clay now used for the manufacture of earthenware were laid down over the Atlantic coast regions during this age, their average thickness being about 600\,m.
 \vs p060 3:6 Great volcanic actions occurred south of the Alps and along the line of the present California coast\hyp{}range mountains. The greatest crustal deformations in millions upon millions of years took place in Mexico. Great changes also occurred in Europe, Russia, Japan, and southern South America. The climate became increasingly diversified.
 \vs p060 3:7 \pc \bibemph{90,000,000} years ago the angiosperms emerged from these early Cretaceous seas and soon overran the continents. These land plants \bibemph{suddenly} appeared along with fig trees, magnolias, and tulip trees. Soon after this time fig trees, breadfruit trees, and palms overspread Europe and the western plains of North America. No new land animals appeared.
 \vs p060 3:8 \pc \bibemph{85,000,000} years ago the Bering Strait closed, shutting off the cooling waters of the northern seas. Theretofore the marine life of the Atlantic\hyp{}Gulf waters and that of the Pacific Ocean had differed greatly, owing to the temperature variations of these two bodies of water, which now became uniform.
-\vs p060 3:9 The deposits of chalk and greensand marl give name to this period. The sedimentations of these times are variegated, consisting of chalk, shale, sandstone, and small amounts of limestone, together with inferior coal or lignite, and in many regions they contain oil. These layers vary in thickness from 61 m in some places to 3 km in western North America and numerous European localities. Along the eastern borders of the Rocky Mountains these deposits may be observed in the uptilted foothills.
+\vs p060 3:9 The deposits of chalk and greensand marl give name to this period. The sedimentations of these times are variegated, consisting of chalk, shale, sandstone, and small amounts of limestone, together with inferior coal or lignite, and in many regions they contain oil. These layers vary in thickness from 61\,m in some places to 3\,km in western North America and numerous European localities. Along the eastern borders of the Rocky Mountains these deposits may be observed in the uptilted foothills.
 \vs p060 3:10 All over the world these strata are permeated with chalk, and these layers of porous semirock pick up water at upturned outcrops and convey it downward to furnish the water supply of much of the earth’s present arid regions.
-\vs p060 3:11 \pc \bibemph{80,000,000} years ago great disturbances occurred in the earth’s crust. The western advance of the continental drift was coming to a standstill, and the enormous energy of the sluggish momentum of the hinter continental mass upcrumpled the Pacific shore line of both North and South America and initiated profound repercussional changes along the Pacific shores of Asia. This circumpacific land elevation, which culminated in present\hyp{}day mountain ranges, is more than 40,200 km long. And the upheavals attendant upon its birth were the greatest surface distortions to take place since life appeared on Urantia. The lava flows, both above and below ground, were extensive and widespread.
+\vs p060 3:11 \pc \bibemph{80,000,000} years ago great disturbances occurred in the earth’s crust. The western advance of the continental drift was coming to a standstill, and the enormous energy of the sluggish momentum of the hinter continental mass upcrumpled the Pacific shore line of both North and South America and initiated profound repercussional changes along the Pacific shores of Asia. This circumpacific land elevation, which culminated in present\hyp{}day mountain ranges, is more than 40,200\,km long. And the upheavals attendant upon its birth were the greatest surface distortions to take place since life appeared on Urantia. The lava flows, both above and below ground, were extensive and widespread.
 \vs p060 3:12 \pc \bibemph{75,000,000} years ago marks the end of the continental drift. From Alaska to Cape Horn the long Pacific coast mountain ranges were completed, but there were as yet few peaks.
 \vs p060 3:13 The backthrust of the halted continental drift continued the elevation of the western plains of North America, while in the east the worn\hyp{}down Appalachian Mountains of the Atlantic coast region were projected straight up, with little or no tilting.
-\vs p060 3:14 \pc \bibemph{70,000,000} years ago the crustal distortions connected with the maximum elevation of the Rocky Mountain region took place. A large segment of rock was overthrust 24 km at the surface in British Columbia; here the Cambrian rocks are obliquely thrust out over the Cretaceous layers. On the eastern slope of the Rocky Mountains, near the Canadian border, there was another spectacular overthrust; here may be found the prelife stone layers shoved out over the then recent Cretaceous deposits.
+\vs p060 3:14 \pc \bibemph{70,000,000} years ago the crustal distortions connected with the maximum elevation of the Rocky Mountain region took place. A large segment of rock was overthrust 24\,km at the surface in British Columbia; here the Cambrian rocks are obliquely thrust out over the Cretaceous layers. On the eastern slope of the Rocky Mountains, near the Canadian border, there was another spectacular overthrust; here may be found the prelife stone layers shoved out over the then recent Cretaceous deposits.
 \vs p060 3:15 This was an age of volcanic activity all over the world, giving rise to numerous small isolated volcanic cones. Submarine volcanoes broke out in the submerged Himalayan region. Much of the rest of Asia, including Siberia, was also still under water.
 \vs p060 3:16 \pc \bibemph{65,000,000} years ago there occurred one of the greatest lava flows of all time. The deposition layers of these and preceding lava flows are to be found all over the Americas, North and South Africa, Australia, and parts of Europe.
 \vs p060 3:17 The land animals were little changed, but because of greater continental emergence, especially in North America, they rapidly multiplied. North America was the great field of the land\hyp{}animal evolution of these times, most of Europe being under water.
 \vs p060 3:18 The climate was still warm and uniform. The arctic regions were enjoying weather much like that of the present climate in central and southern North America.
 \vs p060 3:19 Great plant\hyp{}life evolution was taking place. Among the land plants the angiosperms predominated, and many present\hyp{}day trees first appeared, including beech, birch, oak, walnut, sycamore, maple, and modern palms. Fruits, grasses, and cereals were abundant, and these seed\hyp{}bearing grasses and trees were to the plant world what the ancestors of man were to the animal world --- they were second in evolutionary importance only to the appearance of man himself. \bibemph{Suddenly} and without previous gradation, the great family of flowering plants mutated. And this new flora soon overspread the entire world.
-\vs p060 3:20 \pc \bibemph{60,000,000} years ago, though the land reptiles were on the decline, the dinosaurs continued as monarchs of the land, the lead now being taken by the more agile and active types of the smaller leaping kangaroo varieties of the carnivorous dinosaurs. But sometime previously there had appeared new types of the herbivorous dinosaurs, whose rapid increase was due to the appearance of the grass family of land plants. One of these new grass\hyp{}eating dinosaurs was a true quadruped having two horns and a capelike shoulder flange. The land type of turtle, 6 m across, appeared as did also the modern crocodile and true snakes of the modern type. Great changes were also occurring among the fishes and other forms of marine life.\fnc{But \bibtextul{some time} previously there had appeared new types of the herbivorous dinosaurs\ldots{} \bibexpl{The one-word form is correct as the reference is to an indefinite point in time rather than to an indefinite period of time. (see \bibemph{Webster’s})}}
+\vs p060 3:20 \pc \bibemph{60,000,000} years ago, though the land reptiles were on the decline, the dinosaurs continued as monarchs of the land, the lead now being taken by the more agile and active types of the smaller leaping kangaroo varieties of the carnivorous dinosaurs. But sometime previously there had appeared new types of the herbivorous dinosaurs, whose rapid increase was due to the appearance of the grass family of land plants. One of these new grass\hyp{}eating dinosaurs was a true quadruped having two horns and a capelike shoulder flange. The land type of turtle, 6\,m across, appeared as did also the modern crocodile and true snakes of the modern type. Great changes were also occurring among the fishes and other forms of marine life.\fnc{But \bibtextul{some time} previously there had appeared new types of the herbivorous dinosaurs\ldots{} \bibexpl{The one-word form is correct as the reference is to an indefinite point in time rather than to an indefinite period of time. (see \bibemph{Webster’s})}}
 \vs p060 3:21 The wading and swimming prebirds of earlier ages had not been a success in the air, nor had the flying dinosaurs. They were a short\hyp{}lived species, soon becoming extinct. They, too, were subject to the dinosaur doom, destruction, because of having too little brain substance in comparison with body size. This second attempt to produce animals that could navigate the atmosphere failed, as did the abortive attempt to produce mammals during this and a preceding age.
 \vs p060 3:22 \pc \bibemph{55,000,000} years ago the evolutionary march was marked by the \bibemph{sudden} appearance of the first of the \bibemph{true birds,} a small pigeonlike creature which was the ancestor of all bird life. This was the third type of flying creature to appear on earth, and it sprang directly from the reptilian group, not from the contemporary flying dinosaurs nor from the earlier types of toothed land birds. And so this becomes known as the \bibemph{age of birds} as well as the declining age of reptiles.
 \usection{4.\bibnobreakspace The End of the Chalk Period}
 \vs p060 4:1 The great Cretaceous period was drawing to a close, and its termination marks the end of the great sea invasions of the continents. Particularly is this true of North America, where there had been just 24 great inundations. And though there were subsequent minor submergences, none of these can be compared with the extensive and lengthy marine invasions of this and previous ages. These alternate periods of land and sea dominance have occurred in 1,000,000\hyp{}year cycles. There has been an agelong rhythm associated with this rise and fall of ocean floor and continental land levels. And these same rhythmical crustal movements will continue from this time on throughout the earth’s history but with diminishing frequency and extent.
-\vs p060 4:2 This period also witnesses the end of the continental drift and the building of the modern mountains of Urantia. But the pressure of the continental masses and the thwarted momentum of their agelong drift are not the exclusive influences in mountain building. The chief and underlying factor in determining the location of a mountain range is the pre\hyp{}existent lowland, or trough, which has become filled up with the comparatively lighter deposits of the land erosion and marine drifts of the preceding ages. These lighter areas of land are sometimes 4,572 to 6,100 m thick; therefore, when the crust is subjected to pressure from any cause, these lighter areas are the first to crumple up, fold, and rise upward to afford compensatory adjustment for the contending and conflicting forces and pressures at work in the earth’s crust or underneath the crust. Sometimes these upthrusts of land occur without folding. But in connection with the rise of the Rocky Mountains, great folding and tilting occurred, coupled with enormous overthrusts of the various layers, both underground and at the surface.
-\vs p060 4:3 \pc The oldest mountains of the world are located in Asia, Greenland, and northern Europe among those of the older east\hyp{}west systems. The mid\hyp{}age mountains are in the circumpacific group and in the second European east\hyp{}west system, which was born at about the same time. This gigantic uprising is almost 16,000 km long, extending from Europe over into the West Indies land elevations. The youngest mountains are in the Rocky Mountain system, where, for ages, land elevations had occurred only to be successively covered by the sea, though some of the higher lands remained as islands. Subsequent to the formation of the mid\hyp{}age mountains, a real mountain highland was elevated which was destined, subsequently, to be carved into the present Rocky Mountains by the combined artistry of nature’s elements.
+\vs p060 4:2 This period also witnesses the end of the continental drift and the building of the modern mountains of Urantia. But the pressure of the continental masses and the thwarted momentum of their agelong drift are not the exclusive influences in mountain building. The chief and underlying factor in determining the location of a mountain range is the pre\hyp{}existent lowland, or trough, which has become filled up with the comparatively lighter deposits of the land erosion and marine drifts of the preceding ages. These lighter areas of land are sometimes 4,572 to 6,100\,m thick; therefore, when the crust is subjected to pressure from any cause, these lighter areas are the first to crumple up, fold, and rise upward to afford compensatory adjustment for the contending and conflicting forces and pressures at work in the earth’s crust or underneath the crust. Sometimes these upthrusts of land occur without folding. But in connection with the rise of the Rocky Mountains, great folding and tilting occurred, coupled with enormous overthrusts of the various layers, both underground and at the surface.
+\vs p060 4:3 \pc The oldest mountains of the world are located in Asia, Greenland, and northern Europe among those of the older east\hyp{}west systems. The mid\hyp{}age mountains are in the circumpacific group and in the second European east\hyp{}west system, which was born at about the same time. This gigantic uprising is almost 16,000\,km long, extending from Europe over into the West Indies land elevations. The youngest mountains are in the Rocky Mountain system, where, for ages, land elevations had occurred only to be successively covered by the sea, though some of the higher lands remained as islands. Subsequent to the formation of the mid\hyp{}age mountains, a real mountain highland was elevated which was destined, subsequently, to be carved into the present Rocky Mountains by the combined artistry of nature’s elements.
 \vs p060 4:4 The present North American Rocky Mountain region is not the original elevation of land; that elevation had been long since leveled by erosion and then re\hyp{}elevated. The present front range of mountains is what is left of the remains of the original range which was re\hyp{}elevated. Pikes Peak and Longs Peak are outstanding examples of this mountain activity, extending over two or more generations of mountain lives. These two peaks held their heads above water during several of the preceding inundations.
 \vs p060 4:5 Biologically as well as geologically this was an eventful and active age on land and under water. Sea urchins increased while corals and crinoids decreased. The ammonites, of preponderant influence during a previous age, also rapidly declined. On land the fern forests were largely replaced by pine and other modern trees, including the gigantic redwoods. By the end of this period, while the placental mammal has not yet evolved, the biologic stage is fully set for the appearance, in a subsequent age, of the early ancestors of the future mammalian types.
 \vs p060 4:6 \pc And thus ends a long era of world evolution, extending from the early appearance of land life down to the more recent times of the immediate ancestors of the human species and its collateral branches. This, the \bibemph{Cretaceous age,} covers 50,000,000 years and brings to a close the premammalian era of land life, which extends over a period of 100,000,000 years and is known as the \bibemph{Mesozoic.}
