--- a/tex/p061.tex
+++ b/tex/p061.tex
@@ -12,11 +12,11 @@
 \vs p061 1:6 \ublistelem{3.}\bibnobreakspace Employ their superior brain power in self\hyp{}perpetuation.
 \vs p061 1:7 \ublistelem{4.}\bibnobreakspace Utilize increased agility in escaping from enemies.
 \vs p061 1:8 \ublistelem{5.}\bibnobreakspace Apply superior intelligence to environmental adjustment and adaptation.
-\vs p061 1:9 \pc \bibemph{45,000,000} years ago the continental backbones were elevated in association with a very general sinking of the coast lines. Mammalian life was evolving rapidly. A small reptilian, egg\hyp{}laying type of mammal flourished, and the ancestors of the later kangaroos roamed Australia. Soon there were small horses, fleet\hyp{}footed rhinoceroses, tapirs with proboscises, primitive pigs, squirrels, lemurs, opossums, and several tribes of monkeylike animals. They were all small, primitive, and best suited to living among the forests of the mountain regions. A large ostrichlike land bird developed to a height of 10 m and laid an egg 22 by 33 cm. These were the ancestors of the later gigantic passenger birds that were so highly intelligent, and that onetime transported human beings through the air.
+\vs p061 1:9 \pc \bibemph{45,000,000} years ago the continental backbones were elevated in association with a very general sinking of the coast lines. Mammalian life was evolving rapidly. A small reptilian, egg\hyp{}laying type of mammal flourished, and the ancestors of the later kangaroos roamed Australia. Soon there were small horses, fleet\hyp{}footed rhinoceroses, tapirs with proboscises, primitive pigs, squirrels, lemurs, opossums, and several tribes of monkeylike animals. They were all small, primitive, and best suited to living among the forests of the mountain regions. A large ostrichlike land bird developed to a height of 10\,m and laid an egg $22\times 33$\,cm. These were the ancestors of the later gigantic passenger birds that were so highly intelligent, and that onetime transported human beings through the air.
 \vs p061 1:10 The mammals of the early Cenozoic lived on land, under the water, in the air, and among the treetops. They had from 1 to 11 pairs of mammary glands, and all were covered with considerable hair. In common with the later appearing orders, they developed two successive sets of teeth and possessed large brains in comparison to body size. But among them all no modern forms existed.
 \vs p061 1:11 \pc \bibemph{40,000,000} years ago the land areas of the Northern Hemisphere began to elevate, and this was followed by new extensive land deposits and other terrestrial activities, including lava flows, warping, lake formation, and erosion.
 \vs p061 1:12 During the latter part of this epoch most of Europe was submerged. Following a slight land rise the continent was covered by lakes and bays. The Arctic Ocean, through the Ural depression, ran south to connect with the Mediterranean Sea as it was then expanded northward, the highlands of the Alps, Carpathians, Apennines, and Pyrenees being up above the water as islands of the sea. The Isthmus of Panama was up; the Atlantic and Pacific Oceans were separated. North America was connected with Asia by the Bering Strait land bridge and with Europe by way of Greenland and Iceland. The earth circuit of land in northern latitudes was broken only by the Ural Straits, which connected the arctic seas with the enlarged Mediterranean.
-\vs p061 1:13 Considerable foraminiferal limestone was deposited in European waters. Today this same stone is elevated to a height of 3 km in the Alps, 4.8 km in the Himalayas, and 6 km in Tibet. The chalk deposits of this period are found along the coasts of Africa and Australia, on the west coast of South America, and about the West Indies.
+\vs p061 1:13 Considerable foraminiferal limestone was deposited in European waters. Today this same stone is elevated to a height of 3\,km in the Alps, 4.8\,km in the Himalayas, and 6\,km in Tibet. The chalk deposits of this period are found along the coasts of Africa and Australia, on the west coast of South America, and about the West Indies.
 \vs p061 1:14 \pc Throughout this so\hyp{}called \bibemph{Eocene} period the evolution of mammalian and other related forms of life continued with little or no interruption. North America was then connected by land with every continent except Australia, and the world was gradually overrun by primitive mammalian fauna of various types.
 \usection{2.\bibnobreakspace The Recent Flood Stage\\The Age of Advanced Mammals}
 \vs p061 2:1 This period was characterized by the further and rapid evolution of placental mammals, the more progressive forms of mammalian life developing during these times.
@@ -35,9 +35,9 @@
 \usection{3.\bibnobreakspace The Modern Mountain Stage\\Age of the Elephant and the Horse}
 \vs p061 3:1 Land elevation and sea segregation were slowly changing the world’s weather, gradually cooling it, but the climate was still mild. Sequoias and magnolias grew in Greenland, but the subtropical plants were beginning to migrate southward. By the end of this period these warm\hyp{}climate plants and trees had largely disappeared from the northern latitudes, their places being taken by more hardy plants and the deciduous trees.
 \vs p061 3:2 There was a great increase in the varieties of grasses, and the teeth of many mammalian species gradually altered to conform to the present\hyp{}day grazing type.
-\vs p061 3:3 \pc \bibemph{25,000,000} years ago there was a slight land submergence following the long epoch of land elevation. The Rocky Mountain region remained highly elevated so that the deposition of erosion material continued throughout the lowlands to the east. The Sierras were well re\hyp{}elevated; in fact, they have been rising ever since. The great 6 km vertical fault in the California region dates from this time.
+\vs p061 3:3 \pc \bibemph{25,000,000} years ago there was a slight land submergence following the long epoch of land elevation. The Rocky Mountain region remained highly elevated so that the deposition of erosion material continued throughout the lowlands to the east. The Sierras were well re\hyp{}elevated; in fact, they have been rising ever since. The great 6\,km vertical fault in the California region dates from this time.
 \vs p061 3:4 \pc \bibemph{20,000,000} years ago was indeed the golden age of mammals. The Bering Strait land bridge was up, and many groups of animals migrated to North America from Asia, including the four\hyp{}tusked mastodons, short\hyp{}legged rhinoceroses, and many varieties of the cat family.
-\vs p061 3:5 The first deer appeared, and North America was soon overrun by ruminants --- deer, oxen, camels, bison, and several species of rhinoceroses --- but the giant pigs, more than 1.8 m tall, became extinct.
+\vs p061 3:5 The first deer appeared, and North America was soon overrun by ruminants --- deer, oxen, camels, bison, and several species of rhinoceroses --- but the giant pigs, more than 1.8\,m tall, became extinct.
 \vs p061 3:6 The huge elephants of this and subsequent periods possessed large brains as well as large bodies, and they soon overran the entire world except Australia. For once the world was dominated by a huge animal with a brain sufficiently large to enable it to carry on. Confronted by the highly intelligent life of these ages, no animal the size of an elephant could have survived unless it had possessed a brain of large size and superior quality. In intelligence and adaptation the elephant is approached only by the horse and is surpassed only by man himself. Even so, of the 50 species of elephants in existence at the opening of this period, only 2 have survived.
 \vs p061 3:7 \pc \bibemph{15,000,000} years ago the mountain regions of Eurasia were rising, and there was some volcanic activity throughout these regions, but nothing comparable to the lava flows of the Western Hemisphere. These unsettled conditions prevailed all over the world.
 \vs p061 3:8 The Strait of Gibraltar closed, and Spain was connected with Africa by the old land bridge, but the Mediterranean flowed into the Atlantic through a narrow channel which extended across France, the mountain peaks and highlands appearing as islands above this ancient sea. Later on, these European seas began to withdraw. Still later, the Mediterranean was connected with the Indian Ocean, while at the close of this period the Suez region was elevated so that the Mediterranean became, for a time, an inland salt sea.
@@ -50,15 +50,15 @@
 \vs p061 3:15 \pc Thus drew to a close a very eventful and interesting period of the world’s history. This age of the elephant and the horse is known as the \bibemph{Miocene.}
 \usection{4.\bibnobreakspace The Recent Continental\hyp{}Elevation Stage\\The Last Great Mammalian Migration}
 \vs p061 4:1 This is the period of preglacial land elevation in North America, Europe, and Asia. The land was greatly altered in topography. Mountain ranges were born, streams changed their courses, and isolated volcanoes broke out all over the world.
-\vs p061 4:2 \pc \bibemph{10,000,000} years ago began an age of widespread local land deposits on the lowlands of the continents, but most of these sedimentations were later removed. Much of Europe, at this time, was still under water, including parts of England, Belgium, and France, and the Mediterranean Sea covered much of northern Africa. In North America extensive depositions were made at the mountain bases, in lakes, and in the great land basins. These deposits average only about 60 m, are more or less coloured, and fossils are rare. Two great fresh\hyp{}water lakes existed in western North America. The Sierras were elevating; Shasta, Hood, and Rainier were beginning their mountain careers. But it was not until the subsequent ice age that North America began its creep toward the Atlantic depression.
+\vs p061 4:2 \pc \bibemph{10,000,000} years ago began an age of widespread local land deposits on the lowlands of the continents, but most of these sedimentations were later removed. Much of Europe, at this time, was still under water, including parts of England, Belgium, and France, and the Mediterranean Sea covered much of northern Africa. In North America extensive depositions were made at the mountain bases, in lakes, and in the great land basins. These deposits average only about 60\,m, are more or less coloured, and fossils are rare. Two great fresh\hyp{}water lakes existed in western North America. The Sierras were elevating; Shasta, Hood, and Rainier were beginning their mountain careers. But it was not until the subsequent ice age that North America began its creep toward the Atlantic depression.
 \vs p061 4:3 For a short time all the land of the world was again joined excepting Australia, and the last great world\hyp{}wide animal migration took place. North America was connected with both South America and Asia, and there was a free exchange of animal life. Asiatic sloths, armadillos, antelopes, and bears entered North America, while North American camels went to China. Rhinoceroses migrated over the whole world except Australia and South America, but they were extinct in the Western Hemisphere by the close of this period.
 \vs p061 4:4 In general, the life of the preceding period continued to evolve and spread. The cat family dominated the animal life, and marine life was almost at a standstill. Many of the horses were still three\hyp{}toed, but the modern types were arriving; llamas and giraffelike camels mingled with the horses on the grazing plains. The giraffe appeared in Africa, having just as long a neck then as now. In South America sloths, armadillos, anteaters, and the South American type of primitive monkeys evolved. Before the continents were finally isolated, those massive animals, the mastodons, migrated everywhere except to Australia.
 \vs p061 4:5 \pc \bibemph{5,000,000} years ago the horse evolved as it now is and from North America migrated to all the world. But the horse had become extinct on the continent of its origin long before the red man arrived.
 \vs p061 4:6 The climate was gradually getting cooler; the land plants were slowly moving southward. At first it was the increasing cold in the north that stopped animal migrations over the northern isthmuses; subsequently these North American land bridges went down. Soon afterwards the land connection between Africa and South America finally submerged, and the Western Hemisphere was isolated much as it is today. From this time forward distinct types of life began to develop in the Eastern and Western Hemispheres.
 \vs p061 4:7 \pc And thus does this period of almost 10,000,000 years’ duration draw to a close, and not yet has the ancestor of man appeared. This is the time usually designated as the \bibemph{Pliocene.}
 \usection{5.\bibnobreakspace The Early Ice Age}
-\vs p061 5:1 By the close of the preceding period the lands of the north\hyp{}eastern part of North America and of northern Europe were highly elevated on an extensive scale, in North America vast areas rising up to 9 km and more. Mild climates had formerly prevailed over these northern regions, and the arctic waters were all open to evaporation, and they continued to be ice\hyp{}free until almost the close of the glacial period.
-\vs p061 5:2 Simultaneously with these land elevations the ocean currents shifted, and the seasonal winds changed their direction. These conditions eventually produced an almost constant precipitation of moisture from the movement of the heavily saturated atmosphere over the northern highlands. Snow began to fall on these elevated and therefore cool regions, and it continued to fall until it had attained a depth of 6 km. The areas of the greatest depth of snow, together with altitude, determined the central points of subsequent glacial pressure flows. And the ice age persisted just as long as this excessive precipitation continued to cover these northern highlands with this enormous mantle of snow, which soon metamorphosed into solid but creeping ice.
+\vs p061 5:1 By the close of the preceding period the lands of the north\hyp{}eastern part of North America and of northern Europe were highly elevated on an extensive scale, in North America vast areas rising up to 9\,km and more. Mild climates had formerly prevailed over these northern regions, and the arctic waters were all open to evaporation, and they continued to be ice\hyp{}free until almost the close of the glacial period.
+\vs p061 5:2 Simultaneously with these land elevations the ocean currents shifted, and the seasonal winds changed their direction. These conditions eventually produced an almost constant precipitation of moisture from the movement of the heavily saturated atmosphere over the northern highlands. Snow began to fall on these elevated and therefore cool regions, and it continued to fall until it had attained a depth of 6\,km. The areas of the greatest depth of snow, together with altitude, determined the central points of subsequent glacial pressure flows. And the ice age persisted just as long as this excessive precipitation continued to cover these northern highlands with this enormous mantle of snow, which soon metamorphosed into solid but creeping ice.
 \vs p061 5:3 The great ice sheets of this period were all located on elevated highlands, not in mountainous regions where they are found today. 50\% of the glacial ice was in North America, 25\% in Eurasia, and 25\% elsewhere, chiefly in Antarctica. Africa was little affected by the ice, but Australia was almost covered with the antarctic ice blanket.
 \vs p061 5:4 The northern regions of this world have experienced six separate and distinct ice invasions, although there were scores of advances and recessions associated with the activity of each individual ice sheet. The ice in North America collected in two and, later, three centres. Greenland was covered, and Iceland was completely buried beneath the ice flow. In Europe the ice at various times covered the British Isles excepting the coast of southern England, and it overspread western Europe down to France.
 \vs p061 5:5 \pc \bibemph{2,000,000} years ago the first North American glacier started its southern advance. The ice age was now in the making, and this glacier consumed nearly 1,000,000 years in its advance from, and retreat back toward, the northern pressure centres. The central ice sheet extended south as far as Kansas; the eastern and western ice centres were not then so extensive.
@@ -72,12 +72,12 @@
 \vs p061 6:4 \pc Human beings were not present in the Western Hemisphere until near the close of the ice age. But during the interglacial epochs they passed westward around the Mediterranean and soon overran the continent of Europe. In the caves of western Europe may be found human bones mingled with the remains of both tropic and arctic animals, testifying that man lived in these regions throughout the later epochs of the advancing and retreating glaciers.
 \usection{7.\bibnobreakspace The Continuing Ice Age}
 \vs p061 7:1 Throughout the glacial period other activities were in progress, but the action of the ice overshadows all other phenomena in the northern latitudes. No other terrestrial activity leaves such characteristic evidence on the topography. The distinctive boulders and surface cleavages, such as potholes, lakes, displaced stone, and rock flour, are to be found in connection with no other phenomenon in nature. The ice is also responsible for those gentle swells, or surface undulations, known as drumlins. And a glacier, as it advances, displaces rivers and changes the whole face of the earth. Glaciers alone leave behind them those telltale drifts --- the ground, lateral, and terminal moraines. These drifts, particularly the ground moraines, extend from the eastern seaboard north and westward in North America and are found in Europe and Siberia.
-\vs p061 7:2 \pc \bibemph{750,000} years ago the 4\ts{th} ice sheet, a union of the North American central and eastern ice fields, was well on its way south; at its height it reached to southern Illinois, displacing the Mississippi River 80 km to the west, and in the east it extended as far south as the Ohio River and central Pennsylvania.
+\vs p061 7:2 \pc \bibemph{750,000} years ago the 4\ts{th} ice sheet, a union of the North American central and eastern ice fields, was well on its way south; at its height it reached to southern Illinois, displacing the Mississippi River 80\,km to the west, and in the east it extended as far south as the Ohio River and central Pennsylvania.
 \vs p061 7:3 In Asia the Siberian ice sheet made its southernmost invasion, while in Europe the advancing ice stopped just short of the mountain barrier of the Alps.
 \vs p061 7:4 \pc \bibemph{500,000} years ago, during the fifth advance of the ice, a new development accelerated the course of human evolution. \bibemph{Suddenly} and in one generation the six coloured races mutated from the aboriginal human stock. This is a doubly important date since it also marks the arrival of the Planetary Prince.
 \vs p061 7:5 In North America the advancing 5\ts{th} glacier consisted of a combined invasion by all three ice centres. The eastern lobe, however, extended only a short distance below the St. Lawrence valley, and the western ice sheet made little southern advance. But the central lobe reached south to cover most of the State of Iowa. In Europe this invasion of the ice was not so extensive as the preceding one.
 \vs p061 7:6 \pc \bibemph{250,000} years ago the 6\ts{th} and last glaciation began. And despite the fact that the northern highlands had begun to sink slightly, this was the period of greatest snow deposition on the northern ice fields.
-\vs p061 7:7 In this invasion the three great ice sheets coalesced into one vast ice mass, and all of the western mountains participated in this glacial activity. This was the largest of all ice invasions in North America; the ice moved south over 2,400 km from its pressure centres, and North America experienced its lowest temperatures.
+\vs p061 7:7 In this invasion the three great ice sheets coalesced into one vast ice mass, and all of the western mountains participated in this glacial activity. This was the largest of all ice invasions in North America; the ice moved south over 2,400\,km from its pressure centres, and North America experienced its lowest temperatures.
 \vs p061 7:8 \pc \bibemph{200,000} years ago, during the advance of the last glacier, there occurred an episode which had much to do with the march of events on Urantia --- the Lucifer rebellion.
 \vs p061 7:9 \pc \bibemph{150,000} years ago the 6\ts{th} and last glacier reached its farthest points of southern extension, the western ice sheet crossing just over the Canadian border; the central coming down into Kansas, Missouri, and Illinois; the eastern sheet advancing south and covering the greater portion of Pennsylvania and Ohio.
 \vs p061 7:10 This is the glacier that sent forth the many tongues, or ice lobes, which carved out the present\hyp{}day lakes, great and small. During its retreat the North American system of Great Lakes was produced. And Urantian geologists have very accurately deduced the various stages of this development and have correctly surmised that these bodies of water did, at different times, empty first into the Mississippi valley, then eastward into the Hudson valley, and finally by a northern route into the St. Lawrence. It is 37,000 years since the connected Great Lakes system began to empty out over the present Niagara route.
