--- a/tex/p062.tex
+++ b/tex/p062.tex
@@ -6,7 +6,7 @@
 \vs p062 1:2 While these early lemurs evolved in the Western Hemisphere, the establishment of the direct mammalian ancestry of mankind took place in south\hyp{}western Asia, in the original area of the central life implantation but on the borders of the eastern regions. Several million years ago the North American type lemurs had migrated westward over the Bering land bridge and had slowly made their way south\hyp{}westward along the Asiatic coast. These migrating tribes finally reached the salubrious region lying between the then expanded Mediterranean Sea and the elevating mountainous regions of the Indian peninsula. In these lands to the west of India they united with other and favourable strains, thus establishing the ancestry of the human race.
 \vs p062 1:3 With the passing of time the seacoast of India south\hyp{}west of the mountains gradually submerged, completely isolating the life of this region. There was no avenue of approach to, or escape from, this Mesopotamian or Persian peninsula except to the north, and that was repeatedly cut off by the southern invasions of the glaciers. And it was in this then almost paradisiacal area, and from the superior descendants of this lemur type of mammal, that there sprang two great groups, the simian tribes of modern times and the present\hyp{}day human species.
 \usection{2.\bibnobreakspace The Dawn Mammals}
-\vs p062 2:1 A little more than 1,000,000 years ago the Mesopotamian dawn mammals, the direct descendants of the North American lemur type of placental mammal, \bibemph{suddenly} appeared. They were active little creatures, almost 91 cm tall; and while they did not habitually walk on their hind legs, they could easily stand erect. They were hairy and agile and chattered in monkeylike fashion, but unlike the simian tribes, they were flesh eaters. They had a primitive opposable thumb as well as a highly useful grasping big toe. From this point onward the prehuman species successively developed the opposable thumb while they progressively lost the grasping power of the great toe. The later ape tribes retained the grasping big toe but never developed the human type of thumb.
+\vs p062 2:1 A little more than 1,000,000 years ago the Mesopotamian dawn mammals, the direct descendants of the North American lemur type of placental mammal, \bibemph{suddenly} appeared. They were active little creatures, almost 91\,cm tall; and while they did not habitually walk on their hind legs, they could easily stand erect. They were hairy and agile and chattered in monkeylike fashion, but unlike the simian tribes, they were flesh eaters. They had a primitive opposable thumb as well as a highly useful grasping big toe. From this point onward the prehuman species successively developed the opposable thumb while they progressively lost the grasping power of the great toe. The later ape tribes retained the grasping big toe but never developed the human type of thumb.
 \vs p062 2:2 These dawn mammals attained full growth when 3 or 4 years of age, having a potential life span, on the average, of about 20 years. As a rule offspring were born singly, although twins were occasional.
 \vs p062 2:3 The members of this new species had the largest brains for their size of any animal that had theretofore existed on earth. They experienced many of the emotions and shared numerous instincts which later characterized primitive man, being highly curious and exhibiting considerable elation when successful at any undertaking. Food hunger and sex craving were well developed, and a definite sex selection was manifested in a crude form of courtship and choice of mates. They would fight fiercely in defence of their kindred and were quite tender in family associations, possessing a sense of self\hyp{}abasement bordering on shame and remorse. They were very affectionate and touchingly loyal to their mates, but if circumstances separated them, they would choose new partners.
 \vs p062 2:4 Being small of stature and having keen minds to realize the dangers of their forest habitat, they developed an extraordinary fear which led to those wise precautionary measures that so enormously contributed to survival, such as their construction of crude shelters in the high treetops which eliminated many of the perils of ground life. The beginning of the fear tendencies of mankind more specifically dates from these days.
@@ -14,20 +14,20 @@
 \vs p062 2:6 These aggressive little animals multiplied and spread over the Mesopotamian peninsula for more than 1,000 years, constantly improving in physical type and general intelligence. And it was just 70 generations after this new tribe had taken origin from the highest type of lemur ancestor that the next epoch\hyp{}making development occurred --- the \bibemph{sudden} differentiation of the ancestors of the next vital step in the evolution of human beings on Urantia.
 \usection{3.\bibnobreakspace The Mid\hyp{}Mammals}
 \vs p062 3:1 Early in the career of the dawn mammals, in the treetop abode of a superior pair of these agile creatures, twins were born, one male and one female. Compared with their ancestors, they were really handsome little creatures. They had little hair on their bodies, but this was no disability as they lived in a warm and equable climate.
-\vs p062 3:2 These children grew to be a little over 1.2 m in height. They were in every way larger than their parents, having longer legs and shorter arms. They had almost perfectly opposable thumbs, just about as well adapted for diversified work as the present human thumb. They walked upright, having feet almost as well suited for walking as those of the later human races.
-\vs p062 3:3 Their brains were inferior to, and smaller than, those of human beings but very superior to, and comparatively much larger than, those of their ancestors. The twins early displayed superior intelligence and were soon recognized as the heads of the whole tribe of dawn mammals, really instituting a primitive form of social organization and a crude economic division of labour. This brother and sister mated and soon enjoyed the society of 21 children much like themselves, all more than 1.2 m tall and in every way superior to the ancestral species. This new group formed the nucleus of the mid\hyp{}mammals.
+\vs p062 3:2 These children grew to be a little over 1.2\,m in height. They were in every way larger than their parents, having longer legs and shorter arms. They had almost perfectly opposable thumbs, just about as well adapted for diversified work as the present human thumb. They walked upright, having feet almost as well suited for walking as those of the later human races.
+\vs p062 3:3 Their brains were inferior to, and smaller than, those of human beings but very superior to, and comparatively much larger than, those of their ancestors. The twins early displayed superior intelligence and were soon recognized as the heads of the whole tribe of dawn mammals, really instituting a primitive form of social organization and a crude economic division of labour. This brother and sister mated and soon enjoyed the society of 21 children much like themselves, all more than 1.2\,m tall and in every way superior to the ancestral species. This new group formed the nucleus of the mid\hyp{}mammals.
 \vs p062 3:4 When the numbers of this new and superior group grew great, war, relentless war, broke out; and when the terrible struggle was over, not a single individual of the pre\hyp{}existent and ancestral race of dawn mammals remained alive. The less numerous but more powerful and intelligent offshoot of the species had survived at the expense of their ancestors.
 \vs p062 3:5 And now, for almost 15,000 years (600 generations), this creature became the terror of this part of the world. All of the great and vicious animals of former times had perished. The large beasts native to these regions were not carnivorous, and the larger species of the cat family, lions and tigers, had not yet invaded this peculiarly sheltered nook of the earth’s surface. Therefore did these mid\hyp{}mammals wax valiant and subdue the whole of their corner of creation.
 \vs p062 3:6 \pc Compared with the ancestral species, the mid\hyp{}mammals were an improvement in every way. Even their potential life span was longer, being about 25 years. A number of rudimentary human traits appeared in this new species. In addition to the innate propensities exhibited by their ancestors, these mid\hyp{}mammals were capable of showing disgust in certain repulsive situations. They further possessed a well\hyp{}defined hoarding instinct; they would hide food for subsequent use and were greatly given to the collection of smooth round pebbles and certain types of round stones suitable for defensive and offensive ammunition.
 \vs p062 3:7 These mid\hyp{}mammals were the first to exhibit a definite construction propensity, as shown in their rivalry in the building of both treetop homes and their many\hyp{}tunnelled subterranean retreats; they were the first species of mammals ever to provide for safety in both arboreal and underground shelters. They largely forsook the trees as places of abode, living on the ground during the day and sleeping in the treetops at night.
 \vs p062 3:8 As time passed, the natural increase in numbers eventually resulted in serious food competition and sex rivalry, all of which culminated in a series of internecine battles that nearly destroyed the entire species. These struggles continued until only one group of less than 100 individuals was left alive. But peace once more prevailed, and this lone surviving tribe built anew its treetop bedrooms and once again resumed a normal and semipeaceful existence.
-\vs p062 3:9 \pc You can hardly realize by what narrow margins your prehuman ancestors missed extinction from time to time. Had the ancestral frog of all humanity jumped 5 cm less on a certain occasion, the whole course of evolution would have been markedly changed. The immediate lemurlike mother of the dawn\hyp{}mammal species escaped death no less than 5 times by mere hairbreadth margins before she gave birth to the father of the new and higher mammalian order. But the closest call of all was when lightning struck the tree in which the prospective mother of the Primates twins was sleeping. Both of these mid\hyp{}mammal parents were severely shocked and badly burned; three of their 7 children were killed by this bolt from the skies. These evolving animals were almost superstitious. This couple whose treetop home had been struck were really the leaders of the more progressive group of the mid\hyp{}mammal species; and following their example, more than half the tribe, embracing the more intelligent families, moved about 3 km away from this locality and began the construction of new treetop abodes and new ground shelters --- their transient retreats in time of sudden danger.
+\vs p062 3:9 \pc You can hardly realize by what narrow margins your prehuman ancestors missed extinction from time to time. Had the ancestral frog of all humanity jumped 5\,cm less on a certain occasion, the whole course of evolution would have been markedly changed. The immediate lemurlike mother of the dawn\hyp{}mammal species escaped death no less than 5 times by mere hairbreadth margins before she gave birth to the father of the new and higher mammalian order. But the closest call of all was when lightning struck the tree in which the prospective mother of the Primates twins was sleeping. Both of these mid\hyp{}mammal parents were severely shocked and badly burned; three of their 7 children were killed by this bolt from the skies. These evolving animals were almost superstitious. This couple whose treetop home had been struck were really the leaders of the more progressive group of the mid\hyp{}mammal species; and following their example, more than half the tribe, embracing the more intelligent families, moved about 3\,km away from this locality and began the construction of new treetop abodes and new ground shelters --- their transient retreats in time of sudden danger.
 \vs p062 3:10 Soon after the completion of their home, this couple, veterans of so many struggles, found themselves the proud parents of twins, the most interesting and important animals ever to have been born into the world up to that time, for they were the first of the new species of \bibemph{Primates} constituting the next vital step in prehuman evolution.
 \vs p062 3:11 \pc Contemporaneously with the birth of these Primates twins, another couple --- a peculiarly retarded male and female of the mid\hyp{}mammal tribe, a couple that were both mentally and physically inferior --- also gave birth to twins. These twins, one male and one female, were indifferent to conquest; they were concerned only with obtaining food and, since they would not eat flesh, soon lost all interest in seeking prey. These retarded twins became the founders of the modern simian tribes. Their descendants sought the warmer southern regions with their mild climates and an abundance of tropical fruits, where they have continued much as of that day except for those branches which mated with the earlier types of gibbons and apes and have greatly deteriorated in consequence.
 \vs p062 3:12 And so it may be readily seen that man and the ape are related only in that they sprang from the mid\hyp{}mammals, a tribe in which there occurred the contemporaneous birth and subsequent segregation of two pairs of twins: the inferior pair destined to produce the modern types of monkey, baboon, chimpanzee, and gorilla; the superior pair destined to continue the line of ascent which evolved into man himself.
 \vs p062 3:13 Modern man and the simians did spring from the same tribe and species but not from the same parents. Man’s ancestors are descended from the superior strains of the selected remnant of this mid\hyp{}mammal tribe, whereas the modern simians (excepting certain pre\hyp{}existent types of lemurs, gibbons, apes, and other monkeylike creatures) are the descendants of the most inferior couple of this mid\hyp{}mammal group, a couple who only survived by hiding themselves in a subterranean food\hyp{}storage retreat for more than two weeks during the last fierce battle of their tribe, emerging only after the hostilities were well over.
 \usection{4.\bibnobreakspace The Primates}
-\vs p062 4:1 Going back to the birth of the superior twins, one male and one female, to the two leading members of the mid\hyp{}mammal tribe: These animal babies were of an unusual order; they had still less hair on their bodies than their parents and, when very young, insisted on walking upright. Their ancestors had always learned to walk on their hind legs, but these Primates twins stood erect from the beginning. They attained a height of over 1.5 m, and their heads grew larger in comparison with others among the tribe. While early learning to communicate with each other by means of signs and sounds, they were never able to make their people understand these new symbols.
+\vs p062 4:1 Going back to the birth of the superior twins, one male and one female, to the two leading members of the mid\hyp{}mammal tribe: These animal babies were of an unusual order; they had still less hair on their bodies than their parents and, when very young, insisted on walking upright. Their ancestors had always learned to walk on their hind legs, but these Primates twins stood erect from the beginning. They attained a height of over 1.5\,m, and their heads grew larger in comparison with others among the tribe. While early learning to communicate with each other by means of signs and sounds, they were never able to make their people understand these new symbols.
 \vs p062 4:2 When about 14 years of age, they fled from the tribe, going west to raise their family and establish the new species of Primates. And these new creatures are very properly denominated \bibemph{Primates} since they were the direct and immediate animal ancestors of the human family itself.
 \vs p062 4:3 Thus it was that the Primates came to occupy a region on the west coast of the Mesopotamian peninsula as it then projected into the southern sea, while the less intelligent and closely related tribes lived around the peninsula point and up the eastern shore line.
 \vs p062 4:4 \pc The Primates were more human and less animal than their mid\hyp{}mammal predecessors. The skeletal proportions of this new species were very similar to those of the primitive human races. The human type of hand and foot had fully developed, and these creatures could walk and even run as well as any of their later\hyp{}day human descendants. They largely abandoned tree life, though continuing to resort to the treetops as a safety measure at night, for like their earlier ancestors, they were greatly subject to fear. The increased use of their hands did much to develop inherent brain power, but they did not yet possess minds that could really be called human.
