--- a/tex/p064.tex
+++ b/tex/p064.tex
@@ -3,7 +3,7 @@
 \vs p064 0:1 This is the story of the evolutionary races of Urantia from the days of Andon and Fonta, almost 1,000,000 years ago, down through the times of the Planetary Prince to the end of the ice age.
 \vs p064 0:2 The human race is almost 1,000,000 years old, and the first half of its story roughly corresponds to the pre\hyp{}Planetary Prince days of Urantia. The latter half of the history of mankind begins at the time of the arrival of the Planetary Prince and the appearance of the 6 coloured races and roughly corresponds to the period commonly regarded as the Old Stone Age.
 \usection{1.\bibnobreakspace The Andonic Aborigines}
-\vs p064 1:1 Primitive man made his evolutionary appearance on earth a little less than 1,000,000 years ago, and he had a vigorous experience. He instinctively sought to escape the danger of mingling with the inferior simian tribes. But he could not migrate eastward because of the arid Tibetan land elevations, 9 km above sea level; neither could he go south nor west because of the expanded Mediterranean Sea, which then extended eastward to the Indian Ocean; and as he went north, he encountered the advancing ice. But even when further migration was blocked by the ice, and though the dispersing tribes became increasingly hostile, the more intelligent groups never entertained the idea of going southward to live among their hairy tree\hyp{}dwelling cousins of inferior intellect.
+\vs p064 1:1 Primitive man made his evolutionary appearance on earth a little less than 1,000,000 years ago, and he had a vigorous experience. He instinctively sought to escape the danger of mingling with the inferior simian tribes. But he could not migrate eastward because of the arid Tibetan land elevations, 9\,km above sea level; neither could he go south nor west because of the expanded Mediterranean Sea, which then extended eastward to the Indian Ocean; and as he went north, he encountered the advancing ice. But even when further migration was blocked by the ice, and though the dispersing tribes became increasingly hostile, the more intelligent groups never entertained the idea of going southward to live among their hairy tree\hyp{}dwelling cousins of inferior intellect.
 \vs p064 1:2 Many of man’s earliest religious emotions grew out of his feeling of helplessness in the shut\hyp{}in environment of this geographic situation --- mountains to the right, water to the left, and ice in front. But these progressive Andonites would not turn back to their inferior tree\hyp{}dwelling relatives in the south.
 \vs p064 1:3 These Andonites avoided the forests in contrast with the habits of their nonhuman relatives. In the forests man has always deteriorated; human evolution has made progress only in the open and in the higher latitudes. The cold and hunger of the open lands stimulate action, invention, and resourcefulness. While these Andonic tribes were developing the pioneers of the present human race amidst the hardships and privations of these rugged northern climes, their backward cousins were luxuriating in the southern tropical forests of the land of their early common origin.
 \vs p064 1:4 \pc These events occurred during the times of the third glacier, the first according to the reckoning of geologists. The first two glaciers were not extensive in northern Europe.
@@ -63,7 +63,7 @@
 \vs p064 6:16 The survival of comparatively large numbers of the yellow race is due to their intertribal peacefulness. From the days of Singlangton to the times of modern China, the yellow race has been numbered among the more peaceful of the nations of Urantia. This race received a small but potent legacy of the later imported Adamic stock.
 \vs p064 6:17 \ublistelem{4.}\bibnobreakspace \bibemph{The green man.} The green race was one of the less able groups of primitive men, and they were greatly weakened by extensive migrations in different directions. Before their dispersion these tribes experienced a great revival of culture under the leadership of Fantad, some 350,000 years ago.
 \vs p064 6:18 The green race split into three major divisions: The northern tribes were subdued, enslaved, and absorbed by the yellow and blue races. The eastern group were amalgamated with the Indian peoples of those days, and remnants still persist among them. The southern nation entered Africa, where they destroyed their almost equally inferior orange cousins.
-\vs p064 6:19 In many ways both groups were evenly matched in this struggle since each carried strains of the giant order, many of their leaders being 2.4 and 2.7 m in height. These giant strains of the green man were mostly confined to this southern or Egyptian nation.
+\vs p064 6:19 In many ways both groups were evenly matched in this struggle since each carried strains of the giant order, many of their leaders being 2.4 and 2.7\,m in height. These giant strains of the green man were mostly confined to this southern or Egyptian nation.
 \vs p064 6:20 The remnants of the victorious green men were subsequently absorbed by the indigo race, the last of the coloured peoples to develop and emigrate from the original Sangik centre of race dispersion.
 \vs p064 6:21 \ublistelem{5.}\bibnobreakspace \bibemph{The blue man.} The blue men were a great people. They early invented the spear and subsequently worked out the rudiments of many of the arts of modern civilization. The blue man had the brain power of the red man associated with the soul and sentiment of the yellow man. The Adamic descendants preferred them to all of the later persisting coloured races.
 \vs p064 6:22 The early blue men were responsive to the persuasions of the teachers of Prince Caligastia’s staff and were thrown into great confusion by the subsequent perverted teachings of those traitorous leaders. Like other primitive races they never fully recovered from the turmoil produced by the Caligastia betrayal, nor did they ever completely overcome their tendency to fight among themselves.
