--- a/tex/p066.tex
+++ b/tex/p066.tex
@@ -21,7 +21,7 @@
 \usection{3.\bibnobreakspace Dalamatia --- The City of the Prince}
 \vs p066 3:1 The headquarters of the Planetary Prince was situated in the Persian Gulf region of those days, in the district corresponding to later Mesopotamia.
 \vs p066 3:2 The climate and landscape in the Mesopotamia of those times were in every way favourable to the undertakings of the Prince’s staff and their assistants, very different from conditions which have sometimes since prevailed. It was necessary to have such a favouring climate as a part of the natural environment designed to induce primitive Urantians to make certain initial advances in culture and civilization. The one great task of those ages was to transform man from a hunter to a herder, with the hope that later on he would evolve into a peace\hyp{}loving, home\hyp{}abiding farmer.
-\vs p066 3:3 \pc The headquarters of the Planetary Prince on Urantia was typical of such stations on a young and developing sphere. The nucleus of the Prince’s settlement was a very simple but beautiful city, enclosed within a wall 12 m high. This world centre of culture was named Dalamatia in honour of Daligastia.
+\vs p066 3:3 \pc The headquarters of the Planetary Prince on Urantia was typical of such stations on a young and developing sphere. The nucleus of the Prince’s settlement was a very simple but beautiful city, enclosed within a wall 12\,m high. This world centre of culture was named Dalamatia in honour of Daligastia.
 \vs p066 3:4 The city was laid out in ten subdivisions with the headquarters mansions of the ten councils of the corporeal staff situated at the centres of these subdivisions. Centremost in the city was the temple of the unseen Father. The administrative headquarters of the Prince and his associates was arranged in 12 chambers immediately grouped about the temple itself.
 \vs p066 3:5 The buildings of Dalamatia were all one story except the council headquarters, which were two stories, and the central temple of the Father of all, which was small but three stories in height.
 \vs p066 3:6 The city represented the best practices of those early days in building material --- brick. Very little stone or wood was used. Home building and village architecture among the surrounding peoples were greatly improved by the Dalamatian example.
@@ -102,7 +102,7 @@
 \vs p066 7:15 \ublistelem{7.}\bibnobreakspace You shall not show disrespect to your parents or to the elders of the tribe.
 \vs p066 7:16 \pc This was the law of Dalamatia for almost 300,000 years. And many of the stones on which this law was inscribed now lie beneath the waters off the shores of Mesopotamia and Persia. It became the custom to hold one of these commands in mind for each day of the week, using it for salutations and mealtime thanksgiving.
 \vs p066 7:17 \pc The time measurement of these days was the lunar month, this period being reckoned as 28 days. That, with the exception of day and night, was the only time reckoning known to the early peoples. The 7\hyp{}day week was introduced by the Dalamatia teachers and grew out of the fact that $7 = 28/4$. The significance of the number 7 in the superuniverse undoubtedly afforded them opportunity to introduce a spiritual reminder into the common reckoning of time. But there is no natural origin for the weekly period.
-\vs p066 7:18 \pc The country around the city was quite well settled within a radius of 160 km. Immediately surrounding the city, hundreds of graduates of the Prince’s schools engaged in animal husbandry and otherwise carried out the instruction they had received from his staff and their numerous human helpers. A few engaged in agriculture and horticulture.
+\vs p066 7:18 \pc The country around the city was quite well settled within a radius of 160\,km. Immediately surrounding the city, hundreds of graduates of the Prince’s schools engaged in animal husbandry and otherwise carried out the instruction they had received from his staff and their numerous human helpers. A few engaged in agriculture and horticulture.
 \vs p066 7:19 Mankind was not consigned to agricultural toil as the penalty of supposed sin. “In the sweat of your face shall you eat the fruit of the fields” was not a sentence of punishment pronounced because of man’s participation in the follies of the Lucifer rebellion under the leadership of the traitorous Caligastia. The cultivation of the soil is inherent in the establishment of an advancing civilization on the evolutionary worlds, and this injunction was the centre of all teaching of the Planetary Prince and his staff throughout the 300,000 years which intervened between their arrival on Urantia and those tragic days when Caligastia threw in his lot with the rebel Lucifer. Work with the soil is not a curse; rather is it the highest blessing to all who are thus permitted to enjoy the most human of all human activities.
 \vs p066 7:20 At the outbreak of the rebellion, Dalamatia had a resident population of almost 6,000. This number includes the regular students but does not embrace the visitors and observers, who always numbered more than 1,000. But you can have little or no concept of the marvellous progress of those faraway times; practically all of the wonderful human gains of those days were wiped out by the horrible confusion and abject spiritual darkness which followed the Caligastia catastrophe of deception and sedition.
 \usection{8.\bibnobreakspace Misfortunes of Caligastia}
