--- a/tex/p068.tex
+++ b/tex/p068.tex
@@ -9,7 +9,7 @@
 \vs p068 1:3 Primitive society was thus founded on the reciprocity of necessity and on the enhanced safety of association. And human society has evolved in agelong cycles as a result of this isolation fear and by means of reluctant co\hyp{}operation.
 \vs p068 1:4 \pc Primitive human beings early learned that groups are vastly greater and stronger than the mere sum of their individual units. 100 men united and working in unison can move a great stone; a score of well\hyp{}trained guardians of the peace can restrain an angry mob. And so society was born, not of mere association of numbers, but rather as a result of the \bibemph{organization} of intelligent co\hyp{}operators. But co\hyp{}operation is not a natural trait of man; he learns to co\hyp{}operate first through fear and then later because he discovers it is most beneficial in meeting the difficulties of time and guarding against the supposed perils of eternity.
 \vs p068 1:5 The peoples who thus early organized themselves into a primitive society became more successful in their attacks on nature as well as in defence against their fellows; they possessed greater survival possibilities; hence has civilization steadily progressed on Urantia, notwithstanding its many setbacks. And it is only because of the enhancement of survival value in association that man’s many blunders have thus far failed to stop or destroy human civilization.
-\vs p068 1:6 \pc That contemporary cultural society is a rather recent phenomenon is well shown by the present\hyp{}day survival of such primitive social conditions as characterize the Australian natives and the Bushmen and Pygmies of Africa. Among these backward peoples may be observed something of the early group hostility, personal suspicion, and other highly antisocial traits which were so characteristic of all primitive races. These miserable remnants of the nonsocial peoples of ancient times bear eloquent testimony to the fact that the natural individualistic tendency of man cannot successfully compete with the more potent and powerful organizations and associations of social progression. These backward and suspicious antisocial races that speak a different dialect every 60--80 km illustrate what a world you might now be living in but for the combined teaching of the corporeal staff of the Planetary Prince and the later labours of the Adamic group of racial uplifters.
+\vs p068 1:6 \pc That contemporary cultural society is a rather recent phenomenon is well shown by the present\hyp{}day survival of such primitive social conditions as characterize the Australian natives and the Bushmen and Pygmies of Africa. Among these backward peoples may be observed something of the early group hostility, personal suspicion, and other highly antisocial traits which were so characteristic of all primitive races. These miserable remnants of the nonsocial peoples of ancient times bear eloquent testimony to the fact that the natural individualistic tendency of man cannot successfully compete with the more potent and powerful organizations and associations of social progression. These backward and suspicious antisocial races that speak a different dialect every 60--80\,km illustrate what a world you might now be living in but for the combined teaching of the corporeal staff of the Planetary Prince and the later labours of the Adamic group of racial uplifters.
 \vs p068 1:7 The modern phrase, “back to nature,” is a delusion of ignorance, a belief in the reality of the onetime fictitious “golden age.” The only basis for the legend of the golden age is the historic fact of Dalamatia and Eden. But these improved societies were far from the realization of utopian dreams.
 \usection{2.\bibnobreakspace Factors in Social Progression}
 \vs p068 2:1 Civilized society is the result of man’s early efforts to overcome his dislike of \bibemph{isolation.} But this does not necessarily signify mutual affection, and the present turbulent state of certain primitive groups well illustrates what the early tribes came up through. But though the individuals of a civilization may collide with each other and struggle against one another, and though civilization itself may appear to be an inconsistent mass of striving and struggling, it does evidence earnest striving, not the deadly monotony of stagnation.
@@ -40,7 +40,7 @@
 \usection{5.\bibnobreakspace Land Techniques --- Maintenance Arts}
 \vs p068 5:1 Land is the stage of society; men are the actors. And man must ever adjust his performances to conform to the land situation. The evolution of the mores is always dependent on the land\hyp{}man ratio. This is true notwithstanding the difficulty of its discernment. Man’s land technique, or maintenance arts, plus his standards of living, equal the sum total of the folkways, the mores. And the sum of man’s adjustment to the life demands equals his cultural civilization.
 \vs p068 5:2 The earliest human cultures arose along the rivers of the Eastern Hemisphere, and there were four great steps in the forward march of civilization. They were:
-\vs p068 5:3 \ublistelem{1.}\bibnobreakspace \bibemph{The collection stage.} Food coercion, hunger, led to the first form of industrial organization, the primitive food\hyp{}gathering lines. Sometimes such a line of hunger march would be 16 km long as it passed over the land gleaning food. This was the primitive nomadic stage of culture and is the mode of life now followed by the African Bushmen.
+\vs p068 5:3 \ublistelem{1.}\bibnobreakspace \bibemph{The collection stage.} Food coercion, hunger, led to the first form of industrial organization, the primitive food\hyp{}gathering lines. Sometimes such a line of hunger march would be 16\,km long as it passed over the land gleaning food. This was the primitive nomadic stage of culture and is the mode of life now followed by the African Bushmen.
 \vs p068 5:4 \ublistelem{2.}\bibnobreakspace \bibemph{The hunting stage.} The invention of weapon tools enabled man to become a hunter and thus to gain considerable freedom from food slavery. A thoughtful Andonite who had severely bruised his fist in a serious combat rediscovered the idea of using a long stick for his arm and a piece of hard flint, bound on the end with sinews, for his fist. Many tribes made independent discoveries of this sort, and these various forms of hammers represented one of the great forward steps in human civilization. Today some Australian natives have progressed little beyond this stage.
 \vs p068 5:5 The blue men became expert hunters and trappers; by fencing the rivers they caught fish in great numbers, drying the surplus for winter use. Many forms of ingenious snares and traps were employed in catching game, but the more primitive races did not hunt the larger animals.
 \vs p068 5:6 \ublistelem{3.}\bibnobreakspace \bibemph{The pastoral stage.} This phase of civilization was made possible by the domestication of animals. The Arabs and the natives of Africa are among the more recent pastoral peoples.
