--- a/tex/p073.tex
+++ b/tex/p073.tex
@@ -21,7 +21,7 @@
 \vs p073 3:1 The committee on location was absent for almost three years. It reported favourably concerning three possible locations: The first was an island in the Persian Gulf; the second, the river location subsequently occupied as the second garden; the third, a long narrow peninsula --- almost an island --- projecting westward from the eastern shores of the Mediterranean Sea.
 \vs p073 3:2 The committee almost unanimously favoured the third selection. This site was chosen, and two years were occupied in transferring the world’s cultural headquarters, including the tree of life, to this Mediterranean peninsula. All but a single group of the peninsula dwellers peaceably vacated when Van and his company arrived.
 \vs p073 3:3 \pc This Mediterranean peninsula had a salubrious climate and an equable temperature; this stabilized weather was due to the encircling mountains and to the fact that this area was virtually an island in an inland sea. While it rained copiously on the surrounding highlands, it seldom rained in Eden proper. But each night, from the extensive network of artificial irrigation channels, a “mist would go up” to refresh the vegetation of the Garden.
-\vs p073 3:4 The coast line of this land mass was considerably elevated, and the neck connecting with the mainland was only 43 km wide at the narrowest point. The great river that watered the Garden came down from the higher lands of the peninsula and flowed east through the peninsular neck to the mainland and thence across the lowlands of Mesopotamia to the sea beyond. It was fed by four tributaries which took origin in the coastal hills of the Edenic peninsula, and these are the “four heads” of the river which “went out of Eden,” and which later became confused with the branches of the rivers surrounding the second garden.
+\vs p073 3:4 The coast line of this land mass was considerably elevated, and the neck connecting with the mainland was only 43\,km wide at the narrowest point. The great river that watered the Garden came down from the higher lands of the peninsula and flowed east through the peninsular neck to the mainland and thence across the lowlands of Mesopotamia to the sea beyond. It was fed by four tributaries which took origin in the coastal hills of the Edenic peninsula, and these are the “four heads” of the river which “went out of Eden,” and which later became confused with the branches of the rivers surrounding the second garden.
 \vs p073 3:5 The mountains surrounding the Garden abounded in precious stones and metals, though these received very little attention. The dominant idea was to be the glorification of horticulture and the exaltation of agriculture.
 \vs p073 3:6 The site chosen for the Garden was probably the most beautiful spot of its kind in all the world, and the climate was then ideal. Nowhere else was there a location which could have lent itself so perfectly to becoming such a paradise of botanic expression. In this rendezvous the cream of the civilization of Urantia was forgathering. Without and beyond, the world lay in darkness, ignorance, and savagery. Eden was the one bright spot on Urantia; it was naturally a dream of loveliness, and it soon became a poem of exquisite and perfected landscape glory.
 \usection{4.\bibnobreakspace Establishing the Garden}
@@ -32,9 +32,9 @@
 \vs p073 4:5 But it was a cause for great disappointment when Van, not knowing how soon the expected Son and Daughter might come, suggested that the younger generation also be trained in the work of carrying on the enterprise in case their arrival should be delayed. This seemed like an admission of lack of faith on Van’s part and made considerable trouble, caused many desertions; but Van went forward with his plan of preparedness, meantime filling the places of the deserters with younger volunteers.
 \usection{5.\bibnobreakspace The Garden Home}
 \vs p073 5:1 At the centre of the Edenic peninsula was the exquisite stone temple of the Universal Father, the sacred shrine of the Garden. To the north the administrative headquarters was established; to the south were built the homes for the workers and their families; to the west was provided the allotment of ground for the proposed schools of the educational system of the expected Son, while in the “east of Eden” were built the domiciles intended for the promised Son and his immediate offspring. The architectural plans for Eden provided homes and abundant land for 1,000,000 human beings.
-\vs p073 5:2 At the time of Adam’s arrival, though the Garden was only \bibfrac{1}{4} finished, it had thousands of kilometres of irrigation ditches and more than 19,300 km of paved paths and roads. There were a trifle over 5,000 brick buildings in the various sectors, and the trees and plants were almost beyond number. Seven was the largest number of houses composing any one cluster in the park. And though the structures of the Garden were simple, they were most artistic. The roads and paths were well built, and the landscaping was exquisite.
+\vs p073 5:2 At the time of Adam’s arrival, though the Garden was only \bibfrac{1}{4} finished, it had thousands of kilometres of irrigation ditches and more than 19,300\,km of paved paths and roads. There were a trifle over 5,000 brick buildings in the various sectors, and the trees and plants were almost beyond number. Seven was the largest number of houses composing any one cluster in the park. And though the structures of the Garden were simple, they were most artistic. The roads and paths were well built, and the landscaping was exquisite.
 \vs p073 5:3 The sanitary arrangements of the Garden were far in advance of anything that had been attempted theretofore on Urantia. The drinking water of Eden was kept wholesome by the strict observance of the sanitary regulations designed to conserve its purity. During these early times much trouble came about from neglect of these rules, but Van gradually impressed upon his associates the importance of allowing nothing to fall into the water supply of the Garden.
-\vs p073 5:4 Before the later establishment of a sewage\hyp{}disposal system the Edenites practised the scrupulous burial of all waste or decomposing material. Amadon’s inspectors made their rounds each day in search for possible causes of sickness. Urantians did not again awaken to the importance of the prevention of human diseases until the later times of the XIX and XX centuries. Before the disruption of the Adamic regime a covered brick\hyp{}conduit disposal system had been constructed which ran beneath the walls and emptied into the river of Eden almost 1.6 km beyond the outer or lesser wall of the Garden.
+\vs p073 5:4 Before the later establishment of a sewage\hyp{}disposal system the Edenites practised the scrupulous burial of all waste or decomposing material. Amadon’s inspectors made their rounds each day in search for possible causes of sickness. Urantians did not again awaken to the importance of the prevention of human diseases until the later times of the XIX and XX centuries. Before the disruption of the Adamic regime a covered brick\hyp{}conduit disposal system had been constructed which ran beneath the walls and emptied into the river of Eden almost 1.6\,km beyond the outer or lesser wall of the Garden.
 \vs p073 5:5 By the time of Adam’s arrival most of the plants of that section of the world were growing in Eden. Already had many of the fruits, cereals, and nuts been greatly improved. Many modern vegetables and cereals were first cultivated here, but scores of varieties of food plants were subsequently lost to the world.
 \vs p073 5:6 About 5\%\ of the Garden was under high artificial cultivation, 15\%\ partially cultivated, the remainder being left in a more or less natural state pending the arrival of Adam, it being thought best to finish the park in accordance with his ideas.
 \vs p073 5:7 And so was the Garden of Eden made ready for the reception of the promised Adam and his consort. And this Garden would have done honour to a world under perfected administration and normal control. Adam and Eve were well pleased with the general plan of Eden, though they made many changes in the furnishings of their own personal dwelling.
