--- a/tex/p074.tex
+++ b/tex/p074.tex
@@ -2,7 +2,7 @@
 \author{Solonia}
 \vs p074 0:1 Adam and Eve arrived on Urantia, from the year A.D.\,1934, 37,848 years ago. It was in midseason when the Garden was in the height of bloom that they arrived. At high noon and unannounced, the two seraphic transports, accompanied by the Jerusem personnel intrusted with the transportation of the biologic uplifters to Urantia, settled slowly to the surface of the revolving planet in the vicinity of the temple of the Universal Father. All the work of rematerializing the bodies of Adam and Eve was carried on within the precincts of this newly created shrine. And from the time of their arrival ten days passed before they were re\hyp{}created in dual human form for presentation as the world’s new rulers. They regained consciousness simultaneously. The Material Sons and Daughters always serve together. It is the essence of their service at all times and in all places never to be separated. They are designed to work in pairs; seldom do they function alone.
 \usection{1.\bibnobreakspace Adam and Eve on Jerusem}
-\vs p074 1:1 The Planetary Adam and Eve of Urantia were members of the senior corps of Material Sons on Jerusem, being jointly number 14,311. They belonged to the third physical series and were a little more than 2.4 m in height.
+\vs p074 1:1 The Planetary Adam and Eve of Urantia were members of the senior corps of Material Sons on Jerusem, being jointly number 14,311. They belonged to the third physical series and were a little more than 2.4\,m in height.
 \vs p074 1:2 At the time Adam was chosen to come to Urantia, he was employed, with his mate, in the trial\hyp{}and\hyp{}testing physical laboratories of Jerusem. For more than 15,000 years they had been directors of the division of experimental energy as applied to the modification of living forms. Long before this they had been teachers in the citizenship schools for new arrivals on Jerusem. And all this should be borne in mind in connection with the narration of their subsequent conduct on Urantia.
 \vs p074 1:3 When the proclamation was issued calling for volunteers for the mission of Adamic adventure on Urantia, the entire senior corps of Material Sons and Daughters volunteered. The Melchizedek examiners, with the approval of Lanaforge and the Most Highs of Edentia, finally selected the Adam and Eve who subsequently came to function as the biologic uplifters of Urantia.
 \vs p074 1:4 Adam and Eve had remained loyal to Michael during the Lucifer rebellion; nevertheless, the pair were called before the System Sovereign and his entire cabinet for examination and instruction. The details of Urantia affairs were fully presented; they were exhaustively instructed as to the plans to be pursued in accepting the responsibilities of rulership on such a strife\hyp{}torn world. They were put under joint oaths of allegiance to the Most Highs of Edentia and to Michael of Salvington. And they were duly advised to regard themselves as subject to the Urantia corps of Melchizedek receivers until that governing body should see fit to relinquish rule on the world of their assignment.
@@ -50,7 +50,7 @@
 \vs p074 6:3 The Adamic children did not take milk from animals when they ceased to nurse the mother’s breast at one year of age. Eve had access to the milk of a great variety of nuts and to the juices of many fruits, and knowing full well the chemistry and energy of these foods, she suitably combined them for the nourishment of her children until the appearance of teeth.
 \vs p074 6:4 While cooking was universally employed outside of the immediate Adamic sector of Eden, there was no cooking in Adam’s household. They found their foods --- fruits, nuts, and cereals --- ready prepared as they ripened. They ate once a day, shortly after noontime. Adam and Eve also imbibed “light and energy” direct from certain space emanations in conjunction with the ministry of the tree of life.
 \vs p074 6:5 \pc The bodies of Adam and Eve gave forth a shimmer of light, but they always wore clothing in conformity with the custom of their associates. Though wearing very little during the day, at eventide they donned night wraps. The origin of the traditional halo encircling the heads of supposed pious and holy men dates back to the days of Adam and Eve. Since the light emanations of their bodies were so largely obscured by clothing, only the radiating glow from their heads was discernible. The descendants of Adamson always thus portrayed their concept of individuals believed to be extraordinary in spiritual development.
-\vs p074 6:6 Adam and Eve could communicate with each other and with their immediate children over a distance of about 80 km. This thought exchange was effected by means of the delicate gas chambers located in close proximity to their brain structures. By this mechanism they could send and receive thought oscillations. But this power was instantly suspended upon the mind’s surrender to the discord and disruption of evil.
+\vs p074 6:6 Adam and Eve could communicate with each other and with their immediate children over a distance of about 80\,km. This thought exchange was effected by means of the delicate gas chambers located in close proximity to their brain structures. By this mechanism they could send and receive thought oscillations. But this power was instantly suspended upon the mind’s surrender to the discord and disruption of evil.
 \vs p074 6:7 \pc The Adamic children attended their own schools until they were 16, the younger being taught by the elder. The little folks changed activities every 30 minutes, the older every hour. And it was certainly a new sight on Urantia to observe these children of Adam and Eve at play, joyous and exhilarating activity just for the sheer fun of it. The play and humour of the present\hyp{}day races are largely derived from the Adamic stock. The Adamites all had a great appreciation of music as well as a keen sense of humour.
 \vs p074 6:8 The average age of betrothal was 18, and these youths then entered upon a two years’ course of instruction in preparation for the assumption of marital responsibilities. At 20 they were eligible for marriage; and after marriage they began their lifework or entered upon special preparation therefor.
 \vs p074 6:9 The practice of some subsequent nations of permitting the royal families, supposedly descended from the gods, to marry brother to sister, dates from the traditions of the Adamic offspring --- mating, as they must needs, with one another. The marriage ceremonies of the first and second generations of the Garden were always performed by Adam and Eve.
