--- a/tex/p076.tex
+++ b/tex/p076.tex
@@ -5,7 +5,7 @@
 \usection{1.\bibnobreakspace The Edenites Enter Mesopotamia}
 \vs p076 1:1 It required almost a full year for the caravan of Adam to reach the Euphrates River. Finding it in flood tide, they remained camped on the plains west of the stream almost six weeks before they made their way across to the land between the rivers which was to become the second garden.
 \vs p076 1:2 When word had reached the dwellers in the land of the second garden that the king and high priest of the Garden of Eden was marching on them, they had fled in haste to the eastern mountains. Adam found all of the desired territory vacated when he arrived. And here in this new location Adam and his helpers set themselves to work to build new homes and establish a new centre of culture and religion.
-\vs p076 1:3 This site was known to Adam as one of the three original selections of the committee assigned to choose possible locations for the Garden proposed by Van and Amadon. The two rivers themselves were a good natural defence in those days, and a short way north of the second garden the Euphrates and Tigris came close together so that a defence wall extending 90 km could be built for the protection of the territory to the south and between the rivers.
+\vs p076 1:3 This site was known to Adam as one of the three original selections of the committee assigned to choose possible locations for the Garden proposed by Van and Amadon. The two rivers themselves were a good natural defence in those days, and a short way north of the second garden the Euphrates and Tigris came close together so that a defence wall extending 90\,km could be built for the protection of the territory to the south and between the rivers.
 \vs p076 1:4 \pc After getting settled in the new Eden, it became necessary to adopt crude methods of living; it seemed entirely true that the ground had been cursed. Nature was once again taking its course. Now were the Adamites compelled to wrest a living from unprepared soil and to cope with the realities of life in the face of the natural hostilities and incompatibilities of mortal existence. They found the first garden partially prepared for them, but the second had to be created by the labour of their own hands and in the “sweat of their faces.”
 \usection{2.\bibnobreakspace Cain and Abel}
 \vs p076 2:1 Less than two years after Cain’s birth, Abel was born, the first child of Adam and Eve to be born in the second garden. When Abel grew up to the age of 12 years, he elected to be a herder; Cain had chosen to follow agriculture.
