--- a/tex/p080.tex
+++ b/tex/p080.tex
@@ -51,7 +51,7 @@
 \vs p080 6:5 This brilliant epoch of culture was cut short by internal warfare along the Nile, and the country was soon overrun, as Mesopotamia had been, by the inferior tribes from inhospitable Arabia and by the blacks from the south. As a result, social progress steadily declined for more than 500 years.
 \usection{7.\bibnobreakspace Andites of the Mediterranean Isles}
 \vs p080 7:1 During the decline of culture in Mesopotamia there persisted for some time a superior civilization on the islands of the eastern Mediterranean.
-\vs p080 7:2 About 12,000\,B.C. a brilliant tribe of Andites migrated to Crete. This was the only island settled so early by such a superior group, and it was almost 2,000 years before the descendants of these mariners spread to the neighbouring isles. This group were the narrow\hyp{}headed, smaller\hyp{}statured Andites who had intermarried with the Vanite division of the northern Nodites. They were all under 1.8 m in height and had been literally driven off the mainland by their larger and inferior fellows. These emigrants to Crete were highly skilled in textiles, metals, pottery, plumbing, and the use of stone for building material. They engaged in writing and carried on as herders and agriculturists.
+\vs p080 7:2 About 12,000\,B.C. a brilliant tribe of Andites migrated to Crete. This was the only island settled so early by such a superior group, and it was almost 2,000 years before the descendants of these mariners spread to the neighbouring isles. This group were the narrow\hyp{}headed, smaller\hyp{}statured Andites who had intermarried with the Vanite division of the northern Nodites. They were all under 1.8\,m in height and had been literally driven off the mainland by their larger and inferior fellows. These emigrants to Crete were highly skilled in textiles, metals, pottery, plumbing, and the use of stone for building material. They engaged in writing and carried on as herders and agriculturists.
 \vs p080 7:3 Almost 2,000 years after the settlement of Crete a group of the tall descendants of Adamson made their way over the northern islands to Greece, coming almost directly from their highland home north of Mesopotamia. These progenitors of the Greeks were led westward by Sato, a direct descendant of Adamson and Ratta.
 \vs p080 7:4 The group which finally settled in Greece consisted of 375 of the selected and superior people comprising the end of the second civilization of the Adamsonites. These later sons of Adamson carried the then most valuable strains of the emerging white races. They were of a high intellectual order and, physically regarded, the most beautiful of men since the days of the first Eden.
 \vs p080 7:5 \pc Presently Greece and the Aegean Islands region succeeded Mesopotamia and Egypt as the Occidental centre of trade, art, and culture. But as it was in Egypt, so again practically all of the art and science of the Aegean world was derived from Mesopotamia except for the culture of the Adamsonite forerunners of the Greeks. All the art and genius of these latter people is a direct legacy of the posterity of Adamson, the first son of Adam and Eve, and his extraordinary second wife, a daughter descended in an unbroken line from the pure Nodite staff of Prince Caligastia. No wonder the Greeks had mythological traditions that they were directly descended from gods and superhuman beings.
