--- a/tex/p081.tex
+++ b/tex/p081.tex
@@ -35,7 +35,7 @@
 \usection{3.\bibnobreakspace Cities, Manufacture, and Commerce}
 \vs p081 3:1 The climatic destruction of the rich, open grassland hunting and grazing grounds of Turkestan, beginning about 12,000\,B.C., compelled the men of those regions to resort to new forms of industry and crude manufacturing. Some turned to the cultivation of domesticated flocks, others became agriculturists or collectors of water\hyp{}borne food, but the higher type of Andite intellects chose to engage in trade and manufacture. It even became the custom for entire tribes to dedicate themselves to the development of a single industry. From the valley of the Nile to the Hindu Kush and from the Ganges to the Yellow River, the chief business of the superior tribes became the cultivation of the soil, with commerce as a side line.
 \vs p081 3:2 The increase in trade and in the manufacture of raw materials into various articles of commerce was directly instrumental in producing those early and semipeaceful communities which were so influential in spreading the culture and the arts of civilization. Before the era of extensive world trade, social communities were tribal --- expanded family groups. Trade brought into fellowship different sorts of human beings, thus contributing to a more speedy cross\hyp{}fertilization of culture.
-\vs p081 3:3 About 12,000 years ago the era of the independent cities was dawning. And these primitive trading and manufacturing cities were always surrounded by zones of agriculture and cattle raising. While it is true that industry was promoted by the elevation of the standards of living, you should have no misconception regarding the refinements of early urban life. The early races were not overly neat and clean, and the average primitive community rose 30--60 cm every 25 years as the result of the mere accumulation of dirt and rubbish. Certain of these olden cities also rose above the surrounding ground very quickly because their unbaked mud huts were short\hyp{}lived, and it was the custom to build new dwellings directly on top of the ruins of the old.
+\vs p081 3:3 About 12,000 years ago the era of the independent cities was dawning. And these primitive trading and manufacturing cities were always surrounded by zones of agriculture and cattle raising. While it is true that industry was promoted by the elevation of the standards of living, you should have no misconception regarding the refinements of early urban life. The early races were not overly neat and clean, and the average primitive community rose 30--60\,cm every 25 years as the result of the mere accumulation of dirt and rubbish. Certain of these olden cities also rose above the surrounding ground very quickly because their unbaked mud huts were short\hyp{}lived, and it was the custom to build new dwellings directly on top of the ruins of the old.
 \vs p081 3:4 \pc The widespread use of metals was a feature of this era of the early industrial and trading cities. You have already found a bronze culture in Turkestan dating before 9000\,B.C., and the Andites early learned to work in iron, gold, and copper, as well. But conditions were very different away from the more advanced centres of civilization. There were no distinct periods, such as the Stone, Bronze, and Iron Ages; all three existed at the same time in different localities.
 \vs p081 3:5 Gold was the first metal to be sought by man; it was easy to work and, at first, was used only as an ornament. Copper was next employed but not extensively until it was admixed with tin to make the harder bronze. The discovery of mixing copper and tin to make bronze was made by one of the Adamsonites of Turkestan whose highland copper mine happened to be located alongside a tin deposit.
 \vs p081 3:6 \pc With the appearance of crude manufacture and beginning industry, commerce quickly became the most potent influence in the spread of cultural civilization. The opening up of the trade channels by land and by sea greatly facilitated travel and the mixing of cultures as well as the blending of civilizations. By 5000\,B.C. the horse was in general use throughout civilized and semicivilized lands. These later races not only had the domesticated horse but also various sorts of wagons and chariots. Ages before, the wheel had been used, but now vehicles so equipped became universally employed both in commerce and war.
