--- a/tex/p122.tex
+++ b/tex/p122.tex
@@ -13,7 +13,7 @@
 \vs p122 2:3 “While your husband, Zacharias, stands before the altar in Jerusalem, and while the assembled people pray for the coming of a deliverer, I, Gabriel, have come to announce that you will shortly bear a son who shall be the forerunner of this divine teacher, and you shall call your son John. He will grow up dedicated to the Lord your God, and when he has come to full years, he will gladden your heart because he will turn many souls to God, and he will also proclaim the coming of the soul\hyp{}healer of your people and the spirit\hyp{}liberator of all mankind. Your kinswoman Mary shall be the mother of this child of promise, and I will also appear to her.”
 \vs p122 2:4 This vision greatly frightened Elizabeth. After Gabriel’s departure she turned this experience over in her mind, long pondering the sayings of the majestic visitor, but did not speak of the revelation to anyone save her husband until her subsequent visit with Mary in early February of the following year.
 \vs p122 2:5 \pc For five months, however, Elizabeth withheld her secret even from her husband. Upon her disclosure of the story of Gabriel’s visit, Zacharias was very sceptical and for weeks doubted the entire experience, only consenting half\hyp{}heartedly to believe in Gabriel’s visit to his wife when he could no longer question that she was expectant with child. Zacharias was very much perplexed regarding the prospective motherhood of Elizabeth, but he did not doubt the integrity of his wife, notwithstanding his own advanced age. It was not until about six weeks before John’s birth that Zacharias, as the result of an impressive dream, became fully convinced that Elizabeth was to become the mother of a son of destiny, one who was to prepare the way for the coming of the Messiah.
-\vs p122 2:6 Gabriel appeared to Mary about the middle of November, 8\,B.C., while she was at work in her Nazareth home. Later on, after Mary knew without doubt that she was to become a mother, she persuaded Joseph to let her journey to the City of Judah, 6.4 km west of Jerusalem, in the hills, to visit Elizabeth. Gabriel had informed each of these mothers\hyp{}to\hyp{}be of his appearance to the other. Naturally they were anxious to get together, compare experiences, and talk over the probable futures of their sons. Mary remained with her distant cousin for three weeks. Elizabeth did much to strengthen Mary’s faith in the vision of Gabriel, so that she returned home more fully dedicated to the call to mother the child of destiny whom she was so soon to present to the world as a helpless babe, an average and normal infant of the realm.
+\vs p122 2:6 Gabriel appeared to Mary about the middle of November, 8\,B.C., while she was at work in her Nazareth home. Later on, after Mary knew without doubt that she was to become a mother, she persuaded Joseph to let her journey to the City of Judah, 6.4\,km west of Jerusalem, in the hills, to visit Elizabeth. Gabriel had informed each of these mothers\hyp{}to\hyp{}be of his appearance to the other. Naturally they were anxious to get together, compare experiences, and talk over the probable futures of their sons. Mary remained with her distant cousin for three weeks. Elizabeth did much to strengthen Mary’s faith in the vision of Gabriel, so that she returned home more fully dedicated to the call to mother the child of destiny whom she was so soon to present to the world as a helpless babe, an average and normal infant of the realm.
 \vs p122 2:7 \pc John was born in the City of Judah, March 25, 7\,B.C. Zacharias and Elizabeth rejoiced greatly in the realization that a son had come to them as Gabriel had promised, and when on the eighth day they presented the child for circumcision, they formally christened him John, as they had been directed aforetime. Already had a nephew of Zacharias departed for Nazareth, carrying the message of Elizabeth to Mary proclaiming that a son had been born to her and that his name was to be John.
 \vs p122 2:8 From his earliest infancy John was judiciously impressed by his parents with the idea that he was to grow up to become a spiritual leader and religious teacher. And the soil of John’s heart was ever responsive to the sowing of such suggestive seeds. Even as a child he was found frequently at the temple during the seasons of his father’s service, and he was tremendously impressed with the significance of all that he saw.
 \usection{3.\bibnobreakspace Gabriel’s Announcement to Mary}
