--- a/tex/p123.tex
+++ b/tex/p123.tex
@@ -43,7 +43,7 @@
 \vs p123 3:9 \pc This year Jesus made great progress in adjusting his strong feelings and vigorous impulses to the demands of family co\hyp{}operation and home discipline. Mary was a loving mother but a fairly strict disciplinarian. In many ways, however, Joseph exerted the greater control over Jesus as it was his practice to sit down with the boy and fully explain the real and underlying reasons for the necessity of disciplinary curtailment of personal desires in deference to the welfare and tranquillity of the entire family. When the situation had been explained to Jesus, he was always intelligently and willingly co\hyp{}operative with parental wishes and family regulations.
 \vs p123 3:10 \pc Much of his spare time --- when his mother did not require his help about the house --- was spent studying the flowers and plants by day and the stars by night. He evinced a troublesome penchant for lying on his back and gazing wonderingly up into the starry heavens long after his usual bedtime in this well\hyp{}ordered Nazareth household.
 \usection{4.\bibnobreakspace The Seventh Year (A.D.\,1)}
-\vs p123 4:1 This was, indeed, an eventful year in Jesus’ life. Early in January a great snowstorm occurred in Galilee. Snow fell 60 cm deep, the heaviest snowfall Jesus saw during his lifetime and one of the deepest at Nazareth in 100 years.
+\vs p123 4:1 This was, indeed, an eventful year in Jesus’ life. Early in January a great snowstorm occurred in Galilee. Snow fell 60\,cm deep, the heaviest snowfall Jesus saw during his lifetime and one of the deepest at Nazareth in 100 years.
 \vs p123 4:2 The play life of Jewish children in the times of Jesus was rather circumscribed; all too often the children played at the more serious things they observed their elders doing. They played much at weddings and funerals, ceremonies which they so frequently saw and which were so spectacular. They danced and sang but had few organized games, such as children of later days so much enjoy.
 \vs p123 4:3 Jesus, in company with a neighbour boy and later his brother James, delighted to play in the far corner of the family carpenter shop, where they had great fun with the shavings and the blocks of wood. It was always difficult for Jesus to comprehend the harm of certain sorts of play which were forbidden on the Sabbath, but he never failed to conform to his parents’ wishes. He had a capacity for humour and play which was afforded little opportunity for expression in the environment of his day and generation, but up to the age of 14 he was cheerful and light\hyp{}hearted most of the time.
 \vs p123 4:4 Mary maintained a dovecote on top of the animal house adjoining the home, and they used the profits from the sale of doves as a special charity fund, which Jesus administered after he deducted the tithe and turned it over to the officer of the synagogue.
@@ -64,12 +64,12 @@
 \vs p123 5:9 \pc Throughout his years at the synagogue he was a brilliant student, possessing a great advantage since he was conversant with three languages. The Nazareth chazan, on the occasion of Jesus’ finishing the course in his school, remarked to Joseph that he feared he “had learned more from Jesus’ searching questions” than he had “been able to teach the lad.”
 \vs p123 5:10 Throughout his course of study Jesus learned much and derived great inspiration from the regular Sabbath sermons in the synagogue. It was customary to ask distinguished visitors, stopping over the Sabbath in Nazareth, to address the synagogue. As Jesus grew up, he heard many great thinkers of the entire Jewish world expound their views, and many also who were hardly orthodox Jews since the synagogue of Nazareth was an advanced and liberal centre of Hebrew thought and culture.
 \vs p123 5:11 When entering school at seven years (at this time the Jews had just inaugurated a compulsory education law), it was customary for the pupils to choose their “birthday text,” a sort of golden rule to guide them throughout their studies, one upon which they often expatiated at their graduation when 13 years old. The text which Jesus chose was from the Prophet Isaiah: “The spirit of the Lord God is upon me, for the Lord has anointed me; he has sent me to bring good news to the meek, to bind up the brokenhearted, to proclaim liberty to the captives, and to set the spiritual prisoners free.”
-\vs p123 5:12 \pc Nazareth was one of the 24 priest centres of the Hebrew nation. But the Galilean priesthood was more liberal in the interpretation of the traditional laws than were the Judean scribes and rabbis. And at Nazareth they were also more liberal regarding the observance of the Sabbath. It was therefore the custom for Joseph to take Jesus out for walks on Sabbath afternoons, one of their favourite jaunts being to climb the high hill near their home, from which they could obtain a panoramic view of all Galilee. To the north\hyp{}west, on clear days, they could see the long ridge of Mount Carmel running down to the sea; and many times Jesus heard his father relate the story of Elijah, one of the first of that long line of Hebrew prophets, who reproved Ahab and exposed the priests of Baal. To the north Mount Hermon raised its snowy peak in majestic splendour and monopolized the skyline, almost 900 m of the upper slopes glistening white with perpetual snow. Far to the east they could discern the Jordan valley and, far beyond, the rocky hills of Moab. Also to the south and the east, when the sun shone upon their marble walls, they could see the Gr\ae co\hyp{}Roman cities of the Decapolis, with their amphitheatres and pretentious temples. And when they lingered toward the going down of the sun, to the west they could make out the sailing vessels on the distant Mediterranean.\fnc{ \bibexpl{Informational: first printing; Far to the east they could discern the Jordan valley and, far beyond, the rocky hills of Moab. Also to the south and the east\ldots{} --- Punctuation and wording changes were rejected by the committee. The context for this sentence is the “panoramic view” from atop the Nazareth hill: Jesus and his father are standing on top of the hill and are moving their gaze from Mt. Carmel in the north\hyp{}west around an arc to the north, east, south and west. Mt. Hermon is to their north, and from springs in its foothills near Dan (north\hyp{}east of Nazareth) the Jordan valley extends to the Dead Sea in the south. Thus, as Jesus and Joseph follow the line of the river valley along the arc of their survey, as the Jordan approaches the Dead Sea, father and son “discern\ldots{}far beyond, the rocky hills of Moab.” This interpretation is further supported by the punctuation of the following sentence which does not read “Also, to the south and the east,\ldots{}” (suggesting a change in direction from the last reference), but rather, “Also to the south and the east,\ldots{}” which implies that the last referenced location (Moab) was in the same direction.}}
+\vs p123 5:12 \pc Nazareth was one of the 24 priest centres of the Hebrew nation. But the Galilean priesthood was more liberal in the interpretation of the traditional laws than were the Judean scribes and rabbis. And at Nazareth they were also more liberal regarding the observance of the Sabbath. It was therefore the custom for Joseph to take Jesus out for walks on Sabbath afternoons, one of their favourite jaunts being to climb the high hill near their home, from which they could obtain a panoramic view of all Galilee. To the north\hyp{}west, on clear days, they could see the long ridge of Mount Carmel running down to the sea; and many times Jesus heard his father relate the story of Elijah, one of the first of that long line of Hebrew prophets, who reproved Ahab and exposed the priests of Baal. To the north Mount Hermon raised its snowy peak in majestic splendour and monopolized the skyline, almost 900\,m of the upper slopes glistening white with perpetual snow. Far to the east they could discern the Jordan valley and, far beyond, the rocky hills of Moab. Also to the south and the east, when the sun shone upon their marble walls, they could see the Gr\ae co\hyp{}Roman cities of the Decapolis, with their amphitheatres and pretentious temples. And when they lingered toward the going down of the sun, to the west they could make out the sailing vessels on the distant Mediterranean.\fnc{ \bibexpl{Informational: first printing; Far to the east they could discern the Jordan valley and, far beyond, the rocky hills of Moab. Also to the south and the east\ldots{} --- Punctuation and wording changes were rejected by the committee. The context for this sentence is the “panoramic view” from atop the Nazareth hill: Jesus and his father are standing on top of the hill and are moving their gaze from Mt. Carmel in the north\hyp{}west around an arc to the north, east, south and west. Mt. Hermon is to their north, and from springs in its foothills near Dan (north\hyp{}east of Nazareth) the Jordan valley extends to the Dead Sea in the south. Thus, as Jesus and Joseph follow the line of the river valley along the arc of their survey, as the Jordan approaches the Dead Sea, father and son “discern\ldots{}far beyond, the rocky hills of Moab.” This interpretation is further supported by the punctuation of the following sentence which does not read “Also, to the south and the east,\ldots{}” (suggesting a change in direction from the last reference), but rather, “Also to the south and the east,\ldots{}” which implies that the last referenced location (Moab) was in the same direction.}}
 \vs p123 5:13 From four directions Jesus could observe the caravan trains as they wended their way in and out of Nazareth, and to the south he could overlook the broad and fertile plain country of Esdraelon, stretching off toward Mount Gilboa and Samaria.
 \vs p123 5:14 When they did not climb the heights to view the distant landscape, they strolled through the countryside and studied nature in her various moods in accordance with the seasons. Jesus’ earliest training, aside from that of the home hearth, had to do with a reverent and sympathetic contact with nature.
 \vs p123 5:15 \pc Before he was 8 years of age, he was known to all the mothers and young women of Nazareth, who had met him and talked with him at the spring, which was not far from his home, and which was one of the social centres of contact and gossip for the entire town. This year Jesus learned to milk the family cow and care for the other animals. During this and the following year he also learned to make cheese and to weave. When he was 10 years of age, he was an expert loom operator. It was about this time that Jesus and the neighbour boy Jacob became great friends of the potter who worked near the flowing spring; and as they watched Nathan’s deft fingers mould the clay on the potter’s wheel, many times both of them determined to be potters when they grew up. Nathan was very fond of the lads and often gave them clay to play with, seeking to stimulate their creative imaginations by suggesting competitive efforts in modelling various objects and animals.
 \usection{6.\bibnobreakspace His Eighth Year (A.D.\,2)}
-\vs p123 6:1 This was an interesting year at school. Although Jesus was not an unusual student, he was a diligent pupil and belonged to the more progressive third of the class, doing his work so well that he was excused from attendance one week out of each month. This week he usually spent either with his fisherman uncle on the shores of the Sea of Galilee near Magdala or on the farm of another uncle (his mother’s brother) 8 km south of Nazareth.
+\vs p123 6:1 This was an interesting year at school. Although Jesus was not an unusual student, he was a diligent pupil and belonged to the more progressive third of the class, doing his work so well that he was excused from attendance one week out of each month. This week he usually spent either with his fisherman uncle on the shores of the Sea of Galilee near Magdala or on the farm of another uncle (his mother’s brother) 8\,km south of Nazareth.
 \vs p123 6:2 Although his mother had become unduly anxious about his health and safety, she gradually became reconciled to these trips away from home. Jesus’ uncles and aunts were all very fond of him, and there ensued a lively competition among them to secure his company for these monthly visits throughout this and immediately subsequent years. His first week’s sojourn on his uncle’s farm (since infancy) was in January of this year; the first week’s fishing experience on the Sea of Galilee occurred in the month of May.
 \vs p123 6:3 About this time Jesus met a teacher of mathematics from Damascus, and learning some new techniques of numbers, he spent much time on mathematics for several years. He developed a keen sense of numbers, distances, and proportions.
 \vs p123 6:4 Jesus began to enjoy his brother James very much and by the end of this year had begun to teach him the alphabet.
