--- a/tex/p124.tex
+++ b/tex/p124.tex
@@ -13,7 +13,7 @@
 \vs p124 1:9 The climate of Nazareth was not severe. January was the coldest month, the temperature averaging around 10°\,C. During July and August, the hottest months, the temperature would vary from 24° to 32°\,C. From the mountains to the Jordan and the Dead Sea valley the climate of Palestine ranged from the frigid to the torrid. And so, in a way, the Jews were prepared to live in about any and all of the world’s varying climates.
 \vs p124 1:10 Even during the warmest summer months a cool sea breeze usually blew from the west from 10:00 until about 22:00. But every now and then terrific hot winds from the eastern desert would blow across all Palestine. These hot blasts usually came in February and March, near the end of the rainy season. In those days the rain fell in refreshing showers from November to April, but it did not rain steadily. There were only two seasons in Palestine, summer and winter, the dry and rainy seasons. In January the flowers began to bloom, and by the end of April the whole land was one vast flower garden.
 \vs p124 1:11 \pc In May of this year, on his uncle’s farm, Jesus for the first time helped with the harvest of the grain. Before he was 13, he had managed to find out something about practically everything that men and women worked at around Nazareth except metal working, and he spent several months in a smith’s shop when older, after the death of his father.
-\vs p124 1:12 When work and caravan travel were slack, Jesus made many trips with his father on pleasure or business to near\hyp{}by Cana, Endor, and Nain. Even as a lad he frequently visited Sepphoris, only a little over 4.9 km from Nazareth to the north\hyp{}west, and from 4\,B.C. to about A.D.\,25 the capital of Galilee and one of the residences of Herod Antipas.
+\vs p124 1:12 When work and caravan travel were slack, Jesus made many trips with his father on pleasure or business to near\hyp{}by Cana, Endor, and Nain. Even as a lad he frequently visited Sepphoris, only a little over 4.9\,km from Nazareth to the north\hyp{}west, and from 4\,B.C. to about A.D.\,25 the capital of Galilee and one of the residences of Herod Antipas.
 \vs p124 1:13 Jesus continued to grow physically, intellectually, socially, and spiritually. His trips away from home did much to give him a better and more generous understanding of his own family, and by this time even his parents were beginning to learn from him as well as to teach him. Jesus was an original thinker and a skillful teacher, even in his youth. He was in constant collision with the so\hyp{}called “oral law,” but he always sought to adapt himself to the practices of his family. He got along fairly well with the children of his age, but he often grew discouraged with their slow\hyp{}acting minds. Before he was ten years old, he had become the leader of a group of seven lads who formed themselves into a society for promoting the acquirements of manhood --- physical, intellectual, and religious. Among these boys Jesus succeeded in introducing many new games and various improved methods of physical recreation.
 \usection{2.\bibnobreakspace The Tenth Year (A.D.\,4)}
 \vs p124 2:1 It was the fifth of July, the first Sabbath of the month, when Jesus, while strolling through the countryside with his father, first gave expression to feelings and ideas which indicated that he was becoming self\hyp{}conscious of the unusual nature of his life mission. Joseph listened attentively to the momentous words of his son but made few comments; he volunteered no information. The next day Jesus had a similar but longer talk with his mother. Mary likewise listened to the pronouncements of the lad, but neither did she volunteer any information. It was almost two years before Jesus again spoke to his parents concerning this increasing revelation within his own consciousness regarding the nature of his personality and the character of his mission on earth.
@@ -61,7 +61,7 @@
 \vs p124 6:4 As they rounded the base of Gilboa, the pilgrims could see the Greek city of Scythopolis on the right. They gazed upon the marble structures from a distance but went not near the gentile city lest they so defile themselves that they could not participate in the forthcoming solemn and sacred ceremonies of the Passover at Jerusalem. Mary could not understand why neither Joseph nor Jesus would speak of Scythopolis. She did not know about their controversy of the previous year as they had never revealed this episode to her.
 \vs p124 6:5 The road now led immediately down into the tropical Jordan valley, and soon Jesus was to have exposed to his wondering gaze the crooked and ever\hyp{}winding Jordan with its glistening and rippling waters as it flowed down toward the Dead Sea. They laid aside their outer garments as they journeyed south in this tropical valley, enjoying the luxurious fields of grain and the beautiful oleanders laden with their pink blossoms, while massive snow\hyp{}capped Mount Hermon stood far to the north, in majesty looking down on the historic valley. A little over three hours’ travel from opposite Scythopolis they came upon a bubbling spring, and here they camped for the night, out under the starlit heavens.
 \vs p124 6:6 \pc On their second day’s journey they passed by where the Jabbok, from the east, flows into the Jordan, and looking east up this river valley, they recounted the days of Gideon, when the Midianites poured into this region to overrun the land. Toward the end of the second day’s journey they camped near the base of the highest mountain overlooking the Jordan valley, Mount Sartaba, whose summit was occupied by the Alexandrian fortress where Herod had imprisoned one of his wives and buried his two strangled sons.
-\vs p124 6:7 The third day they passed by two villages which had been recently built by Herod and noted their superior architecture and their beautiful palm gardens. By nightfall they reached Jericho, where they remained until the morrow. That evening Joseph, Mary, and Jesus walked 2.4 km to the site of the ancient Jericho, where Joshua, for whom Jesus was named, had performed his renowned exploits, according to Jewish tradition.
+\vs p124 6:7 The third day they passed by two villages which had been recently built by Herod and noted their superior architecture and their beautiful palm gardens. By nightfall they reached Jericho, where they remained until the morrow. That evening Joseph, Mary, and Jesus walked 2.4\,km to the site of the ancient Jericho, where Joshua, for whom Jesus was named, had performed his renowned exploits, according to Jewish tradition.
 \vs p124 6:8 By the fourth and last day’s journey the road was a continuous procession of pilgrims. They now began to climb the hills leading up to Jerusalem. As they neared the top, they could look across the Jordan to the mountains beyond and south over the sluggish waters of the Dead Sea. About halfway up to Jerusalem, Jesus gained his first view of the Mount of Olives (the region to be so much a part of his subsequent life), and Joseph pointed out to him that the Holy City lay just beyond this ridge, and the lad’s heart beat fast with joyous anticipation of soon beholding the city and house of his heavenly Father.
 \vs p124 6:9 On the eastern slopes of Olivet they paused for rest in the borders of a little village called Bethany. The hospitable villagers poured forth to minister to the pilgrims, and it happened that Joseph and his family had stopped near the house of one Simon, who had three children about the same age as Jesus --- Mary, Martha, and Lazarus. They invited the Nazareth family in for refreshment, and a lifelong friendship sprang up between the two families. Many times afterwards, in his eventful life, Jesus stopped in this home.
 \vs p124 6:10 They pressed on, soon standing on the brink of Olivet, and Jesus saw for the first time (in his memory) the Holy City, the pretentious palaces, and the inspiring temple of his Father. At no time in his life did Jesus ever experience such a purely human thrill as that which at this time so completely enthralled him as he stood there on this April afternoon on the Mount of Olives, drinking in his first view of Jerusalem. And in after years, on this same spot he stood and wept over the city which was about to reject another prophet, the last and the greatest of her heavenly teachers.
