--- a/tex/p133.tex
+++ b/tex/p133.tex
@@ -20,7 +20,7 @@
 \vs p133 3:1 By the time they reached Corinth, Ganid was becoming very much interested in the Jewish religion, and so it was not strange that, one day as they passed the synagogue and saw the people going in, he requested Jesus to take him to the service. That day they heard a learned rabbi discourse on the “Destiny of Israel,” and after the service they met one Crispus, the chief ruler of this synagogue. Many times they went back to the synagogue services, but chiefly to meet Crispus. Ganid grew to be very fond of Crispus, his wife, and their family of five children. He much enjoyed observing how a Jew conducted his family life.
 \vs p133 3:2 While Ganid studied family life, Jesus was teaching Crispus the better ways of religious living. Jesus held more than 20 sessions with this forward\hyp{}looking Jew; and it is not surprising, years afterwards, when Paul was preaching in this very synagogue, and when the Jews had rejected his message and had voted to forbid his further preaching in the synagogue, and when he then went to the gentiles, that Crispus with his entire family embraced the new religion, and that he became one of the chief supports of the Christian church which Paul subsequently organized at Corinth.
 \vs p133 3:3 During the 18 months Paul preached in Corinth, being later joined by Silas and Timothy, he met many others who had been taught by the “Jewish tutor of the son of an Indian merchant.”
-\vs p133 3:4 At Corinth they met people of every race hailing from three continents. Next to Alexandria and Rome, it was the most cosmopolitan city of the Mediterranean empire. There was much to attract one’s attention in this city, and Ganid never grew weary of visiting the citadel which stood almost 600 m above the sea. He also spent a great deal of his spare time about the synagogue and in the home of Crispus. He was at first shocked, and later on charmed, by the status of woman in the Jewish home; it was a revelation to this young Indian.
+\vs p133 3:4 At Corinth they met people of every race hailing from three continents. Next to Alexandria and Rome, it was the most cosmopolitan city of the Mediterranean empire. There was much to attract one’s attention in this city, and Ganid never grew weary of visiting the citadel which stood almost 600\,m above the sea. He also spent a great deal of his spare time about the synagogue and in the home of Crispus. He was at first shocked, and later on charmed, by the status of woman in the Jewish home; it was a revelation to this young Indian.
 \vs p133 3:5 Jesus and Ganid were often guests in another Jewish home, that of Justus, a devout merchant, who lived alongside the synagogue. And many times, subsequently, when the Apostle Paul sojourned in this home, did he listen to the recounting of these visits with the Indian lad and his Jewish tutor, while both Paul and Justus wondered whatever became of such a wise and brilliant Hebrew teacher.
 \vs p133 3:6 When in Rome, Ganid observed that Jesus refused to accompany them to the public baths. Several times afterwards the young man sought to induce Jesus further to express himself in regard to the relations of the sexes. Though he would answer the lad’s questions, he never seemed disposed to discuss these subjects at great length. One evening as they strolled about Corinth out near where the wall of the citadel ran down to the sea, they were accosted by two public women. Ganid had imbibed the idea, and rightly, that Jesus was a man of high ideals, and that he abhorred everything which partook of uncleanness or savoured of evil; accordingly he spoke sharply to these women and rudely motioned them away. When Jesus saw this, he said to Ganid: \textcolour{ubdarkred}{“You mean well, but you should not presume thus to speak to the children of God, even though they chance to be his erring children. Who are we that we should sit in judgment on these women? Do you happen to know all of the circumstances which led them to resort to such methods of obtaining a livelihood? Stop here with me while we talk about these matters.”} The courtesans were astonished at what he said even more than was Ganid.
 \vs p133 3:7 As they stood there in the moonlight, Jesus went on to say: \textcolour{ubdarkred}{“There lives within every human mind a divine spirit, the gift of the Father in heaven. This good spirit ever strives to lead us to God, to help us to find God and to know God; but also within mortals there are many natural physical tendencies which the Creator put there to serve the well\hyp{}being of the individual and the race. Now, oftentimes, men and women become confused in their efforts to understand themselves and to grapple with the manifold difficulties of making a living in a world so largely dominated by selfishness and sin. I perceive, Ganid, that neither of these women is wilfully wicked. I can tell by their faces that they have experienced much sorrow; they have suffered much at the hands of an apparently cruel fate; they have not intentionally chosen this sort of life; they have, in discouragement bordering on despair, surrendered to the pressure of the hour and accepted this distasteful means of obtaining a livelihood as the best way out of a situation that to them appeared hopeless. Ganid, some people are really wicked at heart; they deliberately choose to do mean things, but, tell me, as you look into these now tear\hyp{}stained faces, do you see anything bad or wicked?”} And as Jesus paused for his reply, Ganid’s voice choked up as he stammered out his answer: “No, Teacher, I do not. And I apologize for my rudeness to them --- I crave their forgiveness.” Then said Jesus: \textcolour{ubdarkred}{“And I bespeak for them that they have forgiven you as I speak for my Father in heaven that he has forgiven them. Now all of you come with me to a friend’s house where we will seek refreshment and plan for the new and better life ahead.”} Up to this time the amazed women had not uttered a word; they looked at each other and silently followed as the men led the way.
@@ -45,7 +45,7 @@
 \vs p133 4:11 \pc To the runaway lad Jesus said: \textcolour{ubdarkred}{“Remember, there are two things you cannot run away from --- God and yourself. Wherever you may go, you take with you yourself and the spirit of the heavenly Father which lives within your heart. My son, stop trying to deceive yourself; settle down to the courageous practice of facing the facts of life; lay firm hold on the assurances of sonship with God and the certainty of eternal life, as I have instructed you. From this day on purpose to be a real man, a man determined to face life bravely and intelligently.”}
 \vs p133 4:12 \pc To the condemned criminal he said at the last hour: \textcolour{ubdarkred}{“My brother, you have fallen on evil times. You lost your way; you became entangled in the meshes of crime. From talking to you, I well know you did not plan to do the thing which is about to cost you your temporal life. But you did do this evil, and your fellows have adjudged you guilty; they have determined that you shall die. You or I may not deny the state this right of self\hyp{}defence in the manner of its own choosing. There seems to be no way of humanly escaping the penalty of your wrongdoing. Your fellows must judge you by what you did, but there is a Judge to whom you may appeal for forgiveness, and who will judge you by your real motives and better intentions. You need not fear to meet the judgment of God if your repentance is genuine and your faith sincere. The fact that your error carries with it the death penalty imposed by man does not prejudice the chance of your soul to obtain justice and enjoy mercy before the heavenly courts.”}
 \vs p133 4:13 \pc Jesus enjoyed many intimate talks with a large number of hungry souls, too many to find a place in this record. The three travellers enjoyed their sojourn in Corinth. Excepting Athens, which was more renowned as an educational centre, Corinth was the most important city in Greece during these Roman times, and their two months’ stay in this thriving commercial centre afforded opportunity for all three of them to gain much valuable experience. Their sojourn in this city was one of the most interesting of all their stops on the way back from Rome.
-\vs p133 4:14 Gonod had many interests in Corinth, but finally his business was finished, and they prepared to sail for Athens. They travelled on a small boat which could be carried overland on a land track from one of Corinth’s harbours to the other, a distance of 16 km.
+\vs p133 4:14 Gonod had many interests in Corinth, but finally his business was finished, and they prepared to sail for Athens. They travelled on a small boat which could be carried overland on a land track from one of Corinth’s harbours to the other, a distance of 16\,km.
 \usection{5.\bibnobreakspace At Athens --- Discourse on Science}
 \vs p133 5:1 They shortly arrived at the olden centre of Greek science and learning, and Ganid was thrilled with the thought of being in Athens, of being in Greece, the cultural centre of the onetime Alexandrian empire, which had extended its borders even to his own land of India. There was little business to transact; so Gonod spent most of his time with Jesus and Ganid, visiting the many points of interest and listening to the interesting discussions of the lad and his versatile teacher.
 \vs p133 5:2 A great university still thrived in Athens, and the trio made frequent visits to its halls of learning. Jesus and Ganid had thoroughly discussed the teachings of Plato when they attended the lectures in the museum at Alexandria. They all enjoyed the art of Greece, examples of which were still to be found here and there about the city.
@@ -60,7 +60,7 @@
 \vs p133 5:11 \pc They were all more than astounded at the words of Jesus, and when the Greek took leave of them, he said: “At last my eyes have beheld a Jew who thinks something besides racial superiority and talks something besides religion.” And they retired for the night.
 \vs p133 5:12 The sojourn in Athens was pleasant and profitable, but it was not particularly fruitful in its human contacts. Too many of the Athenians of that day were either intellectually proud of their reputation of another day or mentally stupid and ignorant, being the offspring of the inferior slaves of those earlier periods when there was glory in Greece and wisdom in the minds of its people. Even then, there were still many keen minds to be found among the citizens of Athens.
 \usection{6.\bibnobreakspace At Ephesus --- Discourse on the Soul}
-\vs p133 6:1 On leaving Athens, the travellers went by way of Troas to Ephesus, the capital of the Roman province of Asia. They made many trips out to the famous temple of Artemis of the Ephesians, about 3 km from the city. Artemis was the most famous goddess of all Asia Minor and a perpetuation of the still earlier mother goddess of ancient Anatolian times. The crude idol exhibited in the enormous temple dedicated to her worship was reputed to have fallen from heaven. Not all of Ganid’s early training to respect images as symbols of divinity had been eradicated, and he thought it best to purchase a little silver shrine in honour of this fertility goddess of Asia Minor. That night they talked at great length about the worship of things made with human hands.
+\vs p133 6:1 On leaving Athens, the travellers went by way of Troas to Ephesus, the capital of the Roman province of Asia. They made many trips out to the famous temple of Artemis of the Ephesians, about 3\,km from the city. Artemis was the most famous goddess of all Asia Minor and a perpetuation of the still earlier mother goddess of ancient Anatolian times. The crude idol exhibited in the enormous temple dedicated to her worship was reputed to have fallen from heaven. Not all of Ganid’s early training to respect images as symbols of divinity had been eradicated, and he thought it best to purchase a little silver shrine in honour of this fertility goddess of Asia Minor. That night they talked at great length about the worship of things made with human hands.
 \vs p133 6:2 On the third day of their stay they walked down by the river to observe the dredging of the harbour’s mouth. At noon they talked with a young Phoenician who was homesick and much discouraged; but most of all he was envious of a certain young man who had received promotion over his head. Jesus spoke comforting words to him and quoted the olden Hebrew proverb: \textcolour{ubdarkred}{“A man’s gift makes room for him and brings him before great men.”}
 \vs p133 6:3 Of all the large cities they visited on this tour of the Mediterranean, they here accomplished the least of value to the subsequent work of the Christian missionaries. Christianity secured its start in Ephesus largely through the efforts of Paul, who resided here more than two years, making tents for a living and conducting lectures on religion and philosophy each night in the main audience chamber of the school of Tyrannus.
 \vs p133 6:4 There was a progressive thinker connected with this local school of philosophy, and Jesus had several profitable sessions with him. In the course of these talks Jesus had repeatedly used the word “soul.” This learned Greek finally asked him what he meant by “soul,” and he replied:
