--- a/tex/p134.tex
+++ b/tex/p134.tex
@@ -82,7 +82,7 @@
 \vs p134 7:6 The indwelling Thought Adjuster now led Jesus to forsake the dwelling places of men and betake himself up to Mount Hermon that he might finish his work of mastering his human mind and complete the task of effecting his full consecration to the remainder of his lifework on earth.
 \vs p134 7:7 This was one of those unusual and extraordinary epochs in the Master’s earth life on Urantia. Another and very similar one was the experience he passed through when alone in the hills near Pella just subsequent to his baptism. This period of isolation on Mount Hermon marked the termination of his purely human career, that is, the technical termination of the mortal bestowal, while the later isolation marked the beginning of the more divine phase of the bestowal. And Jesus lived alone with God for six weeks on the slopes of Mount Hermon.
 \usection{8.\bibnobreakspace The Sojourn on Mount Hermon}
-\vs p134 8:1 After spending some time in the vicinity of Caesarea\hyp{}Philippi, Jesus made ready his supplies, and securing a beast of burden and a lad named Tiglath, he proceeded along the Damascus road to a village sometime known as Beit Jenn in the foothills of Mount Hermon. Here, near the middle of August, A.D.\,25, he established his headquarters, and leaving his supplies in the custody of Tiglath, he ascended the lonely slopes of the mountain. Tiglath accompanied Jesus this first day up the mountain to a designated point about 1.8 km above sea level, where they built a stone container in which Tiglath was to deposit food twice a week.
+\vs p134 8:1 After spending some time in the vicinity of Caesarea\hyp{}Philippi, Jesus made ready his supplies, and securing a beast of burden and a lad named Tiglath, he proceeded along the Damascus road to a village sometime known as Beit Jenn in the foothills of Mount Hermon. Here, near the middle of August, A.D.\,25, he established his headquarters, and leaving his supplies in the custody of Tiglath, he ascended the lonely slopes of the mountain. Tiglath accompanied Jesus this first day up the mountain to a designated point about 1.8\,km above sea level, where they built a stone container in which Tiglath was to deposit food twice a week.
 \vs p134 8:2 The first day, after he had left Tiglath, Jesus had ascended the mountain only a short way when he paused to pray. Among other things he asked his Father to send back the guardian seraphim to \textcolour{ubdarkred}{“be with Tiglath.”} He requested that he be permitted to go up to his last struggle with the realities of mortal existence alone. And his request was granted. He went into the great test with only his indwelling Adjuster to guide and sustain him.
 \vs p134 8:3 \pc Jesus ate frugally while on the mountain; he abstained from all food only a day or two at a time. The superhuman beings who confronted him on this mountain, and with whom he wrestled in spirit, and whom he defeated in power, were \bibemph{real;} they were his archenemies in the system of Satania; they were not phantasms of the imagination evolved out of the intellectual vagaries of a weakened and starving mortal who could not distinguish reality from the visions of a disordered mind.
 \vs p134 8:4 Jesus spent the last three weeks of August and the first three weeks of September on Mount Hermon. During these weeks he finished the mortal task of achieving the circles of mind\hyp{}understanding and personality\hyp{}control. Throughout this period of communion with his heavenly Father the indwelling Adjuster also completed the assigned services. The mortal goal of this earth creature was there attained. Only the final phase of mind and Adjuster attunement remained to be consummated.
