--- a/tex/p135.tex
+++ b/tex/p135.tex
@@ -1,7 +1,7 @@
 \upaper{135}{John the Baptist}
 \author{Midwayer Commission}
 \vs p135 0:1 John the Baptist was born March 25, 7\,B.C., in accordance with the promise that Gabriel made to Elizabeth in June of the previous year. For five months Elizabeth kept secret Gabriel’s visitation; and when she told her husband, Zacharias, he was greatly troubled and fully believed her narrative only after he had an unusual dream about six weeks before the birth of John. Excepting the visit of Gabriel to Elizabeth and the dream of Zacharias, there was nothing unusual or supernatural connected with the birth of John the Baptist.
-\vs p135 0:2 On the eighth day John was circumcised according to the Jewish custom. He grew up as an ordinary child, day by day and year by year, in the small village known in those days as the City of Judah, about 6.4 km west of Jerusalem.
+\vs p135 0:2 On the eighth day John was circumcised according to the Jewish custom. He grew up as an ordinary child, day by day and year by year, in the small village known in those days as the City of Judah, about 6.4\,km west of Jerusalem.
 \vs p135 0:3 The most eventful occurrence in John’s early childhood was the visit, in company with his parents, to Jesus and the Nazareth family. This visit occurred in the month of June, 1\,B.C., when he was a little over 6 years of age.
 \vs p135 0:4 After their return from Nazareth John’s parents began the systematic education of the lad. There was no synagogue school in this little village; however, as he was a priest, Zacharias was fairly well educated, and Elizabeth was far better educated than the average Judean woman; she was also of the priesthood, being a descendant of the “daughters of Aaron.” Since John was an only child, they spent a great deal of time on his mental and spiritual training. Zacharias had only short periods of service at the temple in Jerusalem so that he devoted much of his time to teaching his son.
 \vs p135 0:5 Zacharias and Elizabeth had a small farm on which they raised sheep. They hardly made a living on this land, but Zacharias received a regular allowance from the temple funds dedicated to the priesthood.
@@ -9,7 +9,7 @@
 \vs p135 1:1 John had no school from which to graduate at the age of 14, but his parents had selected this as the appropriate year for him to take the formal Nazarite vow. Accordingly, Zacharias and Elizabeth took their son to Engedi, down by the Dead Sea. This was the southern headquarters of the Nazarite brotherhood, and there the lad was duly and solemnly inducted into this order for life. After these ceremonies and the making of the vows to abstain from all intoxicating drinks, to let the hair grow, and to refrain from touching the dead, the family proceeded to Jerusalem, where, before the temple, John completed the making of the offerings which were required of those taking Nazarite vows.
 \vs p135 1:2 John took the same life vows that had been administered to his illustrious predecessors, Samson and the prophet Samuel. A life Nazarite was looked upon as a sanctified and holy personality. The Jews regarded a Nazarite with almost the respect and veneration accorded the high priest, and this was not strange since Nazarites of lifelong consecration were the only persons, except high priests, who were ever permitted to enter the holy of holies in the temple.
 \vs p135 1:3 \pc John returned home from Jerusalem to tend his father’s sheep and grew up to be a strong man with a noble character.
-\vs p135 1:4 When 16 years old, John, as a result of reading about Elijah, became greatly impressed with the prophet of Mount Carmel and decided to adopt his style of dress. From that day on John always wore a hairy garment with a leather girdle. At 16 he was more than 1.8 m tall and almost full grown. With his flowing hair and peculiar mode of dress he was indeed a picturesque youth. And his parents expected great things of this their only son, a child of promise and a Nazarite for life.
+\vs p135 1:4 When 16 years old, John, as a result of reading about Elijah, became greatly impressed with the prophet of Mount Carmel and decided to adopt his style of dress. From that day on John always wore a hairy garment with a leather girdle. At 16 he was more than 1.8\,m tall and almost full grown. With his flowing hair and peculiar mode of dress he was indeed a picturesque youth. And his parents expected great things of this their only son, a child of promise and a Nazarite for life.
 \usection{2.\bibnobreakspace The Death of Zacharias}
 \vs p135 2:1 After an illness of several months Zacharias died in July, A.D.\,12, when John was just past 18 years of age. This was a time of great embarrassment to John since the Nazarite vow forbade contact with the dead, even in one’s own family. Although John had endeavoured to comply with the restrictions of his vow regarding contamination by the dead, he doubted that he had been wholly obedient to the requirements of the Nazarite order; therefore, after his father’s burial he went to Jerusalem, where, in the Nazarite corner of the women’s court, he offered the sacrifices required for his cleansing.
 \vs p135 2:2 \pc In September of this year Elizabeth and John made a journey to Nazareth to visit Mary and Jesus. John had just about made up his mind to launch out in his lifework, but he was admonished, not only by Jesus’ words but also by his example, to return home, take care of his mother, and await the “coming of the Father’s hour.” After bidding Jesus and Mary good\hyp{}bye at the end of this enjoyable visit, John did not again see Jesus until the event of his baptism in the Jordan.
