--- a/tex/p147.tex
+++ b/tex/p147.tex
@@ -44,7 +44,7 @@
 \usection{6.\bibnobreakspace Returning to Capernaum}
 \vs p147 6:1 The last week of April, Jesus and the 12 departed from their Bethany headquarters near Jerusalem and began their journey back to Capernaum by way of Jericho and the Jordan.
 \vs p147 6:2 The chief priests and the religious leaders of the Jews held many secret meetings for the purpose of deciding what to do with Jesus. They were all agreed that something should be done to put a stop to his teaching, but they could not agree on the method. They had hoped that the civil authorities would dispose of him as Herod had put an end to John, but they discovered that Jesus was so conducting his work that the Roman officials were not much alarmed by his preaching. Accordingly, at a meeting which was held the day before Jesus’ departure for Capernaum, it was decided that he would have to be apprehended on a religious charge and be tried by the Sanhedrin. Therefore a commission of six secret spies was appointed to follow Jesus, to observe his words and acts, and when they had amassed sufficient evidence of lawbreaking and blasphemy, to return to Jerusalem with their report. These six Jews caught up with the apostolic party, numbering about 30, at Jericho and, under the pretense of desiring to become disciples, attached themselves to Jesus’ family of followers, remaining with the group up to the time of the beginning of the second preaching tour in Galilee; whereupon three of them returned to Jerusalem to submit their report to the chief priests and the Sanhedrin.
-\vs p147 6:3 \pc Peter preached to the assembled multitude at the crossing of the Jordan, and the following morning they moved up the river toward Amathus. They wanted to proceed straight on to Capernaum, but such a crowd gathered here they remained three days, preaching, teaching, and baptizing. They did not move toward home until early Sabbath morning, the first day of May. The Jerusalem spies were sure they would now secure their first charge against Jesus --- that of Sabbath breaking --- since he had presumed to start his journey on the Sabbath day. But they were doomed to disappointment because, just before their departure, Jesus called Andrew into his presence and before them all instructed him to proceed for a distance of only 914 m, the legal Jewish Sabbath day’s journey.
+\vs p147 6:3 \pc Peter preached to the assembled multitude at the crossing of the Jordan, and the following morning they moved up the river toward Amathus. They wanted to proceed straight on to Capernaum, but such a crowd gathered here they remained three days, preaching, teaching, and baptizing. They did not move toward home until early Sabbath morning, the first day of May. The Jerusalem spies were sure they would now secure their first charge against Jesus --- that of Sabbath breaking --- since he had presumed to start his journey on the Sabbath day. But they were doomed to disappointment because, just before their departure, Jesus called Andrew into his presence and before them all instructed him to proceed for a distance of only 914\,m, the legal Jewish Sabbath day’s journey.
 \vs p147 6:4 But the spies did not have long to wait for their opportunity to accuse Jesus and his associates of Sabbath breaking. As the company passed along the narrow road, the waving wheat, which was just then ripening, was near at hand on either side, and some of the apostles, being hungry, plucked the ripe grain and ate it. It was customary for travellers to help themselves to grain as they passed along the road, and therefore no thought of wrongdoing was attached to such conduct. But the spies seized upon this as a pretext for assailing Jesus. When they saw Andrew rub the grain in his hand, they went up to him and said: “Do you not know that it is unlawful to pluck and rub the grain on the Sabbath day?” And Andrew answered: “But we are hungry and rub only sufficient for our needs; and since when did it become sinful to eat grain on the Sabbath day?” But the Pharisees answered: “You do no wrong in eating, but you do break the law in plucking and rubbing out the grain between your hands; surely your Master would not approve of such acts.” Then said Andrew: “But if it is not wrong to eat the grain, surely the rubbing out between our hands is hardly more work than the chewing of the grain, which you allow; wherefore do you quibble over such trifles?” When Andrew intimated that they were quibblers, they were indignant, and rushing back to where Jesus walked along, talking to Matthew, they protested, saying: “Behold, Teacher, your apostles do that which is unlawful on the Sabbath day; they pluck, rub, and eat the grain. We are sure you will command them to cease.” And then said Jesus to the accusers: \textcolour{ubdarkred}{“You are indeed zealous for the law, and you do well to remember the Sabbath day to keep it holy; but did you never read in the Scripture that, one day when David was hungry, he and they who were with him entered the house of God and ate the showbread, which it was not lawful for anyone to eat save the priests? and David also gave this bread to those who were with him. And have you not read in our law that it is lawful to do many needful things on the Sabbath day? And shall I not, before the day is finished, see you eat that which you have brought along for the needs of this day? My good men, you do well to be zealous for the Sabbath, but you would do better to guard the health and well\hyp{}being of your fellows. I declare that the Sabbath was made for man and not man for the Sabbath. And if you are here present with us to watch my words, then will I openly proclaim that the Son of Man is lord even of the Sabbath.”}
 \vs p147 6:5 The Pharisees were astonished and confounded by his words of discernment and wisdom. For the remainder of the day they kept by themselves and dared not ask any more questions.
 \vs p147 6:6 \pc Jesus’ antagonism to the Jewish traditions and slavish ceremonials was always \bibemph{positive.} It consisted in what he did and in what he affirmed. The Master spent little time in negative denunciations. He taught that those who know God can enjoy the liberty of living without deceiving themselves by the licenses of sinning. Said Jesus to the apostles: \textcolour{ubdarkred}{“Men\fnst{\textbf{Men, if \ldots\ breakers of the law.}, These words of Jesus are preserved (albeit in a modified form) only in the Codex Bezae Cantabrigiensis (V c.) at Luke 6:4 \textgreek{``Τη αυτη ημερα θεασαμενος τινα εργαζομενον τω σαββατω, ειπεν αυτω, Ανθρωπε, ει μεν οιδας τι ποιεις μακαριος ει; ει δε μη οιδας επικαταρατος, και παραβατης ει του νομου.''}, or, translated into English, ``On the same day, seeing one working on the Sabbath, he said unto him, Man, if indeed thou knowest what thou dost, blessed art thou; but if thou knowest not, thou art cursed, and art a transgressor of the law.''}, if you are enlightened by the truth and really know what you are doing, you are blessed; but if you know not the divine way, you are unfortunate and already breakers of the law.”}
