--- a/tex/p151.tex
+++ b/tex/p151.tex
@@ -44,8 +44,8 @@
 \vs p151 4:7 \pc Many other parables spoke Jesus to the multitudes. In fact, from this time forward he seldom taught the masses except by this means. After speaking to a public audience in parables, he would, during the evening classes, more fully and explicitly expound his teachings to the apostles and the evangelists.
 \usection{5.\bibnobreakspace The Visit to Kheresa}
 \vs p151 5:1 The multitude continued to increase throughout the week. On Sabbath Jesus hastened away to the hills, but when Sunday morning came, the crowds returned. Jesus spoke to them in the early afternoon after the preaching of Peter, and when he had finished, he said to his apostles: \textcolour{ubdarkred}{“I am weary of the throngs; let us cross over to the other side that we may rest for a day.”}
-\vs p151 5:2 On the way across the lake they encountered one of those violent and sudden windstorms which are characteristic of the Sea of Galilee, especially at this season of the year. This body of water is almost 210 m below the level of the sea and is surrounded by high banks, especially on the west. There are steep gorges leading up from the lake into the hills, and as the heated air rises in a pocket over the lake during the day, there is a tendency after sunset for the cooling air of the gorges to rush down upon the lake. These gales come on quickly and sometimes go away just as suddenly.
-\vs p151 5:3 It was just such an evening gale that caught the boat carrying Jesus over to the other side on this Sunday evening. Three other boats containing some of the younger evangelists were trailing after. This tempest was severe, notwithstanding that it was confined to this region of the lake, there being no evidence of a storm on the western shore. The wind was so strong that the waves began to wash over the boat. The high wind had torn the sail away before the apostles could furl it, and they were now entirely dependent on their oars as they laboriously pulled for the shore, a little more than 2.4 km distant.
+\vs p151 5:2 On the way across the lake they encountered one of those violent and sudden windstorms which are characteristic of the Sea of Galilee, especially at this season of the year. This body of water is almost 210\,m below the level of the sea and is surrounded by high banks, especially on the west. There are steep gorges leading up from the lake into the hills, and as the heated air rises in a pocket over the lake during the day, there is a tendency after sunset for the cooling air of the gorges to rush down upon the lake. These gales come on quickly and sometimes go away just as suddenly.
+\vs p151 5:3 It was just such an evening gale that caught the boat carrying Jesus over to the other side on this Sunday evening. Three other boats containing some of the younger evangelists were trailing after. This tempest was severe, notwithstanding that it was confined to this region of the lake, there being no evidence of a storm on the western shore. The wind was so strong that the waves began to wash over the boat. The high wind had torn the sail away before the apostles could furl it, and they were now entirely dependent on their oars as they laboriously pulled for the shore, a little more than 2.4\,km distant.
 \vs p151 5:4 Meanwhile Jesus lay asleep in the stern of the boat under a small overhead shelter. The Master was weary when they left Bethsaida, and it was to secure rest that he had directed them to sail him across to the other side. These ex\hyp{}fishermen were strong and experienced oarsmen, but this was one of the worst gales they had ever encountered. Although the wind and the waves tossed their boat about as though it were a toy ship, Jesus slumbered on undisturbed. Peter was at the right\hyp{}hand oar near the stern. When the boat began to fill with water, he dropped his oar and, rushing over to Jesus, shook him vigorously in order to awaken him, and when he was aroused, Peter said: “Master, don’t you know we are in a violent storm? If you do not save us, we will all perish.”
 \vs p151 5:5 As Jesus came out in the rain, he looked first at Peter, and then peering into the darkness at the struggling oarsmen, he turned his glance back upon Simon Peter, who, in his agitation, had not yet returned to his oar, and said: \textcolour{ubdarkred}{“Why are all of you so filled with fear? Where is your faith? Peace, be quiet.”} Jesus had hardly uttered this rebuke to Peter and the other apostles, he had hardly bidden Peter seek peace wherewith to quiet his troubled soul, when the disturbed atmosphere, having established its equilibrium, settled down into a great calm. The angry waves almost immediately subsided, while the dark clouds, having spent themselves in a short shower, vanished, and the stars of heaven shone overhead. All this was purely coincidental as far as we can judge; but the apostles, particularly Simon Peter, never ceased to regard the episode as a nature miracle. It was especially easy for the men of that day to believe in nature miracles inasmuch as they firmly believed that all nature was a phenomenon directly under the control of spirit forces and supernatural beings.
 \vs p151 5:6 Jesus plainly explained to the 12 that he had spoken to their troubled spirits and had addressed himself to their fear\hyp{}tossed minds, that he had not commanded the elements to obey his word, but it was of no avail. The Master’s followers always persisted in placing their own interpretation on all such coincidental occurrences. From this day on they insisted on regarding the Master as having absolute power over the natural elements. Peter never grew weary of reciting how “even the winds and the waves obey him.”
