--- a/tex/p156.tex
+++ b/tex/p156.tex
@@ -24,7 +24,7 @@
 \vs p156 3:1 On Tuesday, June 28, the Master and his associates left Sidon, going up the coast to Porphyreon and Heldua. They were well received by the gentiles, and many were added to the kingdom during this week of teaching and preaching. The apostles preached in Porphyreon and the evangelists taught in Heldua. While the 24 were thus engaged in their work, Jesus left them for a period of 3 or 4 days, paying a visit to the coast city of Beirut, where he visited with a Syrian named Malach, who was a believer, and who had been at Bethsaida the year before.
 \vs p156 3:2 On Wednesday, July 6, they all returned to Sidon and tarried at the home of Justa until Sunday morning, when they departed for Tyre, going south along the coast by way of Sarepta, arriving at Tyre on Monday, July 11. By this time the apostles and the evangelists were becoming accustomed to working among these so\hyp{}called gentiles, who were in reality mainly descended from the earlier Canaanite tribes of still earlier Semitic origin. All of these peoples spoke the Greek language. It was a great surprise to the apostles and evangelists to observe the eagerness of these gentiles to hear the gospel and to note the readiness with which many of them believed.
 \usection{4.\bibnobreakspace At Tyre}
-\vs p156 4:1 From July 11 to July 24 they taught in Tyre. Each of the apostles took with him one of the evangelists, and thus two and two they taught and preached in all parts of Tyre and its environs. The polyglot population of this busy seaport heard them gladly, and many were baptized into the outward fellowship of the kingdom. Jesus maintained his headquarters at the home of a Jew named Joseph, a believer, who lived 5--6 km south of Tyre, not far from the tomb of Hiram who had been king of the city\hyp{}state of Tyre during the times of David and Solomon.
+\vs p156 4:1 From July 11 to July 24 they taught in Tyre. Each of the apostles took with him one of the evangelists, and thus two and two they taught and preached in all parts of Tyre and its environs. The polyglot population of this busy seaport heard them gladly, and many were baptized into the outward fellowship of the kingdom. Jesus maintained his headquarters at the home of a Jew named Joseph, a believer, who lived 5--6\,km south of Tyre, not far from the tomb of Hiram who had been king of the city\hyp{}state of Tyre during the times of David and Solomon.
 \vs p156 4:2 Daily, for this period of two weeks, the apostles and evangelists entered Tyre by way of Alexander’s mole to conduct small meetings, and each night most of them would return to the encampment at Joseph’s house south of the city. Every day believers came out from the city to talk with Jesus at his resting place. The Master spoke in Tyre only once, on the afternoon of July 20, when he taught the believers concerning the Father’s love for all mankind and about the mission of the Son to reveal the Father to all races of men. There was such an interest in the gospel of the kingdom among these gentiles that, on this occasion, the doors of the Melkarth temple were opened to him, and it is interesting to record that in subsequent years a Christian church was built on the very site of this ancient temple.
 \vs p156 4:3 Many of the leaders in the manufacture of Tyrian purple, the dye that made Tyre and Sidon famous the world over, and which contributed so much to their world\hyp{}wide commerce and consequent enrichment, believed in the kingdom. When, shortly thereafter, the supply of the sea animals which were the source of this dye began to diminish, these dye makers went forth in search of new habitats of these shellfish. And thus migrating to the ends of the earth, they carried with them the message of the fatherhood of God and the brotherhood of man --- the gospel of the kingdom.
 \usection{5.\bibnobreakspace Jesus’ Teaching at Tyre}
