--- a/tex/p163.tex
+++ b/tex/p163.tex
@@ -49,7 +49,7 @@
 \vs p163 4:17 Although the Jews had a peculiar regard for the number 70, sometimes considering the nations of heathendom as being 70 in number, and although these 70 messengers were to go with the gospel to all peoples, still as far as we can discern, it was only coincidental that this group happened to number just 70. Certain it was that Jesus would have accepted no less than half a dozen others, but they were unwilling to pay the price of forsaking wealth and families.
 \usection{5.\bibnobreakspace Moving the Camp to Pella}
 \vs p163 5:1 Jesus and the 12 now prepared to establish their last headquarters in Perea, near Pella, where the Master was baptized in the Jordan. The last ten days of November were spent in council at Magadan, and on Tuesday, December 6, the entire company of almost 300 started out at daybreak with all their effects to lodge that night near Pella by the river. This was the same site, by the spring, that John the Baptist had occupied with his camp several years before.
-\vs p163 5:2 After the breaking up of the Magadan Camp, David Zebedee returned to Bethsaida and began immediately to curtail the messenger service. The kingdom was taking on a new phase. Daily, pilgrims arrived from all parts of Palestine and even from remote regions of the Roman Empire. Believers occasionally came from Mesopotamia and from the lands east of the Tigris. Accordingly, on Sunday, December 18, David, with the help of his messenger corps, loaded on to the pack animals the camp equipage, then stored in his father’s house, with which he had formerly conducted the camp of Bethsaida by the lake. Bidding farewell to Bethsaida for the time being, he proceeded down the lake shore and along the Jordan to a point about 2.4 km north of the apostolic camp; and in less than a week he was prepared to offer hospitality to almost 1500 pilgrim visitors. The apostolic camp could accommodate about 500. This was the rainy season in Palestine, and these accommodations were required to take care of the ever\hyp{}increasing number of inquirers, mostly earnest, who came into Perea to see Jesus and to hear his teaching.
+\vs p163 5:2 After the breaking up of the Magadan Camp, David Zebedee returned to Bethsaida and began immediately to curtail the messenger service. The kingdom was taking on a new phase. Daily, pilgrims arrived from all parts of Palestine and even from remote regions of the Roman Empire. Believers occasionally came from Mesopotamia and from the lands east of the Tigris. Accordingly, on Sunday, December 18, David, with the help of his messenger corps, loaded on to the pack animals the camp equipage, then stored in his father’s house, with which he had formerly conducted the camp of Bethsaida by the lake. Bidding farewell to Bethsaida for the time being, he proceeded down the lake shore and along the Jordan to a point about 2.4\,km north of the apostolic camp; and in less than a week he was prepared to offer hospitality to almost 1500 pilgrim visitors. The apostolic camp could accommodate about 500. This was the rainy season in Palestine, and these accommodations were required to take care of the ever\hyp{}increasing number of inquirers, mostly earnest, who came into Perea to see Jesus and to hear his teaching.
 \vs p163 5:3 David did all this on his own initiative, though he had taken counsel with Philip and Matthew at Magadan. He employed the larger part of his former messenger corps as his helpers in conducting this camp; he now used less than 20 men on regular messenger duty. Near the end of December and before the return of the 70, almost 800 visitors were gathered about the Master, and they found lodging in David’s camp.
 \usection{6.\bibnobreakspace The Return of the Seventy}
 \vs p163 6:1 On Friday, December 30, while Jesus was away in the near\hyp{}by hills with Peter, James, and John, the 70 messengers were arriving by couples, accompanied by numerous believers, at the Pella headquarters. All 70 were assembled at the teaching site about 17:00 when Jesus returned to the camp. The evening meal was delayed for more than an hour while these enthusiasts for the gospel of the kingdom related their experiences. David’s messengers had brought much of this news to the apostles during previous weeks, but it was truly inspiring to hear these newly ordained teachers of the gospel personally tell how their message had been received by hungry Jews and gentiles. At last Jesus was able to see men going out to spread the good news without his personal presence. The Master now knew that he could leave this world without seriously hindering the progress of the kingdom.
