--- a/tex/p172.tex
+++ b/tex/p172.tex
@@ -20,7 +20,7 @@
 \vs p172 2:4 After the conference with the apostles Jesus held converse with Lazarus and instructed him to avoid the sacrifice of his life to the vengefulness of the Sanhedrin. It was in obedience to this admonition that Lazarus, a few days later, fled to Philadelphia when the officers of the Sanhedrin sent men to arrest him.
 \vs p172 2:5 In a way, all of Jesus’ followers sensed the impending crisis, but they were prevented from fully realizing its seriousness by the unusual cheerfulness and exceptional good humour of the Master.
 \usection{3.\bibnobreakspace The Start for Jerusalem}
-\vs p172 3:1 Bethany was about 3.2 km from the temple, and it was 13:30 that Sunday afternoon when Jesus made ready to start for Jerusalem. He had feelings of profound affection for Bethany and its simple people. Nazareth, Capernaum, and Jerusalem had rejected him, but Bethany had accepted him, had believed in him. And it was in this small village, where almost every man, woman, and child were believers, that he chose to perform the mightiest work of his earth bestowal, the resurrection of Lazarus. He did not raise Lazarus that the villagers might believe, but rather because they already believed.
+\vs p172 3:1 Bethany was about 3.2\,km from the temple, and it was 13:30 that Sunday afternoon when Jesus made ready to start for Jerusalem. He had feelings of profound affection for Bethany and its simple people. Nazareth, Capernaum, and Jerusalem had rejected him, but Bethany had accepted him, had believed in him. And it was in this small village, where almost every man, woman, and child were believers, that he chose to perform the mightiest work of his earth bestowal, the resurrection of Lazarus. He did not raise Lazarus that the villagers might believe, but rather because they already believed.
 \vs p172 3:2 All morning Jesus had thought about his entry into Jerusalem. Heretofore he had always endeavoured to suppress all public acclaim of him as the Messiah, but it was different now; he was nearing the end of his career in the flesh, his death had been decreed by the Sanhedrin, and no harm could come from allowing his disciples to give free expression to their feelings, just as might occur if he elected to make a formal and public entry into the city.
 \vs p172 3:3 Jesus did not decide to make this public entrance into Jerusalem as a last bid for popular favour nor as a final grasp for power. Neither did he do it altogether to satisfy the human longings of his disciples and apostles. Jesus entertained none of the illusions of a fantastic dreamer; he well knew what was to be the outcome of this visit.
 \vs p172 3:4 Having decided upon making a public entrance into Jerusalem, the Master was confronted with the necessity of choosing a proper method of executing such a resolve. Jesus thought over all of the many more or less contradictory so\hyp{}called Messianic prophesies, but there seemed to be only one which was at all appropriate for him to follow. Most of these prophetic utterances depicted a king, the son and successor of David, a bold and aggressive temporal deliverer of all Israel from the yoke of foreign domination. But there was one Scripture that had sometimes been associated with the Messiah by those who held more to the spiritual concept of his mission, which Jesus thought might consistently be taken as a guide for his projected entry into Jerusalem. This Scripture was found in Zechariah, and it said: “Rejoice greatly, O daughter of Zion; shout, O daughter of Jerusalem. Behold, your king comes to you. He is just and he brings salvation. He comes as the lowly one, riding upon an ass, upon a colt, the foal of an ass.”
