--- a/tex/p187.tex
+++ b/tex/p187.tex
@@ -17,7 +17,7 @@
 \vs p187 1:10 \pc This man Simon had come all the way from Cyrene, in northern Africa, to attend the Passover. He was stopping with other Cyrenians just outside the city walls and was on his way to the temple services in the city when the Roman captain commanded him to carry Jesus’ crossbeam. Simon lingered all through the hours of the Master’s death on the cross, talking with many of his friends and with his enemies. After the resurrection and before leaving Jerusalem, he became a valiant believer in the gospel of the kingdom, and when he returned home, he led his family into the heavenly kingdom. His two sons, Alexander and Rufus, became very effective teachers of the new gospel in Africa. But Simon never knew that Jesus, whose burden he bore, and the Jewish tutor who once befriended his injured son, were the same person.
 \vs p187 1:11 \pc It was shortly after 9:00 when this procession of death arrived at Golgotha, and the Roman soldiers set themselves about the task of nailing the two brigands and the Son of Man to their respective crosses.
 \usection{2.\bibnobreakspace The Crucifixion}
-\vs p187 2:1 The soldiers first bound the Master’s arms with cords to the crossbeam, and then they nailed his hands to the wood. When they had hoisted this crossbeam up on the post, and after they had nailed it securely to the upright timber of the cross, they bound and nailed his feet to the wood, using one long nail to penetrate both feet. The upright timber had a large peg, inserted at the proper height, which served as a sort of saddle for supporting the body weight. The cross was not high, the Master’s feet being only about 1 m from the ground. He was therefore able to hear all that was said of him in derision and could plainly see the expression on the faces of all those who so thoughtlessly mocked him. And also could those present easily hear all that Jesus said during these hours of lingering torture and slow death.
+\vs p187 2:1 The soldiers first bound the Master’s arms with cords to the crossbeam, and then they nailed his hands to the wood. When they had hoisted this crossbeam up on the post, and after they had nailed it securely to the upright timber of the cross, they bound and nailed his feet to the wood, using one long nail to penetrate both feet. The upright timber had a large peg, inserted at the proper height, which served as a sort of saddle for supporting the body weight. The cross was not high, the Master’s feet being only about 1\,m from the ground. He was therefore able to hear all that was said of him in derision and could plainly see the expression on the faces of all those who so thoughtlessly mocked him. And also could those present easily hear all that Jesus said during these hours of lingering torture and slow death.
 \vs p187 2:2 It was the custom to remove all clothes from those who were to be crucified, but since the Jews greatly objected to the public exposure of the naked human form, the Romans always provided a suitable loin cloth for all persons crucified at Jerusalem. Accordingly, after Jesus’ clothes had been removed, he was thus garbed before he was put upon the cross.
 \vs p187 2:3 Crucifixion was resorted to in order to provide a cruel and lingering punishment, the victim sometimes not dying for several days. There was considerable sentiment against crucifixion in Jerusalem, and there existed a society of Jewish women who always sent a representative to crucifixions for the purpose of offering drugged wine to the victim in order to lessen his suffering. But when Jesus tasted this narcotized wine, as thirsty as he was, he refused to drink it. The Master chose to retain his human consciousness until the very end. He desired to meet death, even in this cruel and inhuman form, and conquer it by voluntary submission to the full human experience.
 \vs p187 2:4 Before Jesus was put on his cross, the two brigands had already been placed on their crosses, all the while cursing and spitting upon their executioners. Jesus’ only words, as they nailed him to the crossbeam, were, \textcolour{ubdarkred}{“Father, forgive them, for they know not what they do.”} He could not have so mercifully and lovingly interceded for his executioners if such thoughts of affectionate devotion had not been the mainspring of all his life of unselfish service. The ideas, motives, and longings of a lifetime are openly revealed in a crisis.
