--- a/tex/p188.tex
+++ b/tex/p188.tex
@@ -7,7 +7,7 @@
 \vs p188 1:1 When Joseph and Nicodemus arrived at Golgotha, they found the soldiers taking Jesus down from the cross and the representatives of the Sanhedrin standing by to see that none of Jesus’ followers prevented his body from going to the criminal burial pits. When Joseph presented Pilate’s order for the Master’s body to the centurion, the Jews raised a tumult and clamoured for its possession. In their raving they sought violently to take possession of the body, and when they did this, the centurion ordered four of his soldiers to his side, and with drawn swords they stood astride the Master’s body as it lay there on the ground. The centurion ordered the other soldiers to leave the two thieves while they drove back this angry mob of infuriated Jews. When order had been restored, the centurion read the permit from Pilate to the Jews and, stepping aside, said to Joseph: “This body is yours to do with as you see fit. I and my soldiers will stand by to see that no man interferes.”
 \vs p188 1:2 A crucified person could not be buried in a Jewish cemetery; there was a strict law against such a procedure. Joseph and Nicodemus knew this law, and on the way out to Golgotha they had decided to bury Jesus in Joseph’s new family tomb, hewn out of solid rock, located a short distance north of Golgotha and across the road leading to Samaria. No one had ever lain in this tomb, and they thought it appropriate that the Master should rest there. Joseph really believed that Jesus would rise from the dead, but Nicodemus was very doubtful. These former members of the Sanhedrin had kept their faith in Jesus more or less of a secret, although their fellow Sanhedrists had long suspected them, even before they withdrew from the council. From now on they were the most outspoken disciples of Jesus in all Jerusalem.
 \vs p188 1:3 At about 16:30 the burial procession of Jesus of Nazareth started from Golgotha for Joseph’s tomb across the way. The body was wrapped in a linen sheet as the four men carried it, followed by the faithful women watchers from Galilee. The mortals who bore the material body of Jesus to the tomb were: Joseph, Nicodemus, John, and the Roman centurion.
-\vs p188 1:4 They carried the body into the tomb, a chamber about 3 m\ts{2}, where they hurriedly prepared it for burial. The Jews did not really bury their dead; they actually embalmed them. Joseph and Nicodemus had brought with them large quantities of myrrh and aloes, and they now wrapped the body with bandages saturated with these solutions. When the embalming was completed, they tied a napkin about the face, wrapped the body in a linen sheet, and reverently placed it on a shelf in the tomb.
+\vs p188 1:4 They carried the body into the tomb, a chamber about 3\,m\ts{2}, where they hurriedly prepared it for burial. The Jews did not really bury their dead; they actually embalmed them. Joseph and Nicodemus had brought with them large quantities of myrrh and aloes, and they now wrapped the body with bandages saturated with these solutions. When the embalming was completed, they tied a napkin about the face, wrapped the body in a linen sheet, and reverently placed it on a shelf in the tomb.
 \vs p188 1:5 After placing the body in the tomb, the centurion signalled for his soldiers to help roll the doorstone up before the entrance to the tomb. The soldiers then departed for Gehenna with the bodies of the thieves while the others returned to Jerusalem, in sorrow, to observe the Passover feast according to the laws of Moses.
 \vs p188 1:6 There was considerable hurry and haste about the burial of Jesus because this was preparation day and the Sabbath was drawing on apace. The men hurried back to the city, but the women lingered near the tomb until it was very dark.
 \vs p188 1:7 While all this was going on, the women were hiding near at hand so that they saw it all and observed where the Master had been laid. They thus secreted themselves because it was not permissible for women to associate with men at such a time. These women did not think Jesus had been properly prepared for burial, and they agreed among themselves to go back to the home of Joseph, rest over the Sabbath, make ready spices and ointments, and return on Sunday morning properly to prepare the Master’s body for the death rest. The women who thus tarried by the tomb on this Friday evening were: Mary Magdalene, Mary the wife of Clopas, Martha another sister of Jesus’ mother, and Rebecca of Sepphoris.
