--- a/tex/p042.tex
+++ b/tex/p042.tex
@@ -56,7 +56,7 @@
 \vs p042 4:3 The power centres and their associates are much concerned in the work of transmuting the ultimaton into the circuits and revolutions of the electron. These unique beings control and compound power by their skillful manipulation of the basic units of materialized energy, the ultimatons. They are masters of energy as it circulates in this primitive state. In liaison with the physical controllers they are able to effectively control and direct energy even after it has transmuted to the electrical level, the so\hyp{}called electronic stage. But their range of action is enormously curtailed when electronically organized energy swings into the whirls of the atomic systems. Upon such materialization, these energies fall under the complete grasp of the drawing power of linear gravity.
 \vs p042 4:4 Gravity acts positively on the power lanes and energy channels of the power centres and the physical controllers, but these beings have only a negative relation to gravity --- the exercise of their antigravity endowments.
 \vs p042 4:5 Throughout all space, cold and other influences are at work creatively organizing ultimatons into electrons. Heat is the measurement of electronic activity, while cold merely signifies absence of heat --- comparative energy rest --- the status of the universal force\hyp{}charge of space provided neither emergent energy nor organized matter were present and responding to gravity.
-\vs p042 4:6 Gravity presence and action is what prevents the appearance of the theoretical absolute zero, for interstellar space does not have the temperature of absolute zero. Throughout all organized space there are gravity\hyp{}responding energy currents, power circuits, and ultimatonic activities, as well as organizing electronic energies. Practically speaking, space is not empty. Even the atmosphere of Urantia thins out increasingly until at about 4,800 km it begins to shade off into the average space matter in this section of the universe. The most nearly empty space known in Nebadon would yield about 100 ultimatons --- the equivalent of one electron --- in 16.4 cm\ts{3} . Such scarcity of matter is regarded as practically empty space.
+\vs p042 4:6 Gravity presence and action is what prevents the appearance of the theoretical absolute zero, for interstellar space does not have the temperature of absolute zero. Throughout all organized space there are gravity\hyp{}responding energy currents, power circuits, and ultimatonic activities, as well as organizing electronic energies. Practically speaking, space is not empty. Even the atmosphere of Urantia thins out increasingly until at about 4,800\,km it begins to shade off into the average space matter in this section of the universe. The most nearly empty space known in Nebadon would yield about 100 ultimatons --- the equivalent of one electron --- in 16.4 cm\ts{3} . Such scarcity of matter is regarded as practically empty space.
 \vs p042 4:7 Temperature --- heat and cold --- is secondary only to gravity in the realms of energy and matter evolution. Ultimatons are humbly obedient to temperature extremes. Low temperatures favour certain forms of electronic construction and atomic assembly, while high temperatures facilitate all sorts of atomic breakup and material disintegration.
 \vs p042 4:8 When subjected to the heat and pressure of certain internal solar states, all but the most primitive associations of matter may be broken up. Heat can thus largely overcome gravity stability. But no known solar heat or pressure can convert ultimatons back into puissant energy.
 \vs p042 4:9 The blazing suns can transform matter into various forms of energy, but the dark worlds and all outer space can slow down electronic and ultimatonic activity to the point of converting these energies into the matter of the realms. Certain electronic associations of a close nature, as well as many of the basic associations of nuclear matter, are formed in the exceedingly low temperatures of open space, being later augmented by association with larger accretions of materializing energy.
@@ -90,7 +90,7 @@
 \vs p042 6:5 Mutual attraction holds 100 ultimatons together in the constitution of the electron; and there are never more nor less than 100 ultimatons in a typical electron. The loss of one or more ultimatons destroys typical electronic identity, thus bringing into existence one of the 10 modified forms of the electron.
 \vs p042 6:6 Ultimatons do not describe orbits or whirl about in circuits within the electrons, but they do spread or cluster in accordance with their axial revolutionary velocities, thus determining the differential electronic dimensions. This same ultimatonic velocity of axial revolution also determines the negative or positive reactions of the several types of electronic units. The entire segregation and grouping of electronic matter, together with the electric differentiation of negative and positive bodies of energy\hyp{}matter, result from these various functions of the component ultimatonic interassociation.
 \vs p042 6:7 \pc Each atom is a trifle over $2.54 \times 10^{-8}$ cm in diameter, while an electron weighs a little more\fnc{\textbf{more}, In 1955 text: \bibtextul{less}. \bibexpl{[For historical reference, the first discussion of the relative masses of the structural elements of atoms in the Encyclopaedia Britannica is found in its 11\ts{th} Edition (1910 / 1911) with revisions in the 12\ts{th} (1922). The calculation of the relative masses of the electron and the hydrogen atom was undergoing a rapid evolution just prior to the writing of The Urantia Book, the ratio being 1:1700 in 1897; 1:2000 in 1904; and 1:1845 by 1922. This last ratio is also the one quoted in the 1934 Websters.] The revised wording is consistent with the statement in the paragraph following the subject paragraph \bibref[42:6.8]{p042 6:8} in the text where the author states that a proton is “eighteen hundred times as heavy as an electron;” and is also in general agreement with current scientific opinion which places the ratio at about 1:1836. After the committee’s work, this item, plus the closely-related following item, are the only recommended changes that do not have a straightforward typographical explanation.}} than 1/2,000\ts{th} of the smallest atom, hydrogen. The positive proton, characteristic of the atomic nucleus, while it may be no larger than a negative electron, weighs from 2,000 to 3,000 times more.
-\vs p042 6:8 \pc If the mass of matter should be magnified until that of an electron equalled 3 g, then were size to be proportionately magnified, the volume of such an electron would become as large as that of the earth. If the volume of a proton --- 1,800 times as heavy as an electron --- should be magnified to the size of the head of a pin, then, in comparison, a pin’s head would attain a diameter equal to that of the earth’s orbit around the sun.
+\vs p042 6:8 \pc If the mass of matter should be magnified until that of an electron equalled 3\,g, then were size to be proportionately magnified, the volume of such an electron would become as large as that of the earth. If the volume of a proton --- 1,800 times as heavy as an electron --- should be magnified to the size of the head of a pin, then, in comparison, a pin’s head would attain a diameter equal to that of the earth’s orbit around the sun.
 \usection{7.\bibnobreakspace Atomic Matter}
 \vs p042 7:1 The formation of all matter is on the order of the solar system. There is at the centre of every minute universe of energy a relatively stable, comparatively stationary, nuclear portion of material existence. This central unit is endowed with a threefold possibility of manifestation. Surrounding this energy centre there whirl, in endless profusion but in fluctuating circuits, the energy units which are faintly comparable to the planets encircling the sun of some starry group like your own solar system.
 \vs p042 7:2 \pc Within the atom the electrons revolve about the central proton with about the same comparative room the planets have as they revolve about the sun in the space of the solar system. There is the same relative distance, in comparison with actual size, between the atomic nucleus and the inner electronic circuit as exists between the inner planet, Mercury, and your sun.
