--- a/tex/p093.tex
+++ b/tex/p093.tex
@@ -11,7 +11,7 @@
 \vs p093 2:2 When the herder had recovered from his astonishment, and after he had plied this stranger with many questions, he asked Melchizedek to sup with him, and this was the first time in his long universe career that Machiventa had partaken of material food, the nourishment which was to sustain him throughout his 94 years of life as a material being.
 \vs p093 2:3 And that night, as they talked out under the stars, Melchizedek began his mission of the revelation of the truth of the reality of God when, with a sweep of his arm, he turned to Amdon, saying, “El Elyon, the Most High, is the divine creator of the stars of the firmament and even of this very earth on which we live, and he is also the supreme God of heaven.”
 \vs p093 2:4 \pc Within a few years Melchizedek had gathered around himself a group of pupils, disciples, and believers who formed the nucleus of the later community of Salem. He was soon known throughout Palestine as the priest of El Elyon, the Most High, and as the sage of Salem. Among some of the surrounding tribes he was often referred to as the sheik, or king, of Salem. Salem was the site which after the disappearance of Melchizedek became the city of Jebus, subsequently being called Jerusalem.
-\vs p093 2:5 \pc In personal appearance, Melchizedek resembled the then blended Nodite and Sumerian peoples, being almost 1.8 m in height and possessing a commanding presence. He spoke Chaldean and a half dozen other languages. He dressed much as did the Canaanite priests except that on his breast he wore an emblem of three concentric circles, the Satania symbol of the Paradise Trinity. In the course of his ministry this insignia of three concentric circles became regarded as so sacred by his followers that they never dared to use it, and it was soon forgotten with the passing of a few generations.
+\vs p093 2:5 \pc In personal appearance, Melchizedek resembled the then blended Nodite and Sumerian peoples, being almost 1.8\,m in height and possessing a commanding presence. He spoke Chaldean and a half dozen other languages. He dressed much as did the Canaanite priests except that on his breast he wore an emblem of three concentric circles, the Satania symbol of the Paradise Trinity. In the course of his ministry this insignia of three concentric circles became regarded as so sacred by his followers that they never dared to use it, and it was soon forgotten with the passing of a few generations.
 \vs p093 2:6 Though Machiventa lived after the manner of the men of the realm, he never married, nor could he have left offspring on earth. His physical body, while resembling that of the human male, was in reality on the order of those especially constructed bodies used by the 100 materialized members of Prince Caligastia’s staff except that it did not carry the life plasm of any human race. Nor was there available on Urantia the tree of life. Had Machiventa remained for any long period on earth, his physical mechanism would have gradually deteriorated; as it was, he terminated his bestowal mission in 94 years long before his material body had begun to disintegrate.
 \vs p093 2:7 \pc This incarnated Melchizedek received a Thought Adjuster, who indwelt his superhuman personality as the monitor of time and the mentor of the flesh, thus gaining that experience and practical introduction to Urantian problems and to the technique of indwelling an incarnated Son which enabled this spirit of the Father to function so valiantly in the human mind of the later Son of God, Michael, when he appeared on earth in the likeness of mortal flesh. And this is the only Thought Adjuster who ever functioned in two minds on Urantia, but both minds were divine as well as human.
 \vs p093 2:8 During the incarnation in the flesh, Machiventa was in full contact with his 11 fellows of the corps of planetary custodians, but he could not communicate with other orders of celestial personalities. Aside from the Melchizedek receivers, he had no more contact with superhuman intelligences than a human being.
