--- a/tex/p168.tex
+++ b/tex/p168.tex
@@ -13,7 +13,7 @@
 \vs p168 0:11 When the mourners saw that Mary had gone to greet Jesus, they withdrew for a short distance while both Martha and Mary talked with the Master and received further words of comfort and exhortation to maintain strong faith in the Father and complete resignation to the divine will.
 \vs p168 0:12 The human mind of Jesus was mightily moved by the contention between his love for Lazarus and the bereaved sisters and his disdain and contempt for the outward show of affection manifested by some of these unbelieving and murderously intentioned Jews. Jesus indignantly resented the show of forced and outward mourning for Lazarus by some of these professed friends inasmuch as such false sorrow was associated in their hearts with so much bitter enmity toward himself. Some of these Jews, however, were sincere in their mourning, for they were real friends of the family.
 \usection{1.\bibnobreakspace At the Tomb of Lazarus}
-\vs p168 1:1 After Jesus had spent a few moments in comforting Martha and Mary, apart from the mourners, he asked them, \textcolour{ubdarkred}{“Where have you laid him?”} Then Martha said, “Come and see.” And as the Master followed on in silence with the two sorrowing sisters, he wept. When the friendly Jews who followed after them saw his tears, one of them said: “Behold how he loved him. Could not he who opened the eyes of the blind have kept this man from dying?” By this time they were standing before the family tomb, a small natural cave, or declivity, in the ledge of rock which rose up some 9 m at the far end of the garden plot.
+\vs p168 1:1 After Jesus had spent a few moments in comforting Martha and Mary, apart from the mourners, he asked them, \textcolour{ubdarkred}{“Where have you laid him?”} Then Martha said, “Come and see.” And as the Master followed on in silence with the two sorrowing sisters, he wept. When the friendly Jews who followed after them saw his tears, one of them said: “Behold how he loved him. Could not he who opened the eyes of the blind have kept this man from dying?” By this time they were standing before the family tomb, a small natural cave, or declivity, in the ledge of rock which rose up some 9\,m at the far end of the garden plot.
 \vs p168 1:2 \pc It is difficult to explain to human minds just why Jesus wept. While we have access to the registration of the combined human emotions and divine thoughts, as of record in the mind of the Personalized Adjuster, we are not altogether certain about the real cause of these emotional manifestations. We are inclined to believe that Jesus wept because of a number of thoughts and feelings which were going through his mind at this time, such as:
 \vs p168 1:3 \ublistelem{1.}\bibnobreakspace He felt a genuine and sorrowful sympathy for Martha and Mary; he had a real and deep human affection for these sisters who had lost their brother.
 \vs p168 1:4 \ublistelem{2.}\bibnobreakspace He was perturbed in his mind by the presence of the crowd of mourners, some sincere and some merely pretenders. He always resented these outward exhibitions of mourning. He knew the sisters loved their brother and had faith in the survival of believers. These conflicting emotions may possibly explain why he groaned as they came near the tomb.
