--- a/tex/p190.tex
+++ b/tex/p190.tex
@@ -32,8 +32,8 @@
 \vs p190 4:1 About 16:30, at the home of one Flavius, the Master made his 6\ts{th} morontia appearance to some 40 Greek believers there assembled. While they were engaged in discussing the reports of the Master’s resurrection, he manifested himself in their midst, notwithstanding that the doors were securely fastened, and speaking to them, said: \textcolour{ubdarkred}{“Peace be upon you. While the Son of Man appeared on earth among the Jews, he came to minister to all men. In the kingdom of my Father there shall be neither Jew nor gentile; you will all be brethren --- the sons of God. Go you, therefore, to all the world, proclaiming this gospel of salvation as you have received it from the ambassadors of the kingdom, and I will fellowship you in the brotherhood of the Father’s sons of faith and truth.”} And when he had thus charged them, he took leave, and they saw him no more. They remained within the house all evening; they were too much overcome with awe and fear to venture forth. Neither did any of these Greeks sleep that night; they stayed awake discussing these things and hoping that the Master might again visit them. Among this group were many of the Greeks who were at Gethsemane when the soldiers arrested Jesus and Judas betrayed him with a kiss.
 \vs p190 4:2 \pc Rumours of Jesus’ resurrection and reports concerning the many appearances to his followers are spreading rapidly, and the whole city is being wrought up to a high pitch of excitement. Already the Master has appeared to his family, to the women, and to the Greeks, and presently he manifests himself in the midst of the apostles. The Sanhedrin is soon to begin the consideration of these new problems which have been so suddenly thrust upon the Jewish rulers. Jesus thinks much about his apostles but desires that they be left alone for a few more hours of solemn reflection and thoughtful consideration before he visits them.
 \usection{5.\bibnobreakspace The Walk with Two Brothers}
-\vs p190 5:1 At Emmaus, about 11 km west of Jerusalem, there lived two brothers, shepherds, who had spent the Passover week in Jerusalem attending upon the sacrifices, ceremonials, and feasts. Cleopas, the elder, was a partial believer in Jesus; at least he had been cast out of the synagogue. His brother, Jacob, was not a believer, although he was much intrigued by what he had heard about the Master’s teachings and works.
-\vs p190 5:2 On this Sunday afternoon, about 4.8 km out of Jerusalem and a few minutes before 17:00, as these two brothers trudged along the road to Emmaus, they talked in great earnestness about Jesus, his teachings, work, and more especially concerning the rumours that his tomb was empty, and that certain of the women had talked with him. Cleopas was half a mind to believe these reports, but Jacob was insistent that the whole affair was probably a fraud. While they thus argued and debated as they made their way toward home, the morontia manifestation of Jesus, his seventh appearance, came alongside them as they journeyed on. Cleopas had often heard Jesus teach and had eaten with him at the homes of Jerusalem believers on several occasions. But he did not recognize the Master even when he spoke freely with them.
+\vs p190 5:1 At Emmaus, about 11\,km west of Jerusalem, there lived two brothers, shepherds, who had spent the Passover week in Jerusalem attending upon the sacrifices, ceremonials, and feasts. Cleopas, the elder, was a partial believer in Jesus; at least he had been cast out of the synagogue. His brother, Jacob, was not a believer, although he was much intrigued by what he had heard about the Master’s teachings and works.
+\vs p190 5:2 On this Sunday afternoon, about 4.8\,km out of Jerusalem and a few minutes before 17:00, as these two brothers trudged along the road to Emmaus, they talked in great earnestness about Jesus, his teachings, work, and more especially concerning the rumours that his tomb was empty, and that certain of the women had talked with him. Cleopas was half a mind to believe these reports, but Jacob was insistent that the whole affair was probably a fraud. While they thus argued and debated as they made their way toward home, the morontia manifestation of Jesus, his seventh appearance, came alongside them as they journeyed on. Cleopas had often heard Jesus teach and had eaten with him at the homes of Jerusalem believers on several occasions. But he did not recognize the Master even when he spoke freely with them.
 \vs p190 5:3 After walking a short way with them, Jesus said: \textcolour{ubdarkred}{“What were the words you exchanged so earnestly as I came upon you?”} And when Jesus had spoken, they stood still and viewed him with sad surprise. Said Cleopas: “Can it be that you sojourn in Jerusalem and know not the things which have recently happened?” Then asked the Master, “What things?” Cleopas replied: “If you do not know about these matters, you are the only one in Jerusalem who has not heard these rumours concerning Jesus of Nazareth, who was a prophet mighty in word and in deed before God and all the people. The chief priests and our rulers delivered him up to the Romans and demanded that they crucify him. Now many of us had hoped that it was he who would deliver Israel from the yoke of the gentiles. But that is not all. It is now the third day since he was crucified, and certain women have this day amazed us by declaring that very early this morning they went to his tomb and found it empty. And these same women insist that they talked with this man; they maintain that he has risen from the dead. And when the women reported this to the men, two of his apostles ran to the tomb and likewise found it empty” --- and here Jacob interrupted his brother to say, “but they did not see Jesus.”
 \vs p190 5:4 As they walked along, Jesus said to them: \textcolour{ubdarkred}{“How slow you are to comprehend the truth! When you tell me that it is about the teachings and work of this man that you have your discussions, then may I enlighten you since I am more than familiar with these teachings. Do you not remember that this Jesus always taught that his kingdom was not of this world, and that all men, being the sons of God, should find liberty and freedom in the spiritual joy of the fellowship of the brotherhood of loving service in this new kingdom of the truth of the heavenly Father’s love? Do you not recall how this Son of Man proclaimed the salvation of God for all men, ministering to the sick and afflicted and setting free those who were bound by fear and enslaved by evil? Do you not know that this man of Nazareth told his disciples that he must go to Jerusalem, be delivered up to his enemies, who would put him to death, and that he would arise on the third day? Have you not been told all this? And have you never read in the Scriptures concerning this day of salvation for Jew and gentile, where it says that in him shall all the families of the earth be blessed; that he will hear the cry of the needy and save the souls of the poor who seek him; that all nations shall call him blessed? That such a Deliverer shall be as the shadow of a great rock in a weary land. That he will feed the flock like a true shepherd, gathering the lambs in his arms and tenderly carrying them in his bosom. That he will open the eyes of the spiritually blind and bring the prisoners of despair out into full liberty and light; that all who sit in darkness shall see the great light of eternal salvation. That he will bind up the brokenhearted, proclaim liberty to the captives of sin, and open up the prison to those who are enslaved by fear and bound by evil. That he will comfort those who mourn and bestow upon them the joy of salvation in the place of sorrow and heaviness. That he shall be the desire of all nations and the everlasting joy of those who seek righteousness. That this Son of truth and righteousness shall rise upon the world with healing light and saving power; even that he will save his people from their sins; that he will really seek and save those who are lost. That he will not destroy the weak but minister salvation to all who hunger and thirst for righteousness. That those who believe in him shall have eternal life. That he will pour out his spirit upon all flesh, and that this Spirit of Truth shall be in each believer a well of water, springing up into everlasting life. Did you not understand how great was the gospel of the kingdom which this man delivered to you? Do you not perceive how great a salvation has come upon you?”}
 \vs p190 5:5 By this time they had come near to the village where these brothers dwelt. Not a word had these two men spoken since Jesus began to teach them as they walked along the way. Soon they drew up in front of their humble dwelling place, and Jesus was about to take leave of them, going on down the road, but they constrained him to come in and abide with them. They insisted that it was near nightfall, and that he tarry with them. Finally Jesus consented, and very soon after they went into the house, they sat down to eat. They gave him the bread to bless, and as he began to break and hand to them, their eyes were opened, and Cleopas recognized that their guest was the Master himself. And when he said, “It is the Master ---,” the morontia Jesus vanished from their sight.
